fixed autoformatter to deal with HTML, sort of

--- a/_posts/2001-11-07-1.html
+++ b/_posts/2001-11-07-1.html
@@ -12,39 +12,39 @@ tags:
  - Nick Collins
  - Volkmar Klien
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.cs.man.ac.uk/~houstorx/">Robin Houston</a></strong>
-
+<br/>
 <br />combinatoral elephants and trampolines
 </li>
-
+<br/>
 <li><strong><a href="http://www.spacehijackers.co.uk/html/equipment/jacket.html">Space Hijackers</a></strong>
-
+<br/>
 <br />pirate radio jacket
 </li>
-
+<br/>
 <li><strong><a href="http://runme.org/project/+forkbomb/">Yaxu</a></strong>
-
+<br/>
 <br />fork bombs
 </li>
-
+<br/>
 <li><strong><a href="http://www.adeward.com/">Adrian Ward</a></strong>
-
+<br/>
 <br />abusing the yamaha psr-6
 </li>
-
+<br/>
 <li><strong><a href="http://www.cus.cam.ac.uk/~nc272/">Nick Collins</a></strong>
-
+<br/>
 <br />infinite music
 </li>
-
+<br/>
 <li><strong><a href="http://aural-codes.com/">Volkmar Klien</a></strong>
-
+<br/>
 <br />Aural codes and software for dancers, and other stuff.
 </li>
-
+<br/>
 </ul>
-
+<br/>
