--- a/_posts/2001-12-05-2.html
+++ b/_posts/2001-12-05-2.html
@@ -13,45 +13,45 @@ tags:
  - Kim Hawtin
  - Shiho Fukuhara
 ---
-
-
-Featuring the light and airy...
+<br/>
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong>io 0.0.1 beta</strong>
- - Han-earl Park
+ - Han-earl Park<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://slub.org/">Electronic music</a></strong>
- - slub
+ - slub<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>Towerblock TV</strong>
- - Lottie Child
+ - Lottie Child<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.nixfiles.com/glambient/">glambient </a></strong>
- - Nick Thompson
+ - Nick Thompson<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>Accoustic cover versions of synthesiser pop classics</strong>
- - Dave Green
+ - Dave Green<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.consume.net/">CONSUME</a></strong>
- - Kim Hawtin
+ - Kim Hawtin<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>tween/hide</strong>
- - Shiho Fukuhara
+ - Shiho Fukuhara<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
+<br/>
