--- a/_posts/2002-02-06-3.html
+++ b/_posts/2002-02-06-3.html
@@ -9,24 +9,24 @@ tags:
  - nullpointer
  - Simon Wistow
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://gehlhaar.org/">chaos / antichaos : gestures, sounds &amp; images</a></strong>
- - Rolf Gehlhaar
+ - Rolf Gehlhaar<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.nullpointer.co.uk/">Pixel-Map</a></strong>
- - nullpointer
+ - nullpointer<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.thegestalt.org/simon/">games and generative music</a></strong>
- - Simon Wistow
+ - Simon Wistow<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
+<br/>
