--- a/_posts/2002-03-13-4.html
+++ b/_posts/2002-03-13-4.html
@@ -8,33 +8,33 @@ tags:
  - Jo Walsh
  - Paul Granjon
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong>BBC Competition</strong>
-
+<br/>
 <br />The evening culminated with the dorkbotlondon BBC micro BASIC programming competition, judged by BBC guru, Paul Granjon. 
-
-Winners : Az and James
-
-The winners took home a BBC with 5 inch floppy drive and TTL monitor. 
+<br/>
+Winners : Az and James<br/>
+<br/>
+The winners took home a BBC with 5 inch floppy drive and TTL monitor.<br/>
 </li>
-
+<br/>
 <li><strong><a href="http://www.zooleika.org.uk/">Synthetic Poetics</a></strong>
- - Jo Walsh
+ - Jo Walsh<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.zprod.org/">Z Lab 1995-2002</a></strong>
- - Paul Granjon
+ - Paul Granjon<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>The Church of Sonology</strong>
-
+<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
+<br/>
