--- a/_posts/2002-04-10-5.html
+++ b/_posts/2002-04-10-5.html
@@ -9,24 +9,24 @@ tags:
  - Adrian Ward
  - Max Eastley
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.spamradio.com/">Spam Radio</a></strong>
- - ian morrison
+ - ian morrison<br/>
 <br />co-inventor of the Spam Radio, ian explains the process of turning a spam into a noise. 
 </li>
-
+<br/>
 <li><strong>a portrait of netochka nezvanova </strong>
- - adrian ward
+ - adrian ward<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>natural and electric systems</strong>
- - max eastley
+ - max eastley<br/>
 <br />max shares insights found through musical works such as his kinetic sound sculptures; comparing his works with electricity with the similar channeling of other natural elements. 
 </li>
-
+<br/>
 </ul>
-
+<br/>
