--- a/_posts/2002-05-07-6.html
+++ b/_posts/2002-05-07-6.html
@@ -9,24 +9,24 @@ tags:
  - Leon Barker
  - Thor Magnusson
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://bureauit.org/">bureau of inverse technology </a></strong>
- - Kate Rich (B.I.T.)
+ - Kate Rich (B.I.T.)<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>Flare FM</strong>
- - Leon Barker
+ - Leon Barker<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.ixi-software.net/">IXI</a></strong>
- - Thor Magnusson
+ - Thor Magnusson<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
+<br/>
