--- a/_posts/2002-07-03-8.html
+++ b/_posts/2002-07-03-8.html
@@ -9,24 +9,24 @@ tags:
  - Saul Albert
  - Jeremy Ruston
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong>Life</strong>
- - James Larsson
+ - James Larsson<br/>
 <br />Life&#39;s big questions explored through the wearable ZX Spectrum, CD players and microwave attitude adjustment technologies. 
 </li>
-
+<br/>
 <li><strong><a href="http://www.dicshunary.com/">the dicshunary</a></strong>
- - Saul Albert
+ - Saul Albert<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>BBC Micro reminiscence session</strong>
- - Jeremy Ruston
+ - Jeremy Ruston<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
+<br/>
