--- a/_posts/2002-08-07-9.html
+++ b/_posts/2002-08-07-9.html
@@ -9,25 +9,25 @@ tags:
  - John Eacott
  - Mikey
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://frot.org/">Can consciousness be abstracted in a network? </a></strong>
- - zooleika
+ - zooleika<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>Will algorithmic approaches replace purely recorded sound?</strong>
- - John Eacott
+ - John Eacott<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.talkaoke.com/">Talkaoke</a></strong>
- - Mikey
+ - Mikey<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
-
+<br/>
+<br/>
