--- a/_posts/2002-09-11-10.html
+++ b/_posts/2002-09-11-10.html
@@ -10,24 +10,24 @@ tags:
  - Duncan Whitley
  - Christian Nold
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong>alpha 3.5</strong>
- - Charles and Tien
+ - Charles and Tien<br/>
 <br />server-crushing project
 </li>
-
+<br/>
 <li><strong><a href="http://nungu.com/">nungu&#39;s telematic auntie</a></strong>
- - Beatrice Gibson
+ - Beatrice Gibson<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://dorkbot.org/dorkbotlondon/old/fuelair.html">Fuelair</a></strong>
- - Duncan Whitley and Christian Nold
+ - Duncan Whitley and Christian Nold<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
+<br/>
