--- a/_posts/2006-01-18-33.html
+++ b/_posts/2006-01-18-33.html
@@ -11,39 +11,39 @@ tags:
  - Tom Carden
  - Alex Mclean
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong>Yoshi Imamura</strong>
-
+<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>Dominic Harris</strong>
-
+<br/>
 <br />RFID Chandelier
 </li>
-
+<br/>
 <li><strong>Strange Attractor vs. Disinformation</strong>
-
+<br/>
 <br />A performance for electricity, medical contraptions and musical instruments
 </li>
-
+<br/>
 <li><strong><a href="http://www.tom-carden.co.uk/">Tom Carden</a></strong>
-
+<br/>
 <br />visualising tube data
 </li>
-
+<br/>
 <li><strong>Alex Mclean</strong>
-
+<br/>
 <br />nourathar
 </li>
-
+<br/>
 <li><strong>James Larsson</strong>
-
+<br/>
 <br />Why spend money buying rubbish electronic Christmas presents when you can make your own ...out of rubbish !
 </li>
-
+<br/>
 </ul>
-
+<br/>
