--- a/_posts/2006-02-11-34.html
+++ b/_posts/2006-02-11-34.html
@@ -14,56 +14,56 @@ tags:
  - Simon Green
  - Dave Griffiths
 ---
-
-
+<br/>
+<br/>
 <h2>dorkbotlondon #34</h2>
-
+<br/>
 <dl>
 <dt>When:</dt><dd>19:00-23:00, 11 February 2006</dd>
 <dt>Where:</dt><dd>state51</dd>
 </dl>
-
-
-
-
-
-Featuring the light and airy...
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong>anton</strong>
-
+<br/>
 <br />hacking rfid readers with linux+puredata
 </li>
-
+<br/>
 <li><strong><a href="http://cefn.com/curiosity/">Cefn Hoile and Dave Chatting</a></strong>
-
+<br/>
 <br />all kinds of amazing stuff that defies definition, from the curiosity collective.
 </li>
-
+<br/>
 <li><strong><a href="http://wojciechkosma.art.pl/">Wojciech Kosma</a></strong>
-
+<br/>
 <br />making art for the PSP
 </li>
-
+<br/>
 <li><strong><a href="http://www.tom-carden.co.uk/">Tom Carden</a></strong>
-
+<br/>
 <br />processing hacks (and processinghacks)
 </li>
-
+<br/>
 <li><strong><a href="http://dorkfest.org.uk/">Saul Albert</a></strong>
-
+<br/>
 <br />a long winded by exciting introduction to the London Dorkfest 2006!
 </li>
-
+<br/>
 <li><strong><a href="http://www.cmpevents.com/GD06/a.asp?option=G&amp;V=3&amp;id=99435">Simon Green</a></strong>
-
+<br/>
 <br />On-card graphics magic
 </li>
-
+<br/>
 <li><strong><a href="http://pawfal.org/dave/">Dave Griffiths</a></strong>
-
+<br/>
 <br />Fluxus and Fastbreeder
 </li>
-
+<br/>
 </ul>
-
+<br/>
