--- a/_posts/2006-03-18-35.html
+++ b/_posts/2006-03-18-35.html
@@ -17,64 +17,64 @@ tags:
  - Mileece
  - Anab Jain
 ---
-
-
-Featuring the light and airy...
+<br/>
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.electricstuff.co.uk/">Mike Harrison (a.k.a. Dr. Voltage)</a></strong>
-
+<br/>
 <br />Dorkbot Classics
 </li>
-
+<br/>
 <li><strong><a href="http://www.ticfilm.com/">Invited Cinema</a></strong>
-
+<br/>
 <br />dorkfilms from around the world
 </li>
-
+<br/>
 <li><strong>Steve C</strong>
-
+<br/>
 <br />top secret opendork
 </li>
-
+<br/>
 <li><strong>Javier Candeira</strong>
-
+<br/>
 <br />Free Software Art
 </li>
-
+<br/>
 <li><strong>James Larsson</strong>
-
+<br/>
 <br />My crazy inventions past and present
 </li>
-
+<br/>
 <li><strong><a href="http://www.goto10.org/">Chun and Oli</a></strong>
-
+<br/>
 <br />Pure Data coded instruments and visuals
 </li>
-
+<br/>
 <li><strong>Alex Mclean and Dave Griffith</strong>
-
+<br/>
 <br />Live coded A/V
 </li>
-
+<br/>
 <li><strong>Slackers Salon</strong>
-
+<br/>
 <br />Patrice and Diiiiinos, Lisa, Bill and assorted slackers lay on the turkish tea and little sugary pastries. No computers allowed!
 </li>
-
+<br/>
 <li><strong>Yoshi Imamura</strong>
-
+<br/>
 <br />Electric love is in the air
 </li>
-
+<br/>
 <li><strong>Mileece</strong>
-
+<br/>
 <br />Philedendron Experimentation
 </li>
-
+<br/>
 <li><strong><a href="http://www.anab.in/">Anab Jain</a></strong>
-
+<br/>
 <br />less words, more visuals
 </li>
-
+<br/>
 </ul>
