--- a/_posts/2006-04-19-36.html
+++ b/_posts/2006-04-19-36.html
@@ -11,34 +11,34 @@ tags:
  - Michela Ledwidge
  - Eleanor Dare
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.pedroperegrino.com/">Pedro Peregrino</a></strong>
-
+<br/>
 <br />Human uses for RFID
 </li>
-
+<br/>
 <li><strong><a href="http://www.electricstuff.co.uk/">Mike Harrisson (a.k.a. Dr. Voltage)</a></strong>
-
+<br/>
 <br />RFID-o-phone
 </li>
-
+<br/>
 <li><strong><a href="http://www.doc.gold.ac.uk/aikon/">Patrick Tresset</a></strong>
-
+<br/>
 <br />Aikon
 </li>
-
+<br/>
 <li><strong><a href="http://modfilms.com/">Michela Ledwidge</a></strong>
-
+<br/>
 <br />MOD the movies
 </li>
-
+<br/>
 <li><strong><a href="http://www.doc.gold.ac.uk/~ma501ed/">Eleanor Dare</a></strong>
-
+<br/>
 <br />Sounds from the Library of Babel
 </li>
-
+<br/>
 </ul>
-
+<br/>
