--- a/_posts/2006-05-24-37.html
+++ b/_posts/2006-05-24-37.html
@@ -10,24 +10,24 @@ tags:
  - Wojciech Kosma
  - The People Speak
 ---
-
-Featuring the tempestuous and passionate...
+<br/>
+Featuring the tempestuous and passionate...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.blotonthelandscape.org/">Steve Allen</a></strong>
-
+<br/>
 <br />Blot on the Landscape - mapping mobile phone masts
 </li>
-
+<br/>
 <li><strong><a href="http://deprogramming.us/ai/">Amy Alexander and Wojciech Kosma</a></strong>
-
+<br/>
 <br />SVEN
 </li>
-
+<br/>
 <li><strong><a href="http://directionless.info/">The People Speak</a></strong>
-
+<br/>
 <br />Directionless Enquiries
 </li>
-
+<br/>
 </ul>
-
+<br/>
