--- a/_posts/2006-07-26-39.html
+++ b/_posts/2006-07-26-39.html
@@ -10,30 +10,30 @@ tags:
  - Tom Schouten
  - Tim Blackwell
 ---
-
-
-Featuring the fragrant and marvellous...
+<br/>
+<br/>
+Featuring the fragrant and marvellous...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.lushprojects.com/hhack/index.html">Ian Sharpe</a></strong>
-
+<br/>
 <br />Hat Hack
 </li>
-
+<br/>
 <li><strong><a href="http://www.lektrolab.com/">Lektrolab</a></strong>
-
+<br/>
 <br />re-enact the narcissus myth and the art of networking
 </li>
-
+<br/>
 <li><strong><a href="http://zwizwa.goto10.org/">Tom Schouten</a></strong>
-
+<br/>
 <br />PURRR -- an interactive forth for microcontrollers
 </li>
-
+<br/>
 <li><strong><a href="http://www.timblackwell.com/">Tim Blackwell</a></strong>
-
+<br/>
 <br />Weaves and Swarms
 </li>
-
+<br/>
 </ul>
-
+<br/>
