--- a/_posts/2006-09-27-41.html
+++ b/_posts/2006-09-27-41.html
@@ -9,29 +9,29 @@ tags:
  - Evan Raskob
  - Rodolfo Rosini
 ---
-
-Featuring the wise and flavoursome...
+<br/>
+Featuring the wise and flavoursome...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://copycan.org/">Joerg Baach</a></strong>
-
+<br/>
 <br />buy it for the c*mmons!
 </li>
-
+<br/>
 <li><strong><a href="http://burningdork.slab.org/">burningdork campers</a></strong>
-
+<br/>
 <br />quaker memorial for burningdork. (Come brothers, sisters, share your thoughts.)
 </li>
-
+<br/>
 <li><strong><a href="http://lowfrequency.org/">Evan Raskob</a></strong>
-
+<br/>
 <br />Mashing up cities and interactive art
 </li>
-
+<br/>
 <li><strong><a href="http://www.voylent.com/">Rodolfo Rosini</a></strong>
-
+<br/>
 <br />cellphone privacy
 </li>
-
+<br/>
 </ul>
-
+<br/>
