--- a/_posts/2007-04-18-47.html
+++ b/_posts/2007-04-18-47.html
@@ -12,40 +12,40 @@ tags:
  - Pete Mühlenkamp
  - Annie Spinster
 ---
-
-Featuring the valiant and reliable...
+<br/>
+Featuring the valiant and reliable...<br/>
 <ul>
-
+<br/>
 <li><strong>The People Speak</strong>
-
+<br/>
 <br />Who Wants to Be
 </li>
-
+<br/>
 <li><strong>Sunshine Frere and Jenny Pickett</strong>
-
+<br/>
 <br />Hacked Entities - Putting it out there
 </li>
-
+<br/>
 <li><strong><a href="http://c6.org/thedotmasters/">C6</a></strong>
-
+<br/>
 <br />The Dotmasters
 </li>
-
+<br/>
 <li><strong>Pete Mühlenkamp</strong>
-
+<br/>
 <br />A ferrofluid ferrophone, and possibly an eyeball with a laser attached!
 </li>
-
+<br/>
 <li><strong>Annie Spinster</strong>
-
+<br/>
 <br />The Second Dorkbot Second Life Meeting
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/96141853@N00/472782956"><img border="0" alt="LED jewels composite" src="/web/20130128134241im_/http://farm1.static.flickr.com/172/472782956_6f3ec242e9_s.jpg" /></a><br />
-
+<br/>
