--- a/_posts/2007-05-30-48.html
+++ b/_posts/2007-05-30-48.html
@@ -9,31 +9,31 @@ tags:
  - Mike Harrison
  - Tav
 ---
-
-Featuring the innocent and blameless...
+<br/>
+Featuring the innocent and blameless...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.multi-touch.de/">Der_T</a></strong>
-
+<br/>
 <br />The c-base Multi-Touch Console (mtc) is a completely self-contained, touch-sensitive table built in spare time by a group of c-base.org members. Help build one in London!
 </li>
-
+<br/>
 <li><strong><a href="http://www.electricstuff.co.uk/">Mike Harrison (a.k.a. Dr. Voltage)</a></strong>
-
+<br/>
 <br />Dr.Voltage will attempt to build an antigravity propulsion device in 10 minutes from ordinary household* objects.  (* for slightly dorky values of &quot;household&quot;)
-
+<br/>
 </li>
-
+<br/>
 <li><strong><a href="http://www.24weeks.com/">Tav</a></strong>
-
+<br/>
 <br />Having started with nothing more than a vision, an empty shell, a laptop and a jar of nutella, Tav will change the world, all in 24weeks.
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/81759178@N00/538450265"><img border="0" alt="Mike &quot;Dr High Voltage&quot; Makes Spaceships" src="/web/20130128134640im_/http://farm2.static.flickr.com/1320/538450265_46671d9b06_s.jpg" /></a><a href="http://www.flickr.com/photos/81759178@N00/538333012"><img border="0" alt="Mike &quot;Dr High Voltage&quot; Makes Spaceships" src="/web/20130128134640im_/http://farm2.static.flickr.com/1039/538333012_2771dd04ba_s.jpg" /></a><a href="http://www.flickr.com/photos/81759178@N00/538332854"><img border="0" alt="Mike &quot;Dr High Voltage&quot; Makes Spaceships" src="/web/20130128134640im_/http://farm2.static.flickr.com/1105/538332854_ef30cc5c24_s.jpg" /></a><br />
-
+<br/>
