--- a/_posts/2007-06-21-49.html
+++ b/_posts/2007-06-21-49.html
@@ -10,32 +10,33 @@ tags:
  - Joe Banks
  - Chris Hand
 ---
-
-
-Featuring the fresh and flumpy...
+<br/>
+<br/>
+Featuring the fresh and flumpy...<br/>
 <ul>
-
+<br/>
 <li><strong>O project performance Video</strong>
- - Yoshi IMAMURA
+ - Yoshi IMAMURA<br/>
 <br />Compiled Video image of the performance, O Project, inwhich
-Yoshi played a roll of mad Doctor and designed some Elec&#39;kind 
-of stage set. ( Some may remember the chemical-kind of flashing instrument I brought to the April meeting )
+Yoshi played a roll of mad Doctor and designed some Elec&#39;kind<br/>
+of stage set. ( Some may remember the chemical-kind of flashing instrument I
+brought to the April meeting )<br/>
 </li>
-
+<br/>
 <li><strong><a href="http://www.stevenlevon.com/research/obediphobia.htm">Steven Ounanian</a></strong>
-
+<br/>
 <br />A device that translates a written contract into a handshake
 </li>
-
+<br/>
 <li><strong><a href="http://en.wikipedia.org/wiki/Rorschach_Audio">Joe Banks</a></strong>
-
+<br/>
 <br />Rorschach Audio
 </li>
-
+<br/>
 <li><strong><a href="http://www.semaclock.com/">Chris Hand</a></strong>
-
+<br/>
 <br />Semaclock is an electro-mechanical Internet device for people with deipnophobia or other social anxiety disorders
 </li>
-
+<br/>
 </ul>
-
+<br/>
