--- a/_posts/2007-07-18-50.html
+++ b/_posts/2007-07-18-50.html
@@ -8,25 +8,25 @@ tags:
  - Richard Wright
  - Michelle Kasprzak
 ---
-
-Featuring the wise and witty...
+<br/>
+Featuring the wise and witty...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://mediashed.org/?q=richardwright">Richard Wright</a></strong>
-
+<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://michelle.kasprzak.ca/">Michelle Kasprzak</a></strong>
-
+<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/42795195@N00/850439292"><img border="0" alt="img_9169" src="http://farm2.static.flickr.com/1358/850439292_95d68c0478_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/861074660"><img border="0" alt="Lads in the dorkbot manor" src="http://farm2.static.flickr.com/1059/861074660_f0a01875db_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/860205971"><img border="0" alt="Scale" src="http://farm2.static.flickr.com/1242/860205971_4101d0858c_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/860205975"><img border="0" alt="Jamie and Adam" src="http://farm2.static.flickr.com/1018/860205975_4db517c2de_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/860205979"><img border="0" alt="Ian" src="http://farm2.static.flickr.com/1312/860205979_855a3ff06d_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/860205967"><img border="0" alt="Richard Wright" src="http://farm2.static.flickr.com/1171/860205967_865c05684d_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/860205995"><img border="0" alt="Where&#39;s Dave Green? He&#39;s at dorkbot!" src="http://farm2.static.flickr.com/1088/860205995_90426018dc_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/860205985"><img border="0" alt="Goodbyes" src="http://farm2.static.flickr.com/1019/860205985_942b80cc12_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/861040030"><img border="0" alt="Richard Wright" src="http://farm2.static.flickr.com/1440/861040030_29d4a565bf_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/861040090"><img border="0" alt="Adam and Jamie show off nice Polish beer" src="http://farm2.static.flickr.com/1230/861040090_76f1336c2a_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/861040086"><img border="0" alt="Laurence chatting to Ian and other dorks" src="http://farm2.static.flickr.com/1108/861040086_71c6db29f1_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/861040048"><img border="0" alt="Adam and James" src="http://farm2.static.flickr.com/1092/861040048_e59af1bf40_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/861040076"><img border="0" alt="Hellos" src="http://farm2.static.flickr.com/1047/861040076_1a4d378317_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/861040070"><img border="0" alt="Door grafitti at Limehouse Town Hall" src="http://farm2.static.flickr.com/1271/861040070_05d4aaf2f5_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/849573099"><img border="0" alt="img_9176" src="http://farm2.static.flickr.com/1143/849573099_78f7bcbdf1_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/850445750"><img border="0" alt="img_9150" src="http://farm2.static.flickr.com/1189/850445750_b8e0939d24_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/850435380"><img border="0" alt="Pat and strange tilting light box" src="http://farm2.static.flickr.com/1132/850435380_8209d2f7be_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/850442518"><img border="0" alt="Rain" src="http://farm2.static.flickr.com/1076/850442518_ad40bfcb47_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/850443416"><img border="0" alt="img_9159" src="http://farm2.static.flickr.com/1222/850443416_baa1212dae_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/849577655"><img border="0" alt="img_9165" src="http://farm2.static.flickr.com/1195/849577655_6d49eb8a7a_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/850441620"><img border="0" alt="img_9164" src="http://farm2.static.flickr.com/1398/850441620_cdeedd581d_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/849581053"><img border="0" alt="Ass Driver!" src="http://farm2.static.flickr.com/1248/849581053_0825c88a09_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/849573803"><img border="0" alt="Rain and rather nice Polish beer" src="http://farm2.static.flickr.com/1243/849573803_83e0c3b7c0_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/849581875"><img border="0" alt="Greenman" src="http://farm2.static.flickr.com/1100/849581875_6da0aa9dda_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/850438548"><img border="0" alt="img_9173" src="http://farm2.static.flickr.com/1413/850438548_d2e6d33390_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/850440294"><img border="0" alt="img_9166" src="http://farm2.static.flickr.com/1137/850440294_a1d0ea60f7_s.jpg" /></a><a href="http://www.flickr.com/photos/42795195@N00/850437744"><img border="0" alt="Ian" src="http://farm2.static.flickr.com/1007/850437744_6a7c9175ab_s.jpg" /></a><br />
-
+<br/>
