--- a/_posts/2007-12-19-dorkmas-2007.html
+++ b/_posts/2007-12-19-dorkmas-2007.html
@@ -12,40 +12,40 @@ tags:
  - Joel Gethin Lewis
  - Hiromi Ozaki
 ---
-
-With Christmas Elves:
+<br/>
+With Christmas Elves:<br/>
 <ul>
-
+<br/>
 <li><strong>Britney Spears  psycho-emotional crisis game</strong>
- - James Larsson
+ - James Larsson<br/>
 <br />featuring high voltages and small amounts 
-of poisonous gas!!
+of poisonous gas!!<br/>
 </li>
-
+<br/>
 <li><strong><a href="http://www.lushprojects.com/">Cyclepong</a></strong>
- - Iain Sharpe
+ - Iain Sharpe<br/>
 <br />Kinky Boot Pong, you&#39;ve got competition!
 </li>
-
+<br/>
 <li><strong>Illuminated Bible</strong>
- - Tessa Hunkin
+ - Tessa Hunkin<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>Luminous  Surveillance (luminous means lights! Lights mean Christmas!)</strong>
- - Alex Haw
+ - Alex Haw<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.uva.co.uk/">The magical elf secrets behind this  year&#39;s Regent Street Christmas lights </a></strong>
- - Joel Gethin Lewis
+ - Joel Gethin Lewis<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.myspace.com/hiromiozaki">the  soft carols of Sputniko</a></strong>
- - Hiromi Ozaki
+ - Hiromi Ozaki<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
+<br/>
