--- a/_posts/2008-06-18-55.html
+++ b/_posts/2008-06-18-55.html
@@ -9,31 +9,31 @@ tags:
  - Julie Freeman
  - Mike Blow
 ---
-
-
-Featuring the light and airy...
+<br/>
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.peckhamspace.com/projects/peckhamtv">Moritz Waldemeyer</a></strong>
-
+<br/>
 <br />recent projects 
 </li>
-
+<br/>
 <li><strong><a href="http://www.dogsears.net/">Dog&#39;s Ears</a></strong>
- - Julie Freeman
+ - Julie Freeman<br/>
 <br />A witty and subversive take on the video chat room, this online artwork by artist Julie Freeman explores digital patronage and the beauty and language of the dog ear
 </li>
-
+<br/>
 <li><strong><a href="http://www.peckhamspace.com/projects/peckhamtv">Peckham TV</a></strong>
- - The People Speak
+ - The People Speak<br/>
 <br />A live democratic envisioning of the future of Peckham
 </li>
-
+<br/>
 <li><strong><a href="http://www.evolutionaryart.co.uk/">Musical park benches </a></strong>
- - Mike Blow
+ - Mike Blow<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
-
+<br/>
+<br/>
