--- a/_posts/2008-11-06-58.html
+++ b/_posts/2008-11-06-58.html
@@ -9,27 +9,27 @@ tags:
  - Alex Zivanovic
  - Alex McLean
 ---
-
-
-Featuring the plaid-wearing and cozy
+<br/>
+<br/>
+Featuring the plaid-wearing and cozy<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://nickstedman.banff.org/">SNAKEBOT and BLANKET and other projects</a></strong>
- - Nick Stedman
+ - Nick Stedman<br/>
 <br />A robot that feels you, a blanket that hugs you... and co-founder of Dorkbot Toronto! 
 </li>
-
+<br/>
 <li><strong>Carnivorous robots</strong>
- - Alex Zivanovic
+ - Alex Zivanovic<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://yaxu.org/">Code</a></strong>
- - Alex McLean
+ - Alex McLean<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
-
-
+<br/>
+<br/>
+<br/>
