--- a/_posts/2009-02-08-dorksnow09.html
+++ b/_posts/2009-02-08-dorksnow09.html
@@ -6,14 +6,14 @@ end: 2009-02-08 17:00
 where: limehouse_town_hall
 tags:
 ---
-
-Featuring...
+<br/>
+Featuring...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://dorkbotlondon.org/wiki/index.php/DorkSnow">A full weekend of dorksnow fun</a></strong>
-
+<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
+<br/>
