--- a/_posts/2009-06-04-61.html
+++ b/_posts/2009-06-04-61.html
@@ -12,35 +12,35 @@ tags:
  - Marcus Wendt
  - Chris McCormack
 ---
-
-Featuring the well-combed and frisky...
+<br/>
+Featuring the well-combed and frisky...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.synthbot.com/">SynthBot: An Automatic Synthesizer Programmer</a></strong>
- - Martin Roth and Matthew Yee-King
+ - Martin Roth and Matthew Yee-King<br/>
 <br />software for automatic synth parameter tweaking to match a given sound
 </li>
-
+<br/>
 <li><strong><a href="http://www.sketchpatch.net/">sketchPatch</a></strong>
- - Davide Della Casa
+ - Davide Della Casa<br/>
 <br />an online programming playground based on Processing, somewhere to experiment with code, reuse and collaborate on existing code, share and learn.
 </li>
-
+<br/>
 <li><strong><a href="http://www.field.io/">Orbiter - an interactive sound environment</a></strong>
- - Vera-Maria Glahn &amp; Marcus Wendt
+ - Vera-Maria Glahn &amp; Marcus Wendt<br/>
 <br />Process of an interactive installation using generative sound and visuals and stereo motion tracking - from idea to play
 </li>
-
+<br/>
 <li><strong><a href="http://rjdj.me/">RJDJ</a></strong>
- - Chris McCormack
+ - Chris McCormack<br/>
 <br />Pure data on the iphone
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/16105436@N00/3599601499"><img border="0" alt="img_5343" src="http://farm4.static.flickr.com/3417/3599601499_36af6025d4_s.jpg" /></a><a href="http://www.flickr.com/photos/16105436@N00/3600412932"><img border="0" alt="img_5347" src="http://farm4.static.flickr.com/3562/3600412932_f4d237c394_s.jpg" /></a><a href="http://www.flickr.com/photos/16105436@N00/3599601793"><img border="0" alt="img_5346" src="http://farm4.static.flickr.com/3349/3599601793_94f8aa2e6f_s.jpg" /></a><a href="http://www.flickr.com/photos/16105436@N00/3600411862"><img border="0" alt="img_5341" src="http://farm4.static.flickr.com/3367/3600411862_be9f30cefc_s.jpg" /></a><br />
-
+<br/>
