--- a/_posts/2009-08-24-dorkcamp-2009.html
+++ b/_posts/2009-08-24-dorkcamp-2009.html
@@ -6,14 +6,15 @@ end:   2009-08-24 12:00
 where: limehouse_town_hall
 tags:
 ---
-
-Featuring workshops, presentations and performances by...
+<br/>
+Featuring workshops, presentations and performances by...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://dorkbotlondon.org/wiki/index.php/DorkCamp09">Dorkcampers</a></strong>
- - http://dorkbotlondon.org/wiki/index.php/DorkCamp09
+ - <a
+href="http://dorkbotlondon.org/wiki/index.php/DorkCamp09">http://dorkbotlondon.org/wiki/index.php/DorkCamp09</a><br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
+<br/>
