--- a/_posts/2009-12-16-65.html
+++ b/_posts/2009-12-16-65.html
@@ -9,35 +9,35 @@ tags:
  - James Larsson
  - Sarah Angliss
 ---
-
-Featuring the pine scented and sparkling...
+<br/>
+Featuring the pine scented and sparkling...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.timhunkin.com/">Tim Hunkin</a></strong>
-
+<br/>
 <br />Electricity Sex and Death
 </li>
-
+<br/>
 <li><strong>Circuits for a sordid SatNav</strong>
- - James Larsson
+ - James Larsson<br/>
 <br />A characterless SatNav unit is made a bit more human...
 </li>
-
+<br/>
 <li><strong><a href="http://pawfal.org/dave/">Dave Griffiths</a></strong>
-
+<br/>
 <br />groworld - gardening, permaculture and games
 </li>
-
+<br/>
 <li><strong><a href="http://spacedog.biz/">&quot;I&#39;m going to put you back in your box&quot; </a></strong>
- - Sarah Angliss
+ - Sarah Angliss<br/>
 <br />The 30s voder and ventriloquism revisited 
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/37996583811@N01/4194107576"><img border="0" alt="James Larsson&#39;s Schrodingers cat that wees" src="http://farm3.static.flickr.com/2729/4194107576_0636c5e6cd_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4194104932"><img border="0" alt="Stuff" src="http://farm3.static.flickr.com/2777/4194104932_c7ac45913f_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4193342265"><img border="0" alt="Tessa&#39;s fab fibre optic brolly" src="http://farm5.static.flickr.com/4042/4193342265_58dcdae4f1_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4194102362"><img border="0" alt="Sarah Angliss&#39; wax phonograph drums" src="http://farm3.static.flickr.com/2485/4194102362_36e83311aa_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4193347597"><img border="0" alt="James Larsson&#39;s Schrodinger cat that wees" src="http://farm3.static.flickr.com/2492/4193347597_0582ac08e8_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4193340077"><img border="0" alt="Tessa, Tim Hunkin and Sarah Angliss" src="http://farm3.static.flickr.com/2762/4193340077_2466185824_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4193351803"><img border="0" alt="James Larsson - irritation vs contentment tomtom" src="http://farm5.static.flickr.com/4002/4193351803_93a8bb9fec_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4194099658"><img border="0" alt="Tessa&#39;s fab fibre optic brolly" src="http://farm3.static.flickr.com/2679/4194099658_4a42a795ef_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4193345071"><img border="0" alt="James Larsson&#39;s geiger counter" src="http://farm3.static.flickr.com/2496/4193345071_9b1ccde23d_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4193334407"><img border="0" alt="Sarah Angliss" src="http://farm3.static.flickr.com/2605/4193334407_07b252466c_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4193332037"><img border="0" alt="db_james" src="http://farm5.static.flickr.com/4046/4193332037_8dc8dd7935_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4194093958"><img border="0" alt="James" src="http://farm5.static.flickr.com/4046/4194093958_5739818b97_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4193337795"><img border="0" alt="Sarah Angliss&#39; Edison Phonograph" src="http://farm3.static.flickr.com/2701/4193337795_95ef3e851c_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4193333517"><img border="0" alt="James Larsson" src="http://farm3.static.flickr.com/2451/4193333517_54d8b9c88b_s.jpg" /></a><a href="http://www.flickr.com/photos/75126686@N00/4190885113"><img border="0" alt="1904 Edison phonograph" src="http://farm3.static.flickr.com/2736/4190885113_4c26965bca_s.jpg" /></a><a href="http://www.flickr.com/photos/75126686@N00/4191633916"><img border="0" alt="1904 Edison Phonograph belonging to Sarah Angliss" src="http://farm3.static.flickr.com/2752/4191633916_120e0226d3_s.jpg" /></a><a href="http://www.flickr.com/photos/75126686@N00/4191612494"><img border="0" alt="Easi-heat gas fired heater, closer view" src="http://farm3.static.flickr.com/2804/4191612494_07c47b82d2_s.jpg" /></a><br />
-
+<br/>
