--- a/_posts/2010-02-17-66.html
+++ b/_posts/2010-02-17-66.html
@@ -11,35 +11,35 @@ tags:
  - Nathaniel Slade
  - Ansuman Biswas
 ---
-
-Featuring the lovely....
+<br/>
+Featuring the lovely....<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://artemispapageorgiou.wordpress.com/">Fabrique: the garden as machine</a></strong>
- - Artemis Papageorgiou
+ - Artemis Papageorgiou<br/>
 <br />Fabrique is designed as a responsive garden folly. By merging mechanics with natural gestures through digital technology, Fabrique investigates landscape as a result of engagement, and not of Nature.
 </li>
-
+<br/>
 <li><strong>Alex Zivanovic</strong>
-
+<br/>
 <br />RFID Gesture Generating Robot
 </li>
-
+<br/>
 <li><strong><a href="http://www.sonicsideshow.com/">The Soulsuit Project</a></strong>
- - Aste Amunden &amp; Nathaniel Slade
+ - Aste Amunden &amp; Nathaniel Slade<br/>
 <br />Technical costume design, MaxMSP and interactivity design for the Sonic Sideshow.
 </li>
-
+<br/>
 <li><strong><a href="http://www.ansuman.com/">The Science of Love</a></strong>
- - Ansuman Biswas
+ - Ansuman Biswas<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/75126686@N00/4366668376"><img border="0" alt="Teacup lights at Dorkbot 66" src="http://farm3.static.flickr.com/2734/4366668376_6953c41a7a_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4373584647"><img border="0" alt="Opendork" src="http://farm5.static.flickr.com/4072/4373584647_503310b70e_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374321284"><img border="0" alt="Aste Amunden" src="http://farm5.static.flickr.com/4029/4374321284_75db04dddc_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374316992"><img border="0" alt="dorkbot this way" src="http://farm3.static.flickr.com/2794/4374316992_4591103ed6_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374337222"><img border="0" alt="Greenman &amp; Saul" src="http://farm5.static.flickr.com/4009/4374337222_af9ed69577_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4373569121"><img border="0" alt="Aste Amunden &amp; Nathaniel Slade" src="http://farm5.static.flickr.com/4018/4373569121_205d9b83f9_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374334732"><img border="0" alt="Saul" src="http://farm5.static.flickr.com/4071/4374334732_077a7cc8a6_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374335962"><img border="0" alt="Hearts" src="http://farm5.static.flickr.com/4063/4374335962_e188658724_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374331908"><img border="0" alt="Jamillah" src="http://farm3.static.flickr.com/2719/4374331908_8fc86728c5_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4373583525"><img border="0" alt="Opendork" src="http://farm3.static.flickr.com/2713/4373583525_a548865000_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4373574389"><img border="0" alt="Artemis Papageorgiou" src="http://farm5.static.flickr.com/4025/4373574389_a0494136a9_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374333348"><img border="0" alt="dorks1" src="http://farm5.static.flickr.com/4044/4374333348_168bfbbfcc_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4373571619"><img border="0" alt="Aste Amunden &amp; Nathaniel Slade" src="http://farm5.static.flickr.com/4010/4373571619_c943e5b866_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4373573071"><img border="0" alt="thedavegreen" src="http://farm5.static.flickr.com/4003/4373573071_5e5f3b84b1_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4373575695"><img border="0" alt="Artemis Papageorgiou" src="http://farm3.static.flickr.com/2701/4373575695_4088459a2e_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374313214"><img border="0" alt="dorks" src="http://farm3.static.flickr.com/2703/4374313214_92a24dda78_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374315606"><img border="0" alt="Ansuman Biswas" src="http://farm3.static.flickr.com/2791/4374315606_8fe709dac9_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/4374311830"><img border="0" alt="Alex Zivanovic, Jamie &amp; Ben" src="http://farm5.static.flickr.com/4072/4374311830_c137c62732_s.jpg" /></a><br />
-
+<br/>
