--- a/_posts/2010-08-18-70.html
+++ b/_posts/2010-08-18-70.html
@@ -10,30 +10,30 @@ tags:
  - Iain Sharp
  - Katrin Baumgarten
 ---
-
-Featuring the spicy and aromatic...
+<br/>
+Featuring the spicy and aromatic...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://london.hackspace.org.uk/">Hackspace London</a></strong>
- - Russ Garrett and Jonty Wareing
+ - Russ Garrett and Jonty Wareing<br/>
 <br />Hear about London&#39;s heroic new hackspace!
 </li>
-
+<br/>
 <li><strong><a href="http://www.lushprojects.com/">A guitar tuner for blind people and a post-modern fortune teller</a></strong>
- - Iain Sharp
+ - Iain Sharp<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://katrinbaumgarten.de/project/my-work/">the aesthetics of disgust</a></strong>
- - Katrin Baumgarten
+ - Katrin Baumgarten<br/>
 <br />This work consists of multiple designs of an everyday object, each time based on a different approach to disgust, and to examine the provoked reactions.
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/58447660@N00/4905337448"><img border="0" alt="Aesthetics of Disgust" src="http://farm5.static.flickr.com/4119/4905337448_9d7ccd9664_s.jpg" /></a><br />
-
+<br/>
