--- a/_posts/2010-10-20-71.html
+++ b/_posts/2010-10-20-71.html
@@ -9,34 +9,35 @@ tags:
  - Cefn Hoile
  - Nigel
 ---
-
-People doing strange things with chickens and light.
+<br/>
+People doing strange things with chickens and light.<br/>
 <ul>
-
+<br/>
 <li><strong>Birdmachine</strong>
- - Ivan Thorley
+ - Ivan Thorley<br/>
 <br />Materials, movement, robotics and sonic arts to create a generative, physical and visual environment at the cutting edge of performance technology.
 </li>
-
+<br/>
 <li><strong><a href="http://enigmaker.org/">The Paradox of Public Domain Invention</a></strong>
- - Cefn Hoile
+ - Cefn Hoile<br/>
 <br />Cefn Hoile presents the Enigmaker project, a model of public-domain
-invention inspired by open source hardware and software. Over two
-months in a mobile-home-lab, a new invention a week was documented.
-Only one detail of each prototype was left out - what&#39;s it for? Visitors
-and twitter users were invited to make their guesses. Enigmaker&#39;s
-#project3 was a laser-cut, perpetual 4-week-horizon wall planner.
-The &#39;Tacticalendar&#39; is now ready for production. The first batch has been
-mailed to customers, with the design simultaneously published under a
-creative commons license.
-
-http://tacticalendar.co.uk/
+invention inspired by open source hardware and software. Over two<br/>
+months in a mobile-home-lab, a new invention a week was documented.<br/>
+Only one detail of each prototype was left out - what&#39;s it for? Visitors<br/>
+and twitter users were invited to make their guesses. Enigmaker&#39;s<br/>
+#project3 was a laser-cut, perpetual 4-week-horizon wall planner.<br/>
+The &#39;Tacticalendar&#39; is now ready for production. The first batch has
+been<br/>
+mailed to customers, with the design simultaneously published under a<br/>
+creative commons license.<br/>
+<br/>
+<a href="http://tacticalendar.co.uk/">http://tacticalendar.co.uk/</a><br/>
 </li>
-
+<br/>
 <li><strong>Full Colour Holograms</strong>
- - Nigel
+ - Nigel<br/>
 <br />You have never seen these before. Nigel has been creating holograms for decades, and will be bringing along some of his gadgetry. 
 </li>
-
+<br/>
 </ul>
-
+<br/>
