--- a/_posts/2010-12-20-dorxmas-2010.html
+++ b/_posts/2010-12-20-dorxmas-2010.html
@@ -9,34 +9,34 @@ tags:
  - Mike Harrison
  - James Larsson
 ---
-Featuring the naughty and nice, and a yummy dinner
+Featuring the naughty and nice, and a yummy dinner<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://dorkbot.eventwax.com/dorxmas/register">A special Dorxmas dinner</a></strong>
-
+<br/>
 <br />To keep you warm, and to help you hang around a bit longer, we will have a curry buffet. Buy your ticket to let us know how much to order.
 </li>
-
+<br/>
 <li><strong><a href="http://code.google.com/p/din">Morse Code Profanity</a></strong>
- - Jag
+ - Jag<br/>
 <br />an attempt to acquit extremely offensive
-words thru visuals &amp; sound.
+words thru visuals &amp; sound.<br/>
 </li>
-
+<br/>
 <li><strong>High voltage, hot oil  and vacuum pumps : 1950&#39;s steampunk video projection technology</strong>
- - Mike Harrison
+ - Mike Harrison<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>James Larsson&#39;s Xmas Special</strong>
- - James Larsson
+ - James Larsson<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/37996583811@N01/5279328143"><img border="0" alt="Community network opendork" src="http://farm6.static.flickr.com/5086/5279328143_a6e1285733_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279938172"><img border="0" alt="Peter" src="http://farm6.static.flickr.com/5049/5279938172_3910c695bd_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279933476"><img border="0" alt="Russ on Hackspace opendork" src="http://farm6.static.flickr.com/5281/5279933476_c9e9d7416e_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279328743"><img border="0" alt="3D cameras" src="http://farm6.static.flickr.com/5044/5279328743_2326383ab4_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279936322"><img border="0" alt="Greenman &amp; Jag" src="http://farm6.static.flickr.com/5002/5279936322_5a68b2047c_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279936090"><img border="0" alt="Jag" src="http://farm6.static.flickr.com/5090/5279936090_1a4613e27d_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279329007"><img border="0" alt="Under the dryer" src="http://farm6.static.flickr.com/5289/5279329007_1163ae8363_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279331363"><img border="0" alt="On the sofa" src="http://farm6.static.flickr.com/5201/5279331363_f6509dd0c2_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279328445"><img border="0" alt="On the sofa" src="http://farm6.static.flickr.com/5128/5279328445_3e1ab9c64a_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279935028"><img border="0" alt="Saul" src="http://farm6.static.flickr.com/5242/5279935028_99bccc0475_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279935276"><img border="0" alt="3D camera chat" src="http://farm6.static.flickr.com/5204/5279935276_2cb34550a3_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279937420"><img border="0" alt="The Eidophor" src="http://farm6.static.flickr.com/5128/5279937420_11a5abf832_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279936878"><img border="0" alt="dorkmas crowd" src="http://farm6.static.flickr.com/5041/5279936878_7f9d1bf3f3_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279937576"><img border="0" alt="Mike Harrison" src="http://farm6.static.flickr.com/5205/5279937576_4711aecabb_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279329257"><img border="0" alt="3D camera" src="http://farm6.static.flickr.com/5202/5279329257_ee15233a3b_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279332453"><img border="0" alt="Mike Harrison" src="http://farm6.static.flickr.com/5249/5279332453_197632e407_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279937954"><img border="0" alt="Curreh buffy" src="http://farm6.static.flickr.com/5202/5279937954_7cf9d765e6_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279330509"><img border="0" alt="Jag&#39;s banned words morse code" src="http://farm6.static.flickr.com/5123/5279330509_455bb95bd1_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279937138"><img border="0" alt="The Greens: Simon &amp; Dave" src="http://farm6.static.flickr.com/5249/5279937138_f63c695a4a_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279330125"><img border="0" alt="Ian &amp; Ten" src="http://farm6.static.flickr.com/5285/5279330125_fe405b2c7b_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279324929"><img border="0" alt="Ian &amp; Rain" src="http://farm6.static.flickr.com/5047/5279324929_1f3ab34df9_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279323961"><img border="0" alt="Martin &amp; Ian" src="http://farm6.static.flickr.com/5084/5279323961_9df013b2bb_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279930124"><img border="0" alt="Martin" src="http://farm6.static.flickr.com/5288/5279930124_a14a810b30_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279928968"><img border="0" alt="dorks" src="http://farm6.static.flickr.com/5203/5279928968_4a46d136ae_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279327005"><img border="0" alt="Jame&#39;s Larsson&#39;s tactile toaster" src="http://farm6.static.flickr.com/5206/5279327005_7a8322bef4_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279324647"><img border="0" alt="Snappy Ian" src="http://farm6.static.flickr.com/5123/5279324647_129d5dbdc1_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279326071"><img border="0" alt="Jame&#39;s Larsson&#39;s boot kettle" src="http://farm6.static.flickr.com/5006/5279326071_5574b1ae61_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279929216"><img border="0" alt="Snappy Ian, Dave &amp; James" src="http://farm6.static.flickr.com/5084/5279929216_c4c4941ca3_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279932378"><img border="0" alt="Jame&#39;s Larsson&#39;s tactile toaster" src="http://farm6.static.flickr.com/5005/5279932378_26c7f113fd_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279929516"><img border="0" alt="Snappy Ian &amp; James" src="http://farm6.static.flickr.com/5244/5279929516_9c32456abe_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279933204"><img border="0" alt="dorks" src="http://farm6.static.flickr.com/5170/5279933204_970bac90aa_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279322601"><img border="0" alt="dorks" src="http://farm6.static.flickr.com/5165/5279322601_25481a8c83_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279327301"><img border="0" alt="James Larsson&#39;s Sadomasokitchen" src="http://farm6.static.flickr.com/5004/5279327301_fb29f6e189_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279931312"><img border="0" alt="James Larsson" src="http://farm6.static.flickr.com/5249/5279931312_5bb9c47dcf_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279932146"><img border="0" alt="Jame&#39;s Larsson&#39;s boot kettle" src="http://farm6.static.flickr.com/5041/5279932146_3179fc287a_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279928718"><img border="0" alt="dorks" src="http://farm6.static.flickr.com/5042/5279928718_39b8962274_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279931622"><img border="0" alt="Greenman" src="http://farm6.static.flickr.com/5242/5279931622_f5d7c85581_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5279931012"><img border="0" alt="dorks" src="http://farm6.static.flickr.com/5126/5279931012_c8e3ef4742_s.jpg" /></a><br />
