--- a/_posts/2011-02-23-73.html
+++ b/_posts/2011-02-23-73.html
@@ -9,31 +9,31 @@ tags:
  - Paul Makepeace
  - Louis Mccallum
 ---
-
-Featuring the scintillating and juicy...
+<br/>
+Featuring the scintillating and juicy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://sarahnicolls.com/">Inside Out Piano</a></strong>
- - Sarah Nicolls
+ - Sarah Nicolls<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>How Pilots Don&#39;t Get Lost</strong>
- - Paul Makepeace
+ - Paul Makepeace<br/>
 <br />From pre-flight to arrival, an introduction to the tools and
-technologies of aviation navigation.
+technologies of aviation navigation.<br/>
 </li>
-
+<br/>
 <li><strong>23 going on 8</strong>
- - Louis Mccallum
+ - Louis Mccallum<br/>
 <br />A one man, two arduino band.
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/37996583811@N01/5472518568"><img border="0" alt="Sarah Angliss, Open Dork" src="http://farm6.static.flickr.com/5258/5472518568_bbd9fe9d3c_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5472531702"><img border="0" alt="Paul Makepeace, How to become a pilot" src="http://farm6.static.flickr.com/5015/5472531702_7958657bf3_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5471935683"><img border="0" alt="Sarah Nicolls inside out piano" src="http://farm6.static.flickr.com/5055/5471935683_31752b207e_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5472517642"><img border="0" alt="Sarah Angliss, Rocket Lolly" src="http://farm6.static.flickr.com/5094/5472517642_55989b53fa_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5471933095"><img border="0" alt="Dorks" src="http://farm6.static.flickr.com/5179/5471933095_852236c5cc_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5471933989"><img border="0" alt="James" src="http://farm6.static.flickr.com/5299/5471933989_e0ef04f06a_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5471942093"><img border="0" alt="Louis Mccallum, Arduino band" src="http://farm6.static.flickr.com/5256/5471942093_d042f2996c_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5471930615"><img border="0" alt="Louis Mccallum, Arduino band" src="http://farm6.static.flickr.com/5057/5471930615_dee9161059_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5471921747"><img border="0" alt="Paul Makepeace, how pilots don&#39;t get lost" src="http://farm6.static.flickr.com/5017/5471921747_da983dbd33_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5472515282"><img border="0" alt="Paul Makepeace, how pilots don&#39;t get lost" src="http://farm6.static.flickr.com/5178/5472515282_8e645d0edd_s.jpg" /></a><br />
-
+<br/>
