--- a/_posts/2011-03-23-74.html
+++ b/_posts/2011-03-23-74.html
@@ -11,35 +11,35 @@ tags:
  - Lin Jones
  - Ele Carpenter
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.bijlmereuro.net/">Bijlmer Euro</a></strong>
- - Christian Nold
+ - Christian Nold<br/>
 <br />Christian Nold has been threatening to tell us about the Bijkmer Euro for months - we finally got him!
 </li>
-
+<br/>
 <li><strong><a href="http://philonski.co.uk/">A Study of the Number 74 in its Natural Habitat</a></strong>
- - Philippa Law
+ - Philippa Law<br/>
 <br />To commemorate dorkbotlondon #74, a slideshow of 74s caught in the wild.
 </li>
-
+<br/>
 <li><strong><a href="http://sociablephysics.wordpress.com/">Boris Bikes and Blue Tadpoles</a></strong>
- - Martin Austwick
+ - Martin Austwick<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.tnmoc.org/">The National Museum of Computing and the Embroidered Digital Commons Definition</a></strong>
- - Lin Jones and Ele Carpenter
+ - Lin Jones and Ele Carpenter<br/>
 <br />A presentation about the Museum, and a presentation of the Embroidered Digital Commons definition of the term &#39;Code&#39; which we are stitching at Bletchley Park. 
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/45581782@N00/5554839255"><img border="0" alt="LondonDorkbot#74" src="http://farm6.static.flickr.com/5133/5554839255_e00e4aeda3_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5553846621"><img border="0" alt="dorkbot London #74: Boris Bikes &amp; blue tadpoles" src="http://farm6.static.flickr.com/5186/5553846621_d936ba54ac_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5553848489"><img border="0" alt="dorkbot London #74: leaving Centre for Creative Collaboration" src="http://farm6.static.flickr.com/5143/5553848489_84f7b732f4_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5554421196"><img border="0" alt="dorkbot London #74: Embroidered Digital Commons" src="http://farm6.static.flickr.com/5180/5554421196_97635bfc1c_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5553845167"><img border="0" alt="dorkbot London #74: Bijlmer Euro" src="http://farm6.static.flickr.com/5302/5553845167_3a3ebd04ec_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5554420430"><img border="0" alt="dorkbot London #74: National Computer Museum talk" src="http://farm6.static.flickr.com/5145/5554420430_3869ea6633_s.jpg" /></a><br />
-
+<br/>
