--- a/_posts/2011-12-17-dorxmas-2011.html
+++ b/_posts/2011-12-17-dorxmas-2011.html
@@ -11,32 +11,33 @@ tags:
  - Meinolf Braeutigam
  - Dave Green
 ---
-
-Featuring the naughty and nice ....
+<br/>
+Featuring the naughty and nice ....<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://jameslarsson.com/">James Larsson&#39;s Christmas Treat</a></strong>
- - James Larsson
+ - James Larsson<br/>
 <br />The inventor of the CRT dead chicken defibrillator will be bringing us another helping of seasonal dorkbot.
 </li>
-
+<br/>
 <li><strong><a href="http://jagernot.com/lhr/">Air Traffic Contrlol</a></strong>
- - S Jagannathan, Emmanuel Revah &amp; Meinolf Braeutigam
+ - S Jagannathan, Emmanuel Revah &amp; Meinolf Braeutigam<br/>
 <br />We can&#39;t say what Jag is going to do because it sounds like it might involve Mi5 scrambling a grab squad.
-
-More at: http://manurevah.com/lhr/ and http://jagernot.com/lhr/
+<br/>
+More at: <a href="http://manurevah.com/lhr/">http://manurevah.com/lhr/</a> and
+<a href="http://jagernot.com/lhr/">http://jagernot.com/lhr/</a><br/>
 </li>
-
+<br/>
 <li><strong><a href="https://twitter.com/#!/fakebitpoly">Fakebit Poly</a></strong>
- - Wiimote-controlled Indy dance duo featuring The Dave Green
+ - Wiimote-controlled Indy dance duo featuring The Dave Green<br/>
 <br />They are scared of their own power? No! They&#39;re playing top of the bill at the Dorkbot Christmas Special 2011!
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/24987280@N00/6527367121"><img border="0" alt="Dorkbot Xmas 2011" src="http://farm8.static.flickr.com/7175/6527367121_82d8d4341a_s.jpg" /></a><a href="http://www.flickr.com/photos/24987280@N00/6527368397"><img border="0" alt="Dorkbot Xmas 2011" src="http://farm8.static.flickr.com/7171/6527368397_3e7305c599_s.jpg" /></a><a href="http://www.flickr.com/photos/24987280@N00/6527365935"><img border="0" alt="Dorkbot Xmas 2011" src="http://farm8.static.flickr.com/7142/6527365935_43ffef7168_s.jpg" /></a><a href="http://www.flickr.com/photos/24987280@N00/6527364635"><img border="0" alt="Dorkbot Xmas 2011" src="http://farm8.static.flickr.com/7028/6527364635_9ef09637f2_s.jpg" /></a><br />
-
+<br/>
