--- a/_posts/2012-01-25-77.html
+++ b/_posts/2012-01-25-77.html
@@ -10,36 +10,36 @@ tags:
     - Andrew Mcpherson
     - xname
 ---
-
-Featuring presentations concerning:
+<br/>
+Featuring presentations concerning:<br/>
 <ul>
-
+<br/>
 <li><strong>The Healing Power of Electricity</strong>
- - Dr. Anthony Fry
+ - Dr. Anthony Fry<br/>
 <br />Psychiatric revelations with reflections on the secrets of the brain, and its mind and soul in the 19th &amp; 21st centuries.
 </li>
-
+<br/>
 <li><strong><a href="http://www.google.co.uk/url?sa=t&amp;rct=j&amp;q=cruftfest&amp;source=web&amp;cd=1&amp;ved=0CCIQFjAA&amp;url=http%3A%2F%2Fwww.flickr.com%2Fphotos%2F58917033%40N07%2Fsets%2F72157628097750005%2F&amp;ei=wOECT6_nI5DTsgaAgrGADA&amp;usg=A">Cruftfest 2012!</a></strong>
- - MAT Labbers
+ - MAT Labbers<br/>
 <br />Cruftfest 2011 brought you all kinds of wonderfully strange things with electricity - Cruftfest 2012 will be bigger, better and more crufty!
 </li>
-
+<br/>
 <li><strong><a href="http://andrewmcpherson.org/research.html">Compositions and Research</a></strong>
- - Andrew Mcpherson
+ - Andrew Mcpherson<br/>
 <br />The creator of the magnetic resonator piano shows off some of his latest work: electromagnetically-augmented acoustic piano and a multi-touch-sensitive piano keyboard.
-
+<br/>
 </li>
-
+<br/>
 <li><strong><a href="http://xname.cc/">radioubique</a></strong>
- - xname
+ - xname<br/>
 <br />performance for room, light-bots and the internet
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/12693993@N00/6763106295"><img border="0" alt="" src="http://farm8.static.flickr.com/7144/6763106295_450b3e8f73_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763074419"><img border="0" alt="" src="http://farm8.static.flickr.com/7171/6763074419_954abc8253_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763076749"><img border="0" alt="" src="http://farm8.static.flickr.com/7161/6763076749_2f3e34f1f3_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763077301"><img border="0" alt="" src="http://farm8.static.flickr.com/7155/6763077301_b95d90271f_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763057227"><img border="0" alt="" src="http://farm8.static.flickr.com/7033/6763057227_ebc0558986_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763056683"><img border="0" alt="" src="http://farm8.static.flickr.com/7009/6763056683_1881c2aa46_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763076271"><img border="0" alt="" src="http://farm8.static.flickr.com/7014/6763076271_f955a80cc0_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763057749"><img border="0" alt="" src="http://farm8.static.flickr.com/7012/6763057749_cd54d86808_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763077815"><img border="0" alt="" src="http://farm8.static.flickr.com/7155/6763077815_c96379e5a2_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763055031"><img border="0" alt="" src="http://farm8.static.flickr.com/7156/6763055031_d693132f0a_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763056155"><img border="0" alt="" src="http://farm8.static.flickr.com/7031/6763056155_60061f321c_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763054547"><img border="0" alt="" src="http://farm8.static.flickr.com/7168/6763054547_cc281794c0_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763074963"><img border="0" alt="" src="http://farm8.static.flickr.com/7032/6763074963_32be53fdb4_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763055635"><img border="0" alt="" src="http://farm8.static.flickr.com/7015/6763055635_5aa123f198_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763084759"><img border="0" alt="" src="http://farm8.static.flickr.com/7019/6763084759_cd380519a6_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763053905"><img border="0" alt="" src="http://farm8.static.flickr.com/7152/6763053905_96446142f2_s.jpg" /></a><a href="http://www.flickr.com/photos/12693993@N00/6763075607"><img border="0" alt="" src="http://farm8.static.flickr.com/7029/6763075607_42761eb1ee_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762335749"><img border="0" alt="dorkbotldn77-tobycam-10-DSC_8026" src="http://farm8.static.flickr.com/7151/6762335749_4ba8ba4608_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762334181"><img border="0" alt="dorkbotldn77-tobycam-7-DSC_8018" src="http://farm8.static.flickr.com/7142/6762334181_c87fa5e474_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762335283"><img border="0" alt="dorkbotldn77-tobycam-9-DSC_8023" src="http://farm8.static.flickr.com/7158/6762335283_2660375b04_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762332549"><img border="0" alt="dorkbotldn77-tobycam-4-DSC_7978" src="http://farm8.static.flickr.com/7006/6762332549_5e6b6f9eb6_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762330023"><img border="0" alt="dorkbotldn77-tobycam-1-DSC_7963" src="http://farm8.static.flickr.com/7013/6762330023_03ac6210fe_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762331279"><img border="0" alt="dorkbotldn77-tobycam-3-DSC_7970" src="http://farm8.static.flickr.com/7005/6762331279_f225a7e7a4_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762330577"><img border="0" alt="dorkbotldn77-tobycam-2-DSC_7968" src="http://farm8.static.flickr.com/7006/6762330577_70088c534f_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762333529"><img border="0" alt="dorkbotldn77-tobycam-6-DSC_8005" src="http://farm8.static.flickr.com/7154/6762333529_f4501272ba_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762332973"><img border="0" alt="dorkbotldn77-tobycam-5-DSC_7984" src="http://farm8.static.flickr.com/7008/6762332973_b005d8716a_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6762334827"><img border="0" alt="dorkbotldn77-tobycam-8-DSC_8022" src="http://farm8.static.flickr.com/7015/6762334827_2a03ce2c60_s.jpg" /></a><br />
-
+<br/>
