--- a/_posts/2012-03-28-79.html
+++ b/_posts/2012-03-28-79.html
@@ -11,41 +11,41 @@ tags:
     - Jag
     - Ollie Palmer
 ---
-
-Featuring the alluring and sultry...
+<br/>
+Featuring the alluring and sultry...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://webprojects.eecs.qmul.ac.uk/dwhm3/website/?page_id=9">“P-bROCK” Digital Bagpipes and Ukulele Hero</a></strong>
- - Duncan Menzies
+ - Duncan Menzies<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.transphormetic.com/">Transphormetic</a></strong>
- - Paul Prudence
+ - Paul Prudence<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://prehensile.soup.io/">Pet Spambots</a></strong>
- - Henry Cooke
+ - Henry Cooke<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://dinisnoise.org/bio/">the art of passionate following</a></strong>
- - Jag
+ - Jag<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://antballet.org/">Ant Ballet</a></strong>
- - Ollie Palmer
+ - Ollie Palmer<br/>
 <br />Designer/artist Ollie Palmer presents the trials, tribulations and technology behind the world&#39;s first Ant Ballet.
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/58917033@N07/7038245125"><img border="0" alt="2012-03-28 21-05-50 tbz-minime-131" src="http://farm8.static.flickr.com/7247/7038245125_62b6ac17c5_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/6892149184"><img border="0" alt="2012-03-28 20-30-31 tbz-minime-119" src="http://farm8.static.flickr.com/7206/6892149184_c8f071b1e9_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/7038242077"><img border="0" alt="2012-03-28 21-57-32 tbz-minime-134" src="http://farm8.static.flickr.com/7088/7038242077_9b4b9b4820_s.jpg" /></a><a href="http://www.flickr.com/photos/58917033@N07/7038242961"><img border="0" alt="2012-03-28 20-34-33 tbz-minime-129" src="http://farm8.static.flickr.com/7115/7038242961_980cb5ed15_s.jpg" /></a><br />
-
-
+<br/>
+<br/>
