--- a/_posts/2012-04-25-80.html
+++ b/_posts/2012-04-25-80.html
@@ -10,26 +10,29 @@ tags:
     - Sophie Macdonald
     - Paul Nikkel
 ---
-Featuring three presentations by
-
-The Geezers Club - The Geezers
-
-    The Geezers, a club for over 50's men in Tower Hamlets, present their ideas
-    and research on sustainable energy solutions.
-
-Sketchpatch Livecoding - Davide Della Cassa and Sophie Macdonald
-
-    Livecodelab is a special secret place where you can make fancy "on-the-fly"
-    3d visuals and play awesomely offbeat (literally) sounds.  "On-the-fly" meaning:
-    as you type. Type just three letters: "box", and boom!  a box appears. No
-    clicking play, no waiting, no nothing.
-
-Stencil - Paul Nikkel
-
-    A eurorack base system comprised of modular analogue video synthesisers
-    combined with audio waveform generators. The audio signal is manipulated and
-    converted into RGB video.The result is a visualisation of sound synthesised from
-    audio signals and creating an incomplete visual artefact of the original audio.
-
-And opendorks from anyone with something to talk about for up to 10 minutes (let
-us know beforehand if you can)
+Featuring three presentations by<br/>
+<br/>
+The Geezers Club - The Geezers<br/>
+<br/>
+    The Geezers, a club for over 50's men in Tower Hamlets, present their ideas<br/>
+    and research on sustainable energy solutions.<br/>
+<br/>
+Sketchpatch Livecoding - Davide Della Cassa and Sophie Macdonald<br/>
+<br/>
+    Livecodelab is a special secret place where you can make fancy "on-the-fly"<br/>
+    3d visuals and play awesomely offbeat (literally) sounds.  "On-the-fly"
+meaning:<br/>
+    as you type. Type just three letters: "box", and boom!  a box appears. No<br/>
+    clicking play, no waiting, no nothing.<br/>
+<br/>
+Stencil - Paul Nikkel<br/>
+<br/>
+    A eurorack base system comprised of modular analogue video synthesisers<br/>
+    combined with audio waveform generators. The audio signal is manipulated and<br/>
+    converted into RGB video.The result is a visualisation of sound synthesised
+from<br/>
+    audio signals and creating an incomplete visual artefact of the original
+audio.<br/>
+<br/>
+And opendorks from anyone with something to talk about for up to 10 minutes (let<br/>
+us know beforehand if you can)<br/>
