--- a/_posts/2012-05-30-81.html
+++ b/_posts/2012-05-30-81.html
@@ -10,37 +10,49 @@ tags:
     - Evan Raskob
     - Simon Katan
 ---
-Featuring the dazzling and mellifluous...
-
-- The Diasynchronoscope (<a href="http://www.doc.gold.ac.uk/diasynchronoscope/?p=260">http://www.doc.gold.ac.uk/diasynchronoscope/?p=260</a>)
-- Bruno Mathez and Carol MacGillivray
-
-    The Diasynchronoscope project is a joint artistic adventure in a whole new
-    medium of choreographed time. The name Diasynchronoscope comes from combining
-    diachronic, (the study of a phenomenon as it changes through time) with
-    synchronous and scope (view). In being so named, it evokes the early animation
-    simulators such as the phenakistoscope and the zoetrope which we regard as
-    direct ancestors of the project acting both as art objects and experimental
-    media.
-
-- Projection-mapping projects (<a href="http://github.com/pixelpusher/CreativeCode">http://github.com/pixelpusher/CreativeCode</a>)
-- Evan Raskob
-
-    Evan will show some of his open source projection-mapping work developed as
-    part of his residency at Ravensbourne this year, and for an upcoming Openlab
-    Workshops (<a href="http://openlabworkshops.org/">http://openlabworkshops.org/</a>) workshop. To put this in context, Evan
-    will explore a little history of projecting on non-rectangular things, and
-    how/why the physical world is becoming yet another computer screen.
-
-- Sound Circuit (<a href="http://simonkatan.co.uk/">http://simonkatan.co.uk/</a>)
-- Simon Katan
-
-    Simon will demo his visual sequencer Sound Circuit, built in OpenFrameworks
-    and inspired by the impossible spaces found in the two dimensional graphics of
-    early computer games such as Asteroids and Pacman.  Rather than employing a
-    conventional studio-derived layout, a virtual tape-head travels through a, two
-    dimensional, wrapped space along tracks that can be freely inter-connected with
-    sonic events being represented an array of animated graphics, which are
-    triggered as the tape head passes over them. With various algorithms guiding the
-    tape-head through the resultant network, the topological layout of the tracks
-    directly influence the macro form of the music.
+Featuring the dazzling and mellifluous...<br/>
+<br/>
+- The Diasynchronoscope (<a
+href="http://www.doc.gold.ac.uk/diasynchronoscope/?p=260">http://www.doc.gold.ac.uk/diasynchronoscope/?p=260</a>)<br/>
+- Bruno Mathez and Carol MacGillivray<br/>
+<br/>
+    The Diasynchronoscope project is a joint artistic adventure in a whole new<br/>
+    medium of choreographed time. The name Diasynchronoscope comes from
+combining<br/>
+    diachronic, (the study of a phenomenon as it changes through time) with<br/>
+    synchronous and scope (view). In being so named, it evokes the early
+animation<br/>
+    simulators such as the phenakistoscope and the zoetrope which we regard as<br/>
+    direct ancestors of the project acting both as art objects and experimental<br/>
+    media.<br/>
+<br/>
+- Projection-mapping projects (<a
+href="http://github.com/pixelpusher/CreativeCode">http://github.com/pixelpusher/CreativeCode</a>)<br/>
+- Evan Raskob<br/>
+<br/>
+    Evan will show some of his open source projection-mapping work developed as<br/>
+    part of his residency at Ravensbourne this year, and for an upcoming Openlab<br/>
+    Workshops (<a
+href="http://openlabworkshops.org/">http://openlabworkshops.org/</a>) workshop.
+To put this in context, Evan<br/>
+    will explore a little history of projecting on non-rectangular things, and<br/>
+    how/why the physical world is becoming yet another computer screen.<br/>
+<br/>
+- Sound Circuit (<a
+href="http://simonkatan.co.uk/">http://simonkatan.co.uk/</a>)<br/>
+- Simon Katan<br/>
+<br/>
+    Simon will demo his visual sequencer Sound Circuit, built in OpenFrameworks<br/>
+    and inspired by the impossible spaces found in the two dimensional graphics
+of<br/>
+    early computer games such as Asteroids and Pacman.  Rather than employing a<br/>
+    conventional studio-derived layout, a virtual tape-head travels through a,
+two<br/>
+    dimensional, wrapped space along tracks that can be freely inter-connected
+with<br/>
+    sonic events being represented an array of animated graphics, which are<br/>
+    triggered as the tape head passes over them. With various algorithms guiding
+the<br/>
+    tape-head through the resultant network, the topological layout of the
+tracks<br/>
+    directly influence the macro form of the music.<br/>
