--- a/_posts/2012-06-23-Dorkboat2012.html
+++ b/_posts/2012-06-23-Dorkboat2012.html
@@ -10,33 +10,54 @@ tags:
     - James Bridle
     - Fakebit Polytechnic
 ---
-
-Ahoy! It's...
-                   ,:',:`,:'
-   /\           __||_||_||_||__
- _//\\     ____["""""""""""""""]____
-//   |\    \ " '''''''''''''''''''' \
-dorkboat~2~^~^~^~^~^~^~^~^~~^~^~^^~~^~^
-
-To celebrate Alan Turing's 100th birthday, June's Dorkbotlondon will happen on a boat. At 4:45pm on Saturday 23rd June 2012,  We'll be sailing from Westminster pier, passing by Tower Bridge and then to Kew, while enjoying dorkboat presentations by people doing strange things with electricity. There might be a prize for the best Turing costume.
-
-When we get to Kew we'll head across the bridge to the Waterman's gallery for some curry and a geek cabaret, then more presentations and performances and a wander around the latest exhibition at their  International Festival of Digital Arts (http://bit.ly/IQ7B9O)
-
-This is limited to 90 *advance tickets only*, available here:https://dorkboat.eventwax.com/dorkboat-2012/ (they sell quick!)
-
-£19.99 including the boat trip and an Indian buffet dinner, and discounted entry to the BEAM festival that weekend!*
-
-The Dorkboat schedule is not yet fixed, but will include (in no particular order):
-
-- James Larsson  (http://tinyurl.com/mj3hf9)
-- Anna Dimitriu (http://www.normalflora.co.uk/)
-- James Bridle (http://shorttermmemoryloss.com)
-- FakeBitPolytechnic (http://www.fakebitpolytechnic.com/)
-
-and more to tbc.
-
-If you've got something watery to show/perform, or something relating to Alan Turing, the Thames (or something we'll pass on the banks from Tower Bridge to Kew), let us know... (dorkbotlondon@dorkbot.org)
-
-See you then!
-
-* The lovely people at http://www.beamfestival.com/ are also offering a Dorkboat sandwich deal. Travel on the Dorkboat and get discounted day tickets, you could even stay up North West for their Saturday sleepover!
+<br/>
+Ahoy! It's...<br/>
+                   ,:',:`,:'<br/>
+   /\           __||_||_||_||__<br/>
+ _//\\     ____["""""""""""""""]____<br/>
+//   |\    \ " '''''''''''''''''''' \<br/>
+dorkboat~2~^~^~^~^~^~^~^~^~~^~^~^^~~^~^<br/>
+<br/>
+To celebrate Alan Turing's 100th birthday, June's Dorkbotlondon will happen on a
+boat. At 4:45pm on Saturday 23rd June 2012,  We'll be sailing from Westminster
+pier, passing by Tower Bridge and then to Kew, while enjoying dorkboat
+presentations by people doing strange things with electricity. There might be a
+prize for the best Turing costume.<br/>
+<br/>
+When we get to Kew we'll head across the bridge to the Waterman's gallery for
+some curry and a geek cabaret, then more presentations and performances and a
+wander around the latest exhibition at their  International Festival of Digital
+Arts (<a href="http://bit.ly/IQ7B9O">http://bit.ly/IQ7B9O</a>)<br/>
+<br/>
+This is limited to 90 *advance tickets only*, available here:<a
+href="https://dorkboat.eventwax.com/dorkboat-2012/">https://dorkboat.eventwax.com/dorkboat-2012/</a>
+(they sell quick!)<br/>
+<br/>
+£19.99 including the boat trip and an Indian buffet dinner, and discounted entry
+to the BEAM festival that weekend!*<br/>
+<br/>
+The Dorkboat schedule is not yet fixed, but will include (in no particular
+order):<br/>
+<br/>
+- James Larsson  (<a
+href="http://tinyurl.com/mj3hf9">http://tinyurl.com/mj3hf9</a>)<br/>
+- Anna Dimitriu (<a
+href="http://www.normalflora.co.uk/">http://www.normalflora.co.uk/</a>)<br/>
+- James Bridle <a
+href="http://shorttermmemoryloss.com">(http://shorttermmemoryloss.com</a>)<br/>
+- FakeBitPolytechnic (<a
+href="http://www.fakebitpolytechnic.com/">http://www.fakebitpolytechnic.com/</a>)<br/>
+<br/>
+and more to tbc.<br/>
+<br/>
+If you've got something watery to show/perform, or something relating to Alan
+Turing, the Thames (or something we'll pass on the banks from Tower Bridge to
+Kew), let us know... (<a
+href="mailto:dorkbotlondon@dorkbot.org">dorkbotlondon@dorkbot.org</a>)<br/>
+<br/>
+See you then!<br/>
+<br/>
+* The lovely people at <a
+href="http://www.beamfestival.com/">http://www.beamfestival.com/</a> are also
+offering a Dorkboat sandwich deal. Travel on the Dorkboat and get discounted day
+tickets, you could even stay up North West for their Saturday sleepover!<br/>
