--- a/_posts/2012-11-28-82.html
+++ b/_posts/2012-11-28-82.html
@@ -12,43 +12,46 @@ tags:
     - Ben Garrod
     - Alias Cummins
 ---
-Dear Dorkbots, we're doing a special one!
-
-             __||_||_||_||__
-=====|  ____["""""""""""""""]____
-=====|  \ " '''''''''''''''''''' \
-====dorkboat~STUBNITZ~^~^~^~^~^~~^~^~^~~^~^~^^~~^~^^~~^~^~^^~~^~
-
-After too long a break, we're dorkboating on the Thames again next Wednesday,
-this time aboard the amazing MS Stubnitz. One *important* thing, if you want to
-come, just email <a href="mailto:invited@stubnitz.com">invited@stubnitz.com</a> for entry.
-
-Then fasten your electrically insulated life vests and get ready for....
-
-dorkbotlondon #82!
-
-^~^~^^~~^~ Featuring the soothing and powerful...^^~~^~^^~~^~^~^^
-
-- Shauna Concannon presenting The Hacked Human Orchestra.
-- Chrisantha Fernando and Ed Burton presenting Darwinian Neurodynamic Cognitive
-  Architectures for Playful Robot Kittens.
-- Ben Garrod working around and through and away-from technology's relationship
-  with humanity.
-- Alias Cummins opendorking on Open Source C++ Development with Cinderblock
-  SpriteSheet.
-
-More info: <a href="http://dorkbotlondon.org/event/dorkbotlondon82/">http://dorkbotlondon.org/event/dorkbotlondon82/</a>
-
-Location
-
-- MS Stubnitz, Connaught Bridge Pier, London E16 2BU
-
-^~^~^^~~^~ The unbelievably fantastic venue ^^~~^~^^~~^~^~^^
-
+Dear Dorkbots, we're doing a special one!<br/>
+<br/>
+             __||_||_||_||__<br/>
+=====|  ____["""""""""""""""]____<br/>
+=====|  \ " '''''''''''''''''''' \<br/>
+====dorkboat~STUBNITZ~^~^~^~^~^~~^~^~^~~^~^~^^~~^~^^~~^~^~^^~~^~<br/>
+<br/>
+After too long a break, we're dorkboating on the Thames again next Wednesday,<br/>
+this time aboard the amazing MS Stubnitz. One *important* thing, if you want to<br/>
+come, just email <a href="mailto:invited@stubnitz.com">invited@stubnitz.com</a>
+for entry.<br/>
+<br/>
+Then fasten your electrically insulated life vests and get ready for....<br/>
+<br/>
+dorkbotlondon #82!<br/>
+<br/>
+^~^~^^~~^~ Featuring the soothing and powerful...^^~~^~^^~~^~^~^^<br/>
+<br/>
+- Shauna Concannon presenting The Hacked Human Orchestra.<br/>
+- Chrisantha Fernando and Ed Burton presenting Darwinian Neurodynamic Cognitive<br/>
+  Architectures for Playful Robot Kittens.<br/>
+- Ben Garrod working around and through and away-from technology's relationship<br/>
+  with humanity.<br/>
+- Alias Cummins opendorking on Open Source C++ Development with Cinderblock<br/>
+  SpriteSheet.<br/>
+<br/>
+More info: <a
+href="http://dorkbotlondon.org/event/dorkbotlondon82/">http://dorkbotlondon.org/event/dorkbotlondon82/</a><br/>
+<br/>
+Location<br/>
+<br/>
+- MS Stubnitz, Connaught Bridge Pier, London E16 2BU<br/>
+<br/>
+^~^~^^~~^~ The unbelievably fantastic venue ^^~~^~^^~~^~^~^^<br/>
+<br/>
 <a href="http://ms.stubnitz.com/">http://ms.stubnitz.com/</a>
-
-The Motorship Stubnitz is an 80 meters long ex East German fishing vessel
-transformed in 1992 into a moving platform for cultural research and exchange.
-
-To add your photos of the event to our website, upload them to <a href="http://flickr.com">flickr.com</a> with
-the tag "dorkbotlondon82".
+<br/>
+The Motorship Stubnitz is an 80 meters long ex East German fishing vessel<br/>
+transformed in 1992 into a moving platform for cultural research and exchange.<br/>
+<br/>
+To add your photos of the event to our website, upload them to <a
+href="http://flickr.com">flickr.com</a> with<br/>
+the tag "dorkbotlondon82".<br/>
