--- a/_posts/2012-12-19-83.html
+++ b/_posts/2012-12-19-83.html
@@ -11,48 +11,51 @@ tags:
     - Jokubar Dargis
     - Tim Monsees
 ---
-Avast!
-
-Back due to popular demand It's....
-
-             __||_||_||_||__
-=====|  ____["""""""""""""""]____
-=====|  \ " '''''''''''''''''''' \
-====dorkboat~STUBNITZ~II~^~^~^~^~~^~^~^~~^~^~^^~~^~^^~~^~^~^^~~^~
-
-Yes we are back aboard the marvellous ms.Stubnitz for our Xmas party!
-People seemed to like it last time (<a href="http://bit.ly/Uct5Du">http://bit.ly/Uct5Du</a>) - so come!
-_____________________________________________________________________
-|*NB* email <a href="mailto:invited@stubnitz.com">invited@stubnitz.com</a> to inform the crew you'll be coming.|
-|If you would like the Stubnitz to stay in London, you can also chip |
-|in to their campaign funds by paypalling: <a href="http://bit.ly/VEozwQ">http://bit.ly/VEozwQ</a>      |
+Avast!<br/>
+<br/>
+Back due to popular demand It's....<br/>
+<br/>
+             __||_||_||_||__<br/>
+=====|  ____["""""""""""""""]____<br/>
+=====|  \ " '''''''''''''''''''' \<br/>
+====dorkboat~STUBNITZ~II~^~^~^~^~~^~^~^~~^~^~^^~~^~^^~~^~^~^^~~^~<br/>
+<br/>
+Yes we are back aboard the marvellous ms.Stubnitz for our Xmas party!<br/>
+People seemed to like it last time (<a
+href="http://bit.ly/Uct5Du">http://bit.ly/Uct5Du</a>) - so come!<br/>
+_____________________________________________________________________<br/>
+|*NB* email <a href="mailto:invited@stubnitz.com">invited@stubnitz.com</a> to
+inform the crew you'll be coming.|<br/>
+|If you would like the Stubnitz to stay in London, you can also chip |<br/>
+|in to their campaign funds by paypalling: <a
+href="http://bit.ly/VEozwQ">http://bit.ly/VEozwQ</a>      |<br/>
 ---------------------------------------------------------------------
 ____________________________________________________________
 Featuring the bright and glittering...
 -------------------------------------
-
-Liam Donovan: Two projects, maybe more
-- a talking guitar and a barely working self-typing type-writer
-
-Rachel Freire: Imogen Heap's Musical Gloves
-- think minority report for musicians brought to you by the DIY/maker
-  revolution.
-
-Jokubas Dargis: Echo
-- A game where you collect, recycle and destroy sounds on your way to
-  the king of space, and possibly other adventures.
-
-And open dorks from:
-
-Tim Monsees Stubnitz Projections
-- the experience and challenges of a multi-projector setup on a ship
-  (work in progress)
-
-Maybe you? If you have a 5-10 minute opendork/performance, bring it on
-the night! Let us know if you want us to list you on the site:
+<br/>
+Liam Donovan: Two projects, maybe more<br/>
+- a talking guitar and a barely working self-typing type-writer<br/>
+<br/>
+Rachel Freire: Imogen Heap's Musical Gloves<br/>
+- think minority report for musicians brought to you by the DIY/maker<br/>
+  revolution.<br/>
+<br/>
+Jokubas Dargis: Echo<br/>
+- A game where you collect, recycle and destroy sounds on your way to<br/>
+  the king of space, and possibly other adventures.<br/>
+<br/>
+And open dorks from:<br/>
+<br/>
+Tim Monsees Stubnitz Projections<br/>
+- the experience and challenges of a multi-projector setup on a ship<br/>
+  (work in progress)<br/>
+<br/>
+Maybe you? If you have a 5-10 minute opendork/performance, bring it on<br/>
+the night! Let us know if you want us to list you on the site:<br/>
 <a href="mailto:dorkbotlondon@dorkbot.org">dorkbotlondon@dorkbot.org</a>
-
-Photos
+<br/>
+Photos<br/>
 -------
 
 To add your photos here, upload them to <a href="http://flickr.com">flickr.com</a> with the tag
