--- a/_posts/2013-10-23-84.html
+++ b/_posts/2013-10-23-84.html
@@ -11,35 +11,37 @@ tags:
     - Henry Cooke
     - Mike Harrison
 ---
-The world's latest London Dorkbot comes to the Greenwich Peninsula courtest of
-Stream Arts.  Come listen to your favourite Dorks and drink some Meantime beers
-with us! All proceeds go to help Stream Arts (a registered arts charity) pay for
-its space and fund future events.
-
-Featuring:
-
-Sarah Angliss:
-"A demo some of my latest work. I'm attempting to imbue non-figurative objects
-with minimal human animacy to create something that's uncanny but not obviously
-humanlike - and to find odd but intuitive couplings between everyday objects and
-music. A little bit about it here: <a href="http://www.sarahangliss.com/robots/trace">http://www.sarahangliss.com/robots/trace</a>"
-
-Dave Green:
-"An opendork about my Arduino MIDI 'fully programmable open hardware 8-bit
-keyboard… for less than £30' with new features since London Maker Faire etc
+The world's latest London Dorkbot comes to the Greenwich Peninsula courtest of<br/>
+Stream Arts.  Come listen to your favourite Dorks and drink some Meantime beers<br/>
+with us! All proceeds go to help Stream Arts (a registered arts charity) pay for<br/>
+its space and fund future events.<br/>
+<br/>
+Featuring:<br/>
+<br/>
+Sarah Angliss:<br/>
+"A demo some of my latest work. I'm attempting to imbue non-figurative objects<br/>
+with minimal human animacy to create something that's uncanny but not obviously<br/>
+humanlike - and to find odd but intuitive couplings between everyday objects and<br/>
+music. A little bit about it here: <a
+href="http://www.sarahangliss.com/robots/trace">http://www.sarahangliss.com/robots/trace</a>"<br/>
+<br/>
+Dave Green:<br/>
+"An opendork about my Arduino MIDI 'fully programmable open hardware 8-bit<br/>
+keyboard… for less than £30' with new features since London Maker Faire etc<br/>
 <a href="http://www.cheapsynth.com/">http://www.cheapsynth.com/</a>"
-
-Evan Raskob:
-The Cross-Squawk project & making mechanical birds & class warfare.
+<br/>
+Evan Raskob:<br/>
+The Cross-Squawk project & making mechanical birds & class warfare.<br/>
 <a href="http://bit.ly/109euRD">http://bit.ly/109euRD</a>
-
-Henry Cooke:
-Faces in the Cloud is an automated experiment in machine pareidolia by Henry
-Cooke. Henry will be talking about how he ended up making it, the processes it
-uses and what edge-cases of computer perception can teach us about their and our
-perceptive systems. <a href="http://facesinthecloud.tumblr.com/">http://facesinthecloud.tumblr.com/</a>
-
-Mike Harrison:
-Something to do with "Acoustic levitation!"
-
-And maybe more OpenDorks!
+<br/>
+Henry Cooke:<br/>
+Faces in the Cloud is an automated experiment in machine pareidolia by Henry<br/>
+Cooke. Henry will be talking about how he ended up making it, the processes it<br/>
+uses and what edge-cases of computer perception can teach us about their and our<br/>
+perceptive systems. <a
+href="http://facesinthecloud.tumblr.com/">http://facesinthecloud.tumblr.com/</a><br/>
+<br/>
+Mike Harrison:<br/>
+Something to do with "Acoustic levitation!"<br/>
+<br/>
+And maybe more OpenDorks!<br/>
