--- a/_posts/2013-12-05-85.html
+++ b/_posts/2013-12-05-85.html
@@ -11,48 +11,56 @@ tags:
     - Peter Todd
 ---
 <a href="http://dorkbot85.eventbrite.com">http://dorkbot85.eventbrite.com</a>
-
-Rob Phillips speaks about bees & labs and DIY tech:
-
-The BeeLab project is a partnership between Horizon Digital Economy Research
+<br/>
+Rob Phillips speaks about bees & labs and DIY tech:<br/>
+<br/>
+The BeeLab project is a partnership between Horizon Digital Economy Research<br/>
 <a href="http://www.horizon.ac.uk/">(http://www.horizon.ac.uk/)</a>, Robert Phillips <a href="http://www.rdphillips.co.uk/">(http://www.rdphillips.co.uk/)</a>,
-Technology Will Save Us <a href="http://technologywillsaveus.org/">(http://technologywillsaveus.org/)</a>, The Honey Club
-(<a href="http://honeyclub.org/">http://honeyclub.org/</a>) and The British Beekeepers Association
+Technology Will Save Us <a
+href="http://technologywillsaveus.org/">(http://technologywillsaveus.org/)</a>,
+The Honey Club<br/>
+(<a href="http://honeyclub.org/">http://honeyclub.org/</a>) and The British
+Beekeepers Association<br/>
 <a href="http://www.bbka.org.uk/">(http://www.bbka.org.uk/)</a>, the project aims to enable the beekeeping community
-to enhance the care for bees by harnessing the power of open design, DIY
-technology and citizen science.
-
-Over the past few months, Bee Lab has put on a series of hackdays bringing
-together technologists, product designers and engineers to work with beekeepers
-to co-create customisable, monitoring devices that can be inserted into hives to
-sense different signals for the beekeeper to read – including frame or feeder
-weight, whole hive weight, temperature and humidity. The idea is that the more
-that the bees can communicate to their beekeeper, the more the beekeeper can
-understand and respond to them without even opening up the hive.
-
-
-
-Nick Rothwell (<a href="http://cassiel.com/">http://cassiel.com/</a>) discusses his recent array of projects
-possibly including Arduino-connected-to-web-servers, John Whitney's generative
-works, cancer-related art for the Wellcome Trust, and using Clojure, Field, &
-Overtone.
-
-
-
-Camille Baker (<a href="http://www.swampgirl67.net/">http://www.swampgirl67.net/</a>) expounds on upcoming events and ways
-artists and techies can get involved and put in proposals for the residencies
-they can be apart of over the next few months:
-
-ICT & ART Connect (<a href="http://www.ict-art-connect.eu/about/">http://www.ict-art-connect.eu/about/</a>) sets out to bring
-together artists and technologists to explore new ways of working.
-Collaborative acts of co-creation, together with an open and multidisciplinary
-discussion, will foster the bringing together of art and technology.  Recurring
-open calls for residencies will be offered to pairings willing to contribute a
-pilot project to the initiative. Moreover, all events will provide a space of
-discussion and creation through multidisciplinary round-tables, workshops,
-‘hackathons’ and demonstrations.
-
-
-
-Peter Todd wows us with some realtime fractal eye-candy for the iPad
-(<a href="http://www.fractaleid.com/">http://www.fractaleid.com/</a>)
+to enhance the care for bees by harnessing the power of open design, DIY<br/>
+technology and citizen science.<br/>
+<br/>
+Over the past few months, Bee Lab has put on a series of hackdays bringing<br/>
+together technologists, product designers and engineers to work with beekeepers<br/>
+to co-create customisable, monitoring devices that can be inserted into hives to<br/>
+sense different signals for the beekeeper to read – including frame or feeder<br/>
+weight, whole hive weight, temperature and humidity. The idea is that the more<br/>
+that the bees can communicate to their beekeeper, the more the beekeeper can<br/>
+understand and respond to them without even opening up the hive.<br/>
+<br/>
+<br/>
+<br/>
+Nick Rothwell (<a href="http://cassiel.com/">http://cassiel.com/</a>) discusses
+his recent array of projects<br/>
+possibly including Arduino-connected-to-web-servers, John Whitney's generative<br/>
+works, cancer-related art for the Wellcome Trust, and using Clojure, Field, &<br/>
+Overtone.<br/>
+<br/>
+<br/>
+<br/>
+Camille Baker (<a
+href="http://www.swampgirl67.net/">http://www.swampgirl67.net/</a>) expounds on
+upcoming events and ways<br/>
+artists and techies can get involved and put in proposals for the residencies<br/>
+they can be apart of over the next few months:<br/>
+<br/>
+ICT & ART Connect (<a
+href="http://www.ict-art-connect.eu/about/">http://www.ict-art-connect.eu/about/</a>)
+sets out to bring<br/>
+together artists and technologists to explore new ways of working.<br/>
+Collaborative acts of co-creation, together with an open and multidisciplinary<br/>
+discussion, will foster the bringing together of art and technology.  Recurring<br/>
+open calls for residencies will be offered to pairings willing to contribute a<br/>
+pilot project to the initiative. Moreover, all events will provide a space of<br/>
+discussion and creation through multidisciplinary round-tables, workshops,<br/>
+‘hackathons’ and demonstrations.<br/>
+<br/>
+<br/>
+<br/>
+Peter Todd wows us with some realtime fractal eye-candy for the iPad<br/>
+(<a href="http://www.fractaleid.com/">http://www.fractaleid.com/</a>)<br/>
