--- a/_posts/2014-12-15-86.html
+++ b/_posts/2014-12-15-86.html
@@ -14,74 +14,76 @@ tags:
     - Dan Stowell
     - Darren Mothersele
 ---
-=== It's the much awaited...
-
-  _____             _
- |  __ \           | |
- | |  | | ___  _ __| | ___ __ ___   __ _ ___
- | |  | |/ _ \| '__| |/ / '_ ` _ \ / _` / __|
- | |__| | (_) | |  |   <| | | | | | (_| \__ \
- |_____/ \___/|_|  |_|\_\_| |_| |_|\__,_|___/
-
-A festive Dorkmas line-up featuring the amazing, the magical, the noisy, and
-the cryptic:
-
-Newsflash:
-James Larsson says...
-I've got my opendork ready: "Swords into ploughshares (extreme edition)"
-
-All welcome, no registration required. Some drinks available. Feel free to bring
-your own festive refreshments.
-
-Henry Cooke (<a href='https://twitter.com/prehensile'>@prehensile</a>)
-A talk about mysterious shortwave radio stations and
-iGwtU7UlUOVV6j+8PdjEeFG7T54s
+=== It's the much awaited...<br/>
+<br/>
+  _____             _<br/>
+ |  __ \           | |<br/>
+ | |  | | ___  _ __| | ___ __ ___   __ _ ___<br/>
+ | |  | |/ _ \| '__| |/ / '_ ` _ \ / _` / __|<br/>
+ | |__| | (_) | |  |   <| | | | | | (_| \__ \<br/>
+ |_____/ \___/|_|  |_|\_\_| |_| |_|\__,_|___/<br/>
+<br/>
+A festive Dorkmas line-up featuring the amazing, the magical, the noisy, and<br/>
+the cryptic:<br/>
+<br/>
+Newsflash:<br/>
+James Larsson says...<br/>
+I've got my opendork ready: "Swords into ploughshares (extreme edition)"<br/>
+<br/>
+All welcome, no registration required. Some drinks available. Feel free to bring<br/>
+your own festive refreshments.<br/>
+<br/>
+Henry Cooke (<a href='https://twitter.com/prehensile'>@prehensile</a>)<br/>
+A talk about mysterious shortwave radio stations and<br/>
+iGwtU7UlUOVV6j+8PdjEeFG7T54s<br/>
 <a href="http://www.prehensile.co.uk">www.prehensile.co.uk</a> / <a href="http://prehensile.github.io/talks/playful2014/">prehensile.github.io/talks/playful2014/</a>
-twitter: <a href='https://twitter.com/prehensile'>@prehensile</a>
-
-pixelpusher (AKA Evan Raskob)
-making sound into 3D printed objects of art: sound spirals
+twitter: <a href='https://twitter.com/prehensile'>@prehensile</a><br/>
+<br/>
+pixelpusher (AKA Evan Raskob)<br/>
+making sound into 3D printed objects of art: sound spirals<br/>
 <a href="http://pixelist.info">http://pixelist.info</a>
 <a href='https://twitter.com/evanraskob'>@evanraskob</a>
-
-Giles & Wiseman
-Emilie Giles and Sarah Wiseman will present their work around eTextiles and
-accessibility in cultural spaces, including running workshops for young visually
-impaired people and creating eTextile based installations for immersive theatre.
+<br/>
+Giles & Wiseman<br/>
+Emilie Giles and Sarah Wiseman will present their work around eTextiles and<br/>
+accessibility in cultural spaces, including running workshops for young visually<br/>
+impaired people and creating eTextile based installations for immersive theatre.<br/>
 <a href="http://www.emiliegiles.co.uk/eTextiles-and-Touch-Based-Interaction-for-Accessibility">http://www.emiliegiles.co.uk/eTextiles-and-Touch-Based-Interaction-for-Accessibility</a>
 <a href='https://twitter.com/me_backwards'>@me_backwards</a> <a href='https://twitter.com/oopsohno'>@oopsohno</a>
-
-Tom Wyatt
-How we spent a year turning a caravan into a spaceship
+<br/>
+Tom Wyatt<br/>
+How we spent a year turning a caravan into a spaceship<br/>
 <a href="http://www.lhsbikeshed.com">www.lhsbikeshed.com</a>
-Tom <a href='https://twitter.com/fridgehead'>@fridgehead</a> / The Ship <a href='https://twitter.com/lhsbikeshed'>@lhsbikeshed</a>
-
-Berit Greinke
-Electromagnetic Metatextiles: exploring experimental material manipulation
-techniques to achieve periodic textile surfaces for tasks required in
-Transformation Optic devices which are considered continuous and effective at
-specific frequency bands.
+Tom <a href='https://twitter.com/fridgehead'>@fridgehead</a> / The Ship <a
+href='https://twitter.com/lhsbikeshed'>@lhsbikeshed</a><br/>
+<br/>
+Berit Greinke<br/>
+Electromagnetic Metatextiles: exploring experimental material manipulation<br/>
+techniques to achieve periodic textile surfaces for tasks required in<br/>
+Transformation Optic devices which are considered continuous and effective at<br/>
+specific frequency bands.<br/>
 <a href="http://beritgreinke.com/">http://beritgreinke.com/</a>
-
-Dan Stowell
-A small project to establish some very important geofactoids about Britain
+<br/>
+Dan Stowell<br/>
+A small project to establish some very important geofactoids about Britain<br/>
 <a href="http://www.mcld.co.uk/">http://www.mcld.co.uk/</a>
 <a href='https://twitter.com/mclduk'>@mclduk</a>
-
-Darren Mothersele / Cyril (Live Coding Visuals)
-What is live coding? where did Cyril come from? and improvised live coding
-performance.
+<br/>
+Darren Mothersele / Cyril (Live Coding Visuals)<br/>
+What is live coding? where did Cyril come from? and improvised live coding<br/>
+performance.<br/>
 <a href="http://cyrilcode.com">http://cyrilcode.com</a>
 <a href='https://twitter.com/cyrilcode'>@cyrilcode</a>
-
-+++ Open Dorks
-
-===!====!====!=====!=====!======!===!====!===
-
-BONUS: The Dorkmas Puzzle (Henry you aren't allowed to enter):
-
-Clues:  cumberbatch | flowingWater | NewZealand | thisEvent
-
-Find the question, then find the answer, then email <a href="mailto:julie@translatingnature.org">julie@translatingnature.org</a>
-with it. First email to reach the inbox with the correct answer wins. Winner
-will be announced at Dorkmas and presented with a highly covetable prize :)
+<br/>
++++ Open Dorks<br/>
+<br/>
+===!<b>====!====</b>!<b>=====!====</b>=!<b>======!===!====</b>!===<br/>
+<br/>
+BONUS: The Dorkmas Puzzle (Henry you aren't allowed to enter):<br/>
+<br/>
+Clues:  cumberbatch | flowingWater | NewZealand | thisEvent<br/>
+<br/>
+Find the question, then find the answer, then email <a
+href="mailto:julie@translatingnature.org">julie@translatingnature.org</a><br/>
+with it. First email to reach the inbox with the correct answer wins. Winner<br/>
+will be announced at Dorkmas and presented with a highly covetable prize :)<br/>
