--- a/_posts/2015-02-19-87.html
+++ b/_posts/2015-02-19-87.html
@@ -10,41 +10,43 @@ tags:
     - Pollie Barden
     - Restart Project
 ---
-Free entry, no registration required
-
-==== Tim Hunkin - <a href="http://timhunkin.co.uk">timhunkin.co.uk</a> =====
-
-Tim Hunkin is an English engineer, cartoonist, writer, and artist. He created
-the Channel Four TV series and Science Museum gallery The Secret Life of
-Machines, which explained the workings and history of various household devices.
-He has just launched a "new London arcade of home-made coin operated machines
-built by enthusiasts": <a href="http://www.novelty-automation.com">www.novelty-automation.com</a>
-twitter: <a href='https://twitter.com/NovAutomation'>@NovAutomation</a>
-
-==== James Auger - <a href="http://auger-loizeau.com">auger-loizeau.com</a> ====
-
-James Auger is a designer, researcher and lecturer whose work examines the
-social, cultural and human impact of technology and the products that exist as a
-result of its development and application. His PhD topic is Why Robot?
-Speculative design, the domestication of technology and the considered future.
-James is also a partner in the Speculative Design practice Auger-Loizeau, whose
-projects have been published and exhibited internationally, including MoMA, New
-York; 21_21, Tokyo; The Science Museum, London and the Ars Electronica festival,
-Linz, and are part of the permanent collection at MoMA.
-
-==== Pollie Barden - <a href="http://fireflygame.com">fireflygame.com</a> ====
-
-Pollie is an artist, activist and game designer who has designed games from the
-mobile platform to the urban landscape. Firefly is a tagging game that explores
-temporal memory, and exploits the balance of collaboration and competition. The
-action takes place at night. Your first strategic move is the clothing you wear.
-Players, wearing Flashing LED badges will compete to see who can steal the most
-badges from other players. However, the prize you seek may be your downfall!
-
-==== Restart Project - <a href="http://therestartproject.org">therestartproject.org</a> ====
-
-The Restart Project is a London-based social enterprise that encourages and
-empowers people to use their electronics longer, by sharing repair and
-maintenance skills. Through community and workplace events we create engaging
-opportunities to extend the lifespan of electronics and electrical equipment.
-twitter: <a href='https://twitter.com/RestartProject'>@RestartProject</a>
+Free entry, no registration required<br/>
+<br/>
+<b>==== Tim Hunkin - <a href="http://timhunkin.co.uk">timhunkin.co.uk</a> ====</b>=<br/>
+<br/>
+Tim Hunkin is an English engineer, cartoonist, writer, and artist. He created<br/>
+the Channel Four TV series and Science Museum gallery The Secret Life of<br/>
+Machines, which explained the workings and history of various household devices.<br/>
+He has just launched a "new London arcade of home-made coin operated machines<br/>
+built by enthusiasts": <a
+href="http://www.novelty-automation.com">www.novelty-automation.com</a><br/>
+twitter: <a href='https://twitter.com/NovAutomation'>@NovAutomation</a><br/>
+<br/>
+<b>==== James Auger - <a href="http://auger-loizeau.com">auger-loizeau.com</a> ====</b><br/>
+<br/>
+James Auger is a designer, researcher and lecturer whose work examines the<br/>
+social, cultural and human impact of technology and the products that exist as a<br/>
+result of its development and application. His PhD topic is Why Robot?<br/>
+Speculative design, the domestication of technology and the considered future.<br/>
+James is also a partner in the Speculative Design practice Auger-Loizeau, whose<br/>
+projects have been published and exhibited internationally, including MoMA, New<br/>
+York; 21_21, Tokyo; The Science Museum, London and the Ars Electronica festival,<br/>
+Linz, and are part of the permanent collection at MoMA.<br/>
+<br/>
+<b>==== Pollie Barden - <a href="http://fireflygame.com">fireflygame.com</a> ====</b><br/>
+<br/>
+Pollie is an artist, activist and game designer who has designed games from the<br/>
+mobile platform to the urban landscape. Firefly is a tagging game that explores<br/>
+temporal memory, and exploits the balance of collaboration and competition. The<br/>
+action takes place at night. Your first strategic move is the clothing you wear.<br/>
+Players, wearing Flashing LED badges will compete to see who can steal the most<br/>
+badges from other players. However, the prize you seek may be your downfall!<br/>
+<br/>
+==== Restart Project - <a
+href="http://therestartproject.org">therestartproject.org</a> ====<br/>
+<br/>
+The Restart Project is a London-based social enterprise that encourages and<br/>
+empowers people to use their electronics longer, by sharing repair and<br/>
+maintenance skills. Through community and workplace events we create engaging<br/>
+opportunities to extend the lifespan of electronics and electrical equipment.<br/>
+twitter: <a href='https://twitter.com/RestartProject'>@RestartProject</a><br/>
