--- a/_posts/2015-06-11-88.html
+++ b/_posts/2015-06-11-88.html
@@ -12,44 +12,44 @@ tags:
     - William Trossell
     - Stefan Dzisiewski-Smith
 ---
-
-Free entry, no registration required (+ limited refreshments, bring your own!)
-
-
-With speakers including - but not restricted to...
-
-<b>==== Sarah Angliss - <a href="http://sarahangliss.com">sarahangliss.com</a> / <a href='https://twitter.com/Therematrix'>@Therematrix</a> ====</b>
-
-A preview of new work with breath sensors that Sarah's been developing at the
-Pervasive Media Studio, Bristol. Funded by Arts Council England, it'll be part
-of a drop-in participative performance at Vivid Projects, Birmingham during this
-year's Supersonic Festival.
-
-A composer, multi-instrumentalist, roboticist and sound historian, Sarah's work
-explores her obsessions with defunct machinery, faded variety acts and European
-folklore.
-
-<b>==== David Mills - <a href="http://apocalypto.org.uk">apocalypto.org.uk</a> / <a href='https://twitter.com/DTL'>@DTL</a> ====</b>
-
+<br/>
+Free entry, no registration required (+ limited refreshments, bring your own!)<br/>
+<br/>
+<br/>
+With speakers including - but not restricted to...<br/>
+<br/>
+<b><b>==== Sarah Angliss - <a href="http://sarahangliss.com">sarahangliss.com</a> / <a href='https://twitter.com/Therematrix'>@Therematrix</a> ====</b></b>
+<br/>
+A preview of new work with breath sensors that Sarah's been developing at the<br/>
+Pervasive Media Studio, Bristol. Funded by Arts Council England, it'll be part<br/>
+of a drop-in participative performance at Vivid Projects, Birmingham during this<br/>
+year's Supersonic Festival.<br/>
+<br/>
+A composer, multi-instrumentalist, roboticist and sound historian, Sarah's work<br/>
+explores her obsessions with defunct machinery, faded variety acts and European<br/>
+folklore.<br/>
+<br/>
+<b><b>==== David Mills - <a href="http://apocalypto.org.uk">apocalypto.org.uk</a> / <a href='https://twitter.com/DTL'>@DTL</a> ====</b></b>
+<br/>
 <a href="https://twitter.com/search?q=%23xraymylunch&src=typd&vertical=default&f=tweets">#xraymylunch</a>, <a href="https://twitter.com/search?q=%23xraystuffinmylab&src=typd&vertical=default&f=tweets">#xraystuffinmylab<a/>, and using high contrast X-ray microtomography
-(XMT) with advanced image processing algorithms to read fragile historic
-documents.
-
-<b>==== Kasia Molga &amp; Adrian Goodwin - <a href="http://kasiamolga.net">kasiamolga.net</a> / <a href='https://twitter.com/olygamy'>@olygamy</a> ====</b>
-
-World Wilder Lab is a collective set up by Kasia Molga, Erik Overmeire and Ivan
-Henriques. Together with Adrian Godwin we developed a device called PlanEt which
-allows us to hack into whispers of plants. Now we are trying to figure out what
-plants are saying...
-
-<b>==== William Trossell - <a href="http://scanlabprojects.co.uk">scanlabprojects.co.uk</a> / <a href='https://twitter.com/ScanLABProjects'>@ScanLABProjects</a> ====</b>
-
-ScanLAB is an ongoing series of projects investigating the use of 3D laser
-scanning in architecture, art and film, with subjects ranging from Arctic ice
-floes to Mount Pleasant subterranean Mail Rail station.
-
-<b>==== Stefan Dzisiewski-Smith - <a href="http://bycgwtsf.com">bycgwtsf.com</a> / <a href='https://twitter.com/stefandz'>@stefandz</a> ====</b>
-
-The weirdest things that people do with - and ask about - Bare Conductive's
-electrically conductive paint, plus the paint's more "unusual properties".
-
+(XMT) with advanced image processing algorithms to read fragile historic<br/>
+documents.<br/>
+<br/>
+<b><b>==== Kasia Molga &amp; Adrian Goodwin - <a href="http://kasiamolga.net">kasiamolga.net</a> / <a href='https://twitter.com/olygamy'>@olygamy</a> ====</b></b>
+<br/>
+World Wilder Lab is a collective set up by Kasia Molga, Erik Overmeire and Ivan<br/>
+Henriques. Together with Adrian Godwin we developed a device called PlanEt which<br/>
+allows us to hack into whispers of plants. Now we are trying to figure out what<br/>
+plants are saying...<br/>
+<br/>
+<b><b>==== William Trossell - <a href="http://scanlabprojects.co.uk">scanlabprojects.co.uk</a> / <a href='https://twitter.com/ScanLABProjects'>@ScanLABProjects</a> ====</b></b>
+<br/>
+ScanLAB is an ongoing series of projects investigating the use of 3D laser<br/>
+scanning in architecture, art and film, with subjects ranging from Arctic ice<br/>
+floes to Mount Pleasant subterranean Mail Rail station.<br/>
+<br/>
+<b><b>==== Stefan Dzisiewski-Smith - <a href="http://bycgwtsf.com">bycgwtsf.com</a> / <a href='https://twitter.com/stefandz'>@stefandz</a> ====</b></b>
+<br/>
+The weirdest things that people do with - and ask about - Bare Conductive's<br/>
+electrically conductive paint, plus the paint's more "unusual properties".<br/>
+<br/>
