--- a/_posts/2015-08-23-dorkbike-2015.html
+++ b/_posts/2015-08-23-dorkbike-2015.html
@@ -5,47 +5,51 @@ start: 2015-08-23 12:00:00
 end: 2015-08-23 16:00:00
 where: dorkbike_2015
 ---
-
-Following the excellent suggestions of Electric Mike and Gordon Joly, the
-exciting news is that this year's "Dorkbike" is an easy (and short!) cycle trip
-from the Olympic Park to the salvaged neon signs of God's Own Junkyard via
-Walthamstow Pumphouse Museum: from noon-2/3pm, approx 10 miles round trip - plus
-pedestrian options (details below), and a <a href="https://www.facebook.com/events/452582228279551/">Facebook event</a> if you want to see who's
-coming...
-
-From the Orbit it should be less than 30 min across Hackney Marsh and then
-(mostly) via <a href="http://www.leytonpast.info/blackpath.html">"The Black Path"</a> to Walthamstow Pumphouse Museum:
-
+<br/>
+Following the excellent suggestions of Electric Mike and Gordon Joly, the<br/>
+exciting news is that this year's "Dorkbike" is an easy (and short!) cycle trip<br/>
+from the Olympic Park to the salvaged neon signs of God's Own Junkyard via<br/>
+Walthamstow Pumphouse Museum: from noon-2/3pm, approx 10 miles round trip - plus<br/>
+pedestrian options (details below), and a <a
+href="https://www.facebook.com/events/452582228279551/">Facebook event</a> if
+you want to see who's<br/>
+coming...<br/>
+<br/>
+From the Orbit it should be less than 30 min across Hackney Marsh and then<br/>
+(mostly) via <a href="http://www.leytonpast.info/blackpath.html">"The Black
+Path"</a> to Walthamstow Pumphouse Museum:<br/>
+<br/>
 <a href="http://www.walthamstowpumphousemuseum.org.uk/">http://www.walthamstowpumphousemuseum.org.uk/</a>
-
-- A former Victorian waste water pumping station with a (small) collection of
-vehicles and other items related to "technology and industrial history of the
-area [...] now open to the public every Sunday, from 11:00 to 16:00. Entry is
-free!"
-
-...then by 2pm we should definitely be able to make it to the salvaged neon
-signs of God's Own Junkyard near "Walthamstow Village":
-
+<br/>
+- A former Victorian waste water pumping station with a (small) collection of<br/>
+vehicles and other items related to "technology and industrial history of the<br/>
+area [...] now open to the public every Sunday, from 11:00 to 16:00. Entry is<br/>
+free!"<br/>
+<br/>
+...then by 2pm we should definitely be able to make it to the salvaged neon<br/>
+signs of God's Own Junkyard near "Walthamstow Village":<br/>
+<br/>
 <a href="http://www.godsownjunkyard.co.uk/">http://www.godsownjunkyard.co.uk/</a>
-
-- "Neon art made from found objects, retrieved and renewed waste and lights". We
-are open weekends : Friday - 11am to 5pm Saturday - 11am to 9pm Sunday - 11am to
-6pm.
-
-The Rolling Scones Cafe is open for food and drinks all weekend." (there's a map
-below of a simple quiet route from the Pumphouse Museum to Shernhall Street,
-which seems to be the main entrance to Ravenswood Industrial Estate although the
-Summit Road gate may also be open at weekends...)
-
-Not got a bike? You could potentially hire a Santander Cycle from the Hackney
-side of the Olympic park, or meet us by foot or car around 1pm at Walthamstow
-Pumphouse Museum, or 2pm at God's Own Junkyard (around 15 min walk from
-Walthamstow Central or Walthamstow Queens Road stations).
-
-NB: You are responsible for your own safety and personal possessions at all
-times - the route is mostly flat and away from main roads, but always be aware
-of potential hazards and other cyclists and pedestrians. Don't forget to bring a
-proper bike lock and spare inner tube if you can get one - plus food and drink
-unless you want to rely on cafes at the various stopping points. There are
-toilets near the start and most likely near God's Own Junkyard as well, given
-that it's next door to <a href="http://www.wildcardbrewery.co.uk/">Wildcard Brewery</a> and <a href="http://www.mothersruin.net/">Mothers Ruin</a>.
+<br/>
+- "Neon art made from found objects, retrieved and renewed waste and lights". We<br/>
+are open weekends : Friday - 11am to 5pm Saturday - 11am to 9pm Sunday - 11am to<br/>
+6pm.<br/>
+<br/>
+The Rolling Scones Cafe is open for food and drinks all weekend." (there's a map<br/>
+below of a simple quiet route from the Pumphouse Museum to Shernhall Street,<br/>
+which seems to be the main entrance to Ravenswood Industrial Estate although the<br/>
+Summit Road gate may also be open at weekends...)<br/>
+<br/>
+Not got a bike? You could potentially hire a Santander Cycle from the Hackney<br/>
+side of the Olympic park, or meet us by foot or car around 1pm at Walthamstow<br/>
+Pumphouse Museum, or 2pm at God's Own Junkyard (around 15 min walk from<br/>
+Walthamstow Central or Walthamstow Queens Road stations).<br/>
+<br/>
+NB: You are responsible for your own safety and personal possessions at all<br/>
+times - the route is mostly flat and away from main roads, but always be aware<br/>
+of potential hazards and other cyclists and pedestrians. Don't forget to bring a<br/>
+proper bike lock and spare inner tube if you can get one - plus food and drink<br/>
+unless you want to rely on cafes at the various stopping points. There are<br/>
+toilets near the start and most likely near God's Own Junkyard as well, given<br/>
+that it's next door to <a href="http://www.wildcardbrewery.co.uk/">Wildcard
+Brewery</a> and <a href="http://www.mothersruin.net/">Mothers Ruin</a>.<br/>
