--- a/_posts/2015-10-15-89.html
+++ b/_posts/2015-10-15-89.html
@@ -11,58 +11,60 @@ tags:
     - Nicola Plant
     - Douglas Cape
 ---
-
-Free entry, no registration required (+ limited refreshments, bring your own!)
-
-Don't forget you can "follow" <a href="https://twitter.com/DorkbotLondon">@DorkbotLondon on Twitter</a>, and/or 
-see who's coming <a href="https://www.facebook.com/events/865639826884766/">via the Facebook event</a>, if that's your thing
-
-With speakers including - but not restricted to...
-
-<b>==== Di Mainstone ====</b>
+<br/>
+Free entry, no registration required (+ limited refreshments, bring your own!)<br/>
+<br/>
+Don't forget you can "follow" <a
+href="https://twitter.com/DorkbotLondon">@DorkbotLondon on Twitter</a>, and/or<br/>
+see who's coming <a href="https://www.facebook.com/events/865639826884766/">via
+the Facebook event</a>, if that's your thing<br/>
+<br/>
+With speakers including - but not restricted to...<br/>
+<br/>
+<b><b>==== Di Mainstone ====</b></b>
 <a href="http://dimainstone.com/">http://dimainstone.com/</a>
 <a href="https://twitter.com/dimainstone">https://twitter.com/dimainstone</a>
-Artist, Movician, and researcher, Di Mainstone creates body-centric
-sculptures, designed to initiate movement and storytelling. Many of these
-wearable artefacts are inspired by technology. Some of them release sound
-when handled. Often, they can be modified to create new silhouettes,
-environments and functionalities. All of them tell a story.
-
-<b>==== Tine Bech ====</b>
+Artist, Movician, and researcher, Di Mainstone creates body-centric<br/>
+sculptures, designed to initiate movement and storytelling. Many of these<br/>
+wearable artefacts are inspired by technology. Some of them release sound<br/>
+when handled. Often, they can be modified to create new silhouettes,<br/>
+environments and functionalities. All of them tell a story.<br/>
+<br/>
+<b><b>==== Tine Bech ====</b></b>
 <a href="http://www.tinebech.com/">http://www.tinebech.com/</a>
 <a href="https://twitter.com/t_bech">https://twitter.com/t_bech</a>
-Tine is a professional artist and researcher using technology to
-create stunning large-scale public artworks, interactive spaces,
-wearables, and participatory games. Working with programmers,
-designers and engineers, her studio creates interactive and playful
-projects, and designs that pop up in unexpected places. From bridges
-that light up as people pass over them, to live events where
-communities swim in clouds of Olympic colours, to battles played on
-bicycles in the city, her works actively explore the relationship
-between people, technology and space.
-
-<b>==== Becky Stewart ====</b>
+Tine is a professional artist and researcher using technology to<br/>
+create stunning large-scale public artworks, interactive spaces,<br/>
+wearables, and participatory games. Working with programmers,<br/>
+designers and engineers, her studio creates interactive and playful<br/>
+projects, and designs that pop up in unexpected places. From bridges<br/>
+that light up as people pass over them, to live events where<br/>
+communities swim in clouds of Olympic colours, to battles played on<br/>
+bicycles in the city, her works actively explore the relationship<br/>
+between people, technology and space.<br/>
+<br/>
+<b><b>==== Becky Stewart ====</b></b>
 <a href="http://theleadingzero.com/">http://theleadingzero.com/</a>
 <a href="https://twitter.com/theleadingzero">https://twitter.com/theleadingzero</a>
-Becky is a creative technologist and founding member of Anti-Alias
-Labs where she engineers solutions to creative problems, often working
-with artists, designers, and musicians. She is also a co-founder of
-Codasign, a creative technology education company that runs workshop
-teaching kids and adults how to use technology to develop creative
-projects.
-
-<b>==== Nicola Plant ====</b>
+Becky is a creative technologist and founding member of Anti-Alias<br/>
+Labs where she engineers solutions to creative problems, often working<br/>
+with artists, designers, and musicians. She is also a co-founder of<br/>
+Codasign, a creative technology education company that runs workshop<br/>
+teaching kids and adults how to use technology to develop creative<br/>
+projects.<br/>
+<br/>
+<b><b>==== Nicola Plant ====</b></b>
 <a href="http://nicolaplant.co.uk/">http://nicolaplant.co.uk/</a>
 <a href="https://twitter.com/nicolaplant">https://twitter.com/nicolaplant</a>
-Nicola is a movement artist, coder and researcher. Her research
-interests are human movement and expression, embodiment,
-intersubjectivity and the vicarious experience of empathy. Nicola’s
-research asks: What qualities of movement convey the intangible
-aspects of human experience? What does it mean to be embodied? How can
-technology augment or embody the experience of embodiment?
-Specialising in motion capture, she makes movement-based interactive
-installations and experiences.
-
-<b>==== Open dorks: ====</b>
-Douglas Cape <a href="http://vimeo.com/zdouglas">http://vimeo.com/zdouglas</a>
-(...and perhaps you?)
+Nicola is a movement artist, coder and researcher. Her research<br/>
+interests are human movement and expression, embodiment,<br/>
+intersubjectivity and the vicarious experience of empathy. Nicola’s<br/>
+research asks: What qualities of movement convey the intangible<br/>
+aspects of human experience? What does it mean to be embodied? How can<br/>
+technology augment or embody the experience of embodiment?<br/>
+Specialising in motion capture, she makes movement-based interactive<br/>
+installations and experiences.<br/>
+<br/>
+<b><b>==== Open dorks: ====</b></b>
+Douglas Cape <a href="http://vimeo.com/zdouglas">http://vimeo.com/zdouglas</a><br/>
+(...and perhaps you?)<br/>
