--- a/_posts/2015-12-11-90.html
+++ b/_posts/2015-12-11-90.html
@@ -15,97 +15,102 @@ tags:
     - Betül Aksu
     - Di Mainstone
 ---
-
-Free entry, no registration required - we have a license for this one so we'll
-be running a bar. If you want to volunteer to help bar tend please email us - we
-need you! <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>
-
-(NB the bar won't be selling much by way of food so please bring snacks/cake to
-eat/share!)
-
-Don't forget you can "follow" <a href='https://twitter.com/DorkbotLondon'>@DorkbotLondon</a> on Twitter, and/or see who's coming 
-via the <a href='https://www.facebook.com/events/445127949015483/'>Facebook event</a>, if that's your thing
-
-With speakers including - but not restricted to...
-
-<b>==== Rain Ashford (<a href="https://twitter.com/rainycat">@rainycat</a>) ====</b>
+<br/>
+Free entry, no registration required - we have a license for this one so we'll<br/>
+be running a bar. If you want to volunteer to help bar tend please email us - we<br/>
+need you! <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a><br/>
+<br/>
+(NB the bar won't be selling much by way of food so please bring snacks/cake to<br/>
+eat/share!)<br/>
+<br/>
+Don't forget you can "follow" <a
+href='https://twitter.com/DorkbotLondon'>@DorkbotLondon</a> on Twitter, and/or
+see who's coming<br/>
+via the <a href='https://www.facebook.com/events/445127949015483/'>Facebook
+event</a>, if that's your thing<br/>
+<br/>
+With speakers including - but not restricted to...<br/>
+<br/>
+<b><b>==== Rain Ashford (<a href="https://twitter.com/rainycat">@rainycat</a>) ====</b></b>
 <a href="http://rainycatz.wordpress.com/">rainycatz.wordpress.com</a>
-
+<br/>
 <i>"Designing, coding and building sensor-driven emotive wearables
-to amplify physiological data in social situations"</i>
-From her AnemoneStarHeart EEG / ECG visualising device to the ThinkerBelle EEG
-Amplifying Dress, Rain's doctoral research investigates how wearable technology
-could broadcast physiological data from the body to create new forms of
-non-verbal communication, and questions the personal, societal and cultural
-implications.
-
-
-<b>==== Bob Sturm (<a href="https://twitter.com/boblsturm">@boblsturm</a>) ====</b>
+to amplify physiological data in social situations"</i><br/>
+From her AnemoneStarHeart EEG / ECG visualising device to the ThinkerBelle EEG<br/>
+Amplifying Dress, Rain's doctoral research investigates how wearable technology<br/>
+could broadcast physiological data from the body to create new forms of<br/>
+non-verbal communication, and questions the personal, societal and cultural<br/>
+implications.<br/>
+<br/>
+<br/>
+<b><b>==== Bob Sturm (<a href="https://twitter.com/boblsturm">@boblsturm</a>) ====</b></b>
 <a href="http://highnoongmt.wordpress.com/">highnoongmt.wordpress.com</a>
-
+<br/>
 <i>“Eight short outputs …”</i>
-Bob will play a compositional suite generated using a long short-term memory
-network with three fully connected hidden layers of 512 units each, trained on
-over 23,000 ABC transcriptions of session music (Irish, English, etc.), and
-arranged by his own “personal” neural network trained on who knows what for who
-knows how long (he can’t remember any of the settings) (2015). And he’ll attempt
-to explain a little about them too.
-
-
-<b>==== Julie Freeman (<a href="https://twitter.com/joz_freeman">@joz_freeman</a>) ====</b>
+Bob will play a compositional suite generated using a long short-term memory<br/>
+network with three fully connected hidden layers of 512 units each, trained on<br/>
+over 23,000 ABC transcriptions of session music (Irish, English, etc.), and<br/>
+arranged by his own “personal” neural network trained on who knows what for who<br/>
+knows how long (he can’t remember any of the settings) (2015). And he’ll attempt<br/>
+to explain a little about them too.<br/>
+<br/>
+<br/>
+<b><b>==== Julie Freeman (<a href="https://twitter.com/joz_freeman">@joz_freeman</a>) ====</b></b>
 <a href="http://translatingnature.org/">translatingnature.org</a>
-
+<br/>
 <i>"Do Naked Mole Rats have data privacy rights?"</i>
-(NB no burrowing eusocial mammals were harmed during the course of this
-research)
-
-
-<b>==== Mike Harrison (<a href="https://twitter.com/mikeelectricstuf">@mikeelectricstuf</a>) ====</b>
+(NB no burrowing eusocial mammals were harmed during the course of this<br/>
+research)<br/>
+<br/>
+<br/>
+<b><b>==== Mike Harrison (<a href="https://twitter.com/mikeelectricstuf">@mikeelectricstuf</a>) ====</b></b>
 <a href="http://www.electricstuff.co.uk/">www.electricstuff.co.uk</a>
-
+<br/>
 <i>"Christmas snow in Hong Kong"</i>
-Dorkbot regular Mike is a Freelance Electronics Engineer (and Youtuber),
-recently returned from installing a large-scale LED display in Hong Kong.
-
-
-<b>==== Open dorks/demos: ====</b>
-
+Dorkbot regular Mike is a Freelance Electronics Engineer (and Youtuber),<br/>
+recently returned from installing a large-scale LED display in Hong Kong.<br/>
+<br/>
+<br/>
+<b><b>==== Open dorks/demos: ====</b></b>
+<br/>
 <b>Sophie Skach (<a href="https://twitter.com/SophieSkach">@SophieSkach</a>)</b>
 <i>"12^4 boys": drawing + combining portraits by touching a doll's head</i>
-
+<br/>
 <b>Daniel Stoller</b>
 <i>Snowfall: A skiing game controlled with your feet</i>
-
+<br/>
 <b>Victor Loux (<a href="https://twitter.com/lgorithm">@lgorithm</a>)</b>
 <i>Kids Photo Booth: photo booth effects controlled with a learning table</i>
-
+<br/>
 <b>Betül Aksu (<a href="https://twitter.com/betulaksu">@betulaksu</a>)</b>
 <i>Hand Me Down: an interactive way of second-hand storytelling</i>
-
-(...&amp; perhaps you?)
-
-<b>==== Plus Special Guest... Di Mainstone! (<a href="http://twitter.com/dimainstone">@dimainstone</a>) ====</b>
+<br/>
+(...&amp; perhaps you?)<br/>
+<br/>
+<b><b>==== Plus Special Guest... Di Mainstone! (<a href="http://twitter.com/dimainstone">@dimainstone</a>) ====</b></b>
 <a href="http://dimainstone.com/">dimainstone.com</a>
-
-After speaking at our last event, Di discusses new plans for creating sound and
-music from any suitably resonant metal structures...
-
-
-<b>==== Sputnik Bauble Workshop and "Competition" ====</b>
-Hosted by <a href='https://twitter.com/jonty'>@jonty</a> &amp; <a href='https://twitter.com/prehensile'>@prehensile</a>, this essentially involves sticking four bits
-of wire to a shiny silver bauble in order to make a 1/10th scale Sputnik-themed
-decoration for your festive celebrations. We will be providing baubles, wire
-and glue.
-
-Prizes may well be awarded* for the most overengineered bauble. If you feel
-inspired to go beyond the baseline Sputnik bauble, you've got a 55mm-diameter
-spherical volume to fill with whatever you see fit.
-
+<br/>
+After speaking at our last event, Di discusses new plans for creating sound and<br/>
+music from any suitably resonant metal structures...<br/>
+<br/>
+<br/>
+<b><b>==== Sputnik Bauble Workshop and "Competition" ====</b></b>
+Hosted by <a href='https://twitter.com/jonty'>@jonty</a> &amp; <a
+href='https://twitter.com/prehensile'>@prehensile</a>, this essentially involves
+sticking four bits<br/>
+of wire to a shiny silver bauble in order to make a 1/10th scale Sputnik-themed<br/>
+decoration for your festive celebrations. We will be providing baubles, wire<br/>
+and glue.<br/>
+<br/>
+Prizes may well be awarded* for the most overengineered bauble. If you feel<br/>
+inspired to go beyond the baseline Sputnik bauble, you've got a 55mm-diameter<br/>
+spherical volume to fill with whatever you see fit.<br/>
+<br/>
 <small>* Prizes may well be more baubles. We've got a lot of baubles.</small>
-
-<b>==== Youtube-powered DORK KARAOKE with <a href='https://twitter.com/fakedavegreen'>@fakedavegreen</a> ====</b>
-The evening concludes with (non-compulsory) "Dork Karaoke" of songs we can find
-(or ideally download in advance) off of Youtube. Please post your requests via
-Twitter or the Facebook event - they don't have to be particularly dorky or
-Xmas-y, but ideally they should be short (<4-5min), fairly well-known, and not
-highly offensive. Cheers!
+<br/>
+<b><b>==== Youtube-powered DORK KARAOKE with <a href='https://twitter.com/fakedavegreen'>@fakedavegreen</a> ====</b></b>
+The evening concludes with (non-compulsory) "Dork Karaoke" of songs we can find<br/>
+(or ideally download in advance) off of Youtube. Please post your requests via<br/>
+Twitter or the Facebook event - they don't have to be particularly dorky or<br/>
+Xmas-y, but ideally they should be short (<4-5min), fairly well-known, and not<br/>
+highly offensive. Cheers!<br/>
