--- a/_posts/2016-08-28-dorkbike-2016.html
+++ b/_posts/2016-08-28-dorkbike-2016.html
@@ -5,45 +5,71 @@ start: 2016-08-28 12:00:00
 end: 2016-08-28 16:00:00
 where: dorkbike_2016
 ---
-
-Another excellent suggestion from Gordon Joly, this year's "Dorkbike" is a (fairly) easy cycle trip
-from Harold Wood station (26 min by train from Stratford) to <a href="http://www.secretnuclearbunker.com/secret-nuclear-bunker-admissions.php/">the Kelvedon Hatch nuclear bunker in Essex</a>
-- this info will also be available on a <a href="https://www.facebook.com/events/316560668678227/">Facebook event</a> if you want to see who's coming...
-
+<br/>
+Another excellent suggestion from Gordon Joly, this year's "Dorkbike" is a
+(fairly) easy cycle trip<br/>
+from Harold Wood station (26 min by train from Stratford) to <a
+href="http://www.secretnuclearbunker.com/secret-nuclear-bunker-admissions.php/">the
+Kelvedon Hatch nuclear bunker in Essex</a><br/>
+- this info will also be available on a <a
+href="https://www.facebook.com/events/316560668678227/">Facebook event</a> if
+you want to see who's coming...<br/>
+<br/>
 <i>Obviously this event is weather dependent, if it looks like consistent heavy rain then we'll
-probably postpone to a later date - please check the <a href="https://twitter.com/DorkbotLondon">DorkbotLondon twitter page</a> for updates
-or text/call Dave Green on 07742 711 026.</i>
-
-START TIME: Aim to meet before noon on Platform 8 at Stratford station, to catch the  
+probably postpone to a later date - please check the <a
+href="https://twitter.com/DorkbotLondon">DorkbotLondon twitter page</a> for
+updates<br/>
+or text/call Dave Green on 07742 711 026.</i><br/>
+<br/>
+START TIME: Aim to meet before noon on Platform 8 at Stratford station, to catch
+the<br/>
 <a href="http://ojp.nationalrail.co.uk/service/timesandfares/SRA/HRO/280816/1200/dep#outwardJump">12:12 train to Harold Wood (final stop Shenfield)</a>
-(Latecomers can catch the 12:21 from Platform 10A, which arrives only a few minutes later but tends to
-be busier with people going - presumably - to Southend.)
-
-MAIN RIDE: From Harold Wood station to nuclear bunker, via the quiet/ mostly hill-avoiding route shown
-below, arriving around 1.45pm. Approx 9 miles but it still has a couple of hills...
-
-RETURN ROUTE: After say 1-2 hours at the bunker, the simplest (less hilly) way back is to take Ongar Road 
-to Brentwood - although this is a main road, it doesn't have many large trucks etc on Sundays. There's 
-also the option of stopping at <a href="http://www.themerchantbrentwood.co.uk/">The Merchant pub</a> on Brentwood High Street.
-
-COSTS: The bunker (inc audio tour) is adults: £7.00, kids: £5 (5-16), family £16.50 (2 adults, 2 kids).
-Train fare from Stratford (zone 2) to Harold Wood (zone 6) is quoted as £4.20 (apparently only £2.40
-one-way on Oyster/contactless, or £7.50 for a return to Brentwood - zone 9!).
-"Unfortunately [the nuclear bunker people] are unable to take credit/debit cards."
-
-Not got a bike? You could potentially meet us by car or foot before 2pm at the nuclear bunker
-(annoyingly the <a href="http://www.ensignbus.com/route-21.html">local bus service from Epping or Brentwood</a> doesn't run on Sundays). 
-
-NB: You are responsible for your own safety and personal possessions at all
-times - always be aware of potential hazards and other cyclists and pedestrians. 
-Don't forget to bring a proper bike lock and spare inner tube if you can get one
-- plus food and drink unless you want to rely on cafes at the various stopping
-points. There are toilets at Stratford station and at the nuclear bunker as well.
-
-APPROX ROUTE: 
-(this is essentially Google maps' <a href="https://www.google.co.uk/maps/dir/Harold+Wood+Station+Car+Park,+Romford,+United+Kingdom/Kelvedon+Hatch+Secret+Nuclear+Bunker,+Kelvedon+Hall+Lane,+Kelvedon+Hatch,+Brentwood+CM14+5TL,+United+Kingdom/">suggested cycling route</a> from Harold Wood Station Car Park to
-Kelvedon Hatch Secret Nuclear Bunker, but skipping some hills via Horseman Side. We can also use 
-the dirt tracks/bridlepaths</a> of <a href="http://www.sustrans.org.uk/ncn/map/route/route-136">Cycle Route 136</a> instead of the roads up to Noak Hill...)
-
+(Latecomers can catch the 12:21 from Platform 10A, which arrives only a few
+minutes later but tends to<br/>
+be busier with people going - presumably - to Southend.)<br/>
+<br/>
+MAIN RIDE: From Harold Wood station to nuclear bunker, via the quiet/ mostly
+hill-avoiding route shown<br/>
+below, arriving around 1.45pm. Approx 9 miles but it still has a couple of
+hills...<br/>
+<br/>
+RETURN ROUTE: After say 1-2 hours at the bunker, the simplest (less hilly) way
+back is to take Ongar Road<br/>
+to Brentwood - although this is a main road, it doesn't have many large trucks
+etc on Sundays. There's<br/>
+also the option of stopping at <a
+href="http://www.themerchantbrentwood.co.uk/">The Merchant pub</a> on Brentwood
+High Street.<br/>
+<br/>
+COSTS: The bunker (inc audio tour) is adults: £7.00, kids: £5 (5-16), family
+£16.50 (2 adults, 2 kids).<br/>
+Train fare from Stratford (zone 2) to Harold Wood (zone 6) is quoted as £4.20
+(apparently only £2.40<br/>
+one-way on Oyster/contactless, or £7.50 for a return to Brentwood - zone 9!).<br/>
+"Unfortunately [the nuclear bunker people] are unable to take credit/debit
+cards."<br/>
+<br/>
+Not got a bike? You could potentially meet us by car or foot before 2pm at the
+nuclear bunker<br/>
+(annoyingly the <a href="http://www.ensignbus.com/route-21.html">local bus
+service from Epping or Brentwood</a> doesn't run on Sundays).<br/>
+<br/>
+NB: You are responsible for your own safety and personal possessions at all<br/>
+times - always be aware of potential hazards and other cyclists and pedestrians.<br/>
+Don't forget to bring a proper bike lock and spare inner tube if you can get one<br/>
+- plus food and drink unless you want to rely on cafes at the various stopping<br/>
+points. There are toilets at Stratford station and at the nuclear bunker as
+well.<br/>
+<br/>
+APPROX ROUTE:<br/>
+(this is essentially Google maps' <a
+href="https://www.google.co.uk/maps/dir/Harold+Wood+Station+Car+Park,+Romford,+United+Kingdom/Kelvedon+Hatch+Secret+Nuclear+Bunker,+Kelvedon+Hall+Lane,+Kelvedon+Hatch,+Brentwood+CM14+5TL,+United+Kingdom/">suggested
+cycling route</a> from Harold Wood Station Car Park to<br/>
+Kelvedon Hatch Secret Nuclear Bunker, but skipping some hills via Horseman Side.
+We can also use<br/>
+the dirt tracks/bridlepaths</a> of <a
+href="http://www.sustrans.org.uk/ncn/map/route/route-136">Cycle Route 136</a>
+instead of the roads up to Noak Hill...)<br/>
+<br/>
 <img width=730 height=408  src="/images/kelvCapture.PNG"/>
-
+<br/>
