--- a/_posts/2016-12-08-92.html
+++ b/_posts/2016-12-08-92.html
@@ -10,53 +10,64 @@ tags:
     - Laura Dekker
     - Kate Devlin
 ---
-
-Free entry, no registration required + limited refreshments, bring your own!
-Talks start 7.30pm, doors open from 6.45pm...
-
-Don't forget - you can also follow us on Twitter:
+<br/>
+Free entry, no registration required + limited refreshments, bring your own!<br/>
+Talks start 7.30pm, doors open from 6.45pm...<br/>
+<br/>
+Don't forget - you can also follow us on Twitter:<br/>
 <a href='https://twitter.com/DorkbotLondon'>https://twitter.com/DorkbotLondon</a> 
-See who's coming via the Facebook event:
+See who's coming via the Facebook event:<br/>
 <a href='https://www.facebook.com/events/1720235461629912/'>https://www.facebook.com/events/1720235461629912/</a>
-And/or add yourself to the low-volume email announcement list here:
+And/or add yourself to the low-volume email announcement list here:<br/>
 <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c</a>
-
-With short talks (each <20 min) and demos from...
+<br/>
+With short talks (each <20 min) and demos from...<br/>
 <!--NB THIS ISN'T THE MOST VISUALLY APPEALING LAYOUT FOR URLS BUT IT DOES MASSIVELY SIMPLIFY PASTING THE SAME TEXT INTO EMAILS/ FACEBOOK  -->
-<b>==== Hadeel Ayoub ====</b>
+<b><b>==== Hadeel Ayoub ====</b></b>
 <a href="https://twitter.com/HadeelAyoub">https://twitter.com/HadeelAyoub</a>
 <a href="http://brightsignglove.com/">http://brightsignglove.com/</a>
-Hadeel has developed a "smart glove" that translates sign language from hand gestures
-to visual text on a screen and audible dialogue. She's now working on an app to enable
-real-time translation of the text into other languages.
-
-<b>==== James Larsson ====</b>
+Hadeel has developed a "smart glove" that translates sign language from hand
+gestures<br/>
+to visual text on a screen and audible dialogue. She's now working on an app to
+enable<br/>
+real-time translation of the text into other languages.<br/>
+<br/>
+<b><b>==== James Larsson ====</b></b>
 <a href="https://twitter.com/JamesLarsson">https://twitter.com/JamesLarsson</a>
 <a href="http://jameslarsson.com/">http://jameslarsson.com/</a>
-The inventor, techno-humorist and Dorkbot London regular returns to launch his all-new 
-"Flashing Light Prize".
-
-<b>==== Laura Dekker ====</b>
+The inventor, techno-humorist and Dorkbot London regular returns to launch his
+all-new<br/>
+"Flashing Light Prize".<br/>
+<br/>
+<b><b>==== Laura Dekker ====</b></b>
 <a href="https://twitter.com/LauraDekker_io">https://twitter.com/LauraDekker_io</a>
 <a href="http://www.lauradekker.io">http://www.lauradekker.io</a>
-Laura's installation, “Some Small Robots Perform Recent News Media Output Concerning AI”,
-can be seen in the "<a href="https://www.watermans.org.uk/events/technology-is-not-neutral/">Technology is not neutral</a>" touring exhibition at Watermans Arts Centre
-until 8th Jan 2017.
-
-<b>==== Dr Kate Devlin ====</b>
+Laura's installation, “Some Small Robots Perform Recent News Media Output
+Concerning AI”,<br/>
+can be seen in the "<a
+href="https://www.watermans.org.uk/events/technology-is-not-neutral/">Technology
+is not neutral</a>" touring exhibition at Watermans Arts Centre<br/>
+until 8th Jan 2017.<br/>
+<br/>
+<b><b>==== Dr Kate Devlin ====</b></b>
 <a href="https://twitter.com/drkatedevlin/">https://twitter.com/drkatedevlin/</a>
 <a href="http://www.doc.gold.ac.uk/~mas01kd/">http://www.doc.gold.ac.uk/~mas01kd/</a>
-For mature audiences: Dr Devlin is organising this December's Love and Sex with Robots
-conference in London to bring together academics, industry professionals and anyone else
-interested in sex robots.
-
-<b>==== Open dorks/demos: ====</b>
-Holistic Howling
+For mature audiences: Dr Devlin is organising this December's Love and Sex with
+Robots<br/>
+conference in London to bring together academics, industry professionals and
+anyone else<br/>
+interested in sex robots.<br/>
+<br/>
+<b><b>==== Open dorks/demos: ====</b></b>
+Holistic Howling<br/>
 <a href="https://twitter.com/holistichowling">https://twitter.com/holistichowling</a>
 <a href="http://holistichowling.com">http://holistichowling.com</a>
-Ian Morrison introduces the radical new practice of Holistic Howling.
-
-& fresh from this year's "<a href="https://vimeo.com/tag:cruftfest">CruftFest</a>":
-Jon Pigrem's <a href="https://twitter.com/obliqueresponse">Oblique Responder Phone</a>
-Giacomo Lepri's <a href="http://www.giacomolepri.com/cembaloscrivano">Cembalo Scrivano .1 (CS1) augmented typewriter</a>
-(&amp;...perhaps you?)
+Ian Morrison introduces the radical new practice of Holistic Howling.<br/>
+<br/>
+& fresh from this year's "<a
+href="https://vimeo.com/tag:cruftfest">CruftFest</a>":<br/>
+Jon Pigrem's <a href="https://twitter.com/obliqueresponse">Oblique Responder
+Phone</a><br/>
+Giacomo Lepri's <a href="http://www.giacomolepri.com/cembaloscrivano">Cembalo
+Scrivano .1 (CS1) augmented typewriter</a><br/>
+(&amp;...perhaps you?)<br/>
