--- a/_posts/2017-02-27-93.html
+++ b/_posts/2017-02-27-93.html
@@ -10,56 +10,72 @@ tags:
     - Emilie Giles
     - Dani Clode
 ---
-Free entry, no registration required - there's a cafe for refreshments or bring your own!
-Talks start 7.00pm, doors open from 6.45pm...
-
-Don't forget - you can also follow us on Twitter:
+Free entry, no registration required - there's a cafe for refreshments or bring
+your own!<br/>
+Talks start 7.00pm, doors open from 6.45pm...<br/>
+<br/>
+Don't forget - you can also follow us on Twitter:<br/>
 <a href='https://twitter.com/DorkbotLondon'>https://twitter.com/DorkbotLondon</a>
-
-See who's coming via the <a href="https://www.facebook.com/events/1092412427548967/">Facebook</a> and <a href="https://www.meetup.com/Artists-and-Scientists-Get-Together/events/237403536/">Meetup</a> pages;
-
-And/or add yourself to the low-volume email announcement list here:
+<br/>
+See who's coming via the <a
+href="https://www.facebook.com/events/1092412427548967/">Facebook</a> and <a
+href="https://www.meetup.com/Artists-and-Scientists-Get-Together/events/237403536/">Meetup</a>
+pages;<br/>
+<br/>
+And/or add yourself to the low-volume email announcement list here:<br/>
 <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c</a>
-
-With short talks (each <20 min) and demos from...
+<br/>
+With short talks (each <20 min) and demos from...<br/>
 <!--NB THIS ISN'T THE MOST VISUALLY APPEALING LAYOUT FOR URLS BUT IT DOES MASSIVELY SIMPLIFY PASTING THE SAME TEXT INTO EMAILS/ FACEBOOK  -->
-<b>==== Charlotte Jarvis ====</b>
+<b><b>==== Charlotte Jarvis ====</b></b>
 <a href="http://www.artforeating.co.uk/">http://www.artforeating.co.uk/</a>
-Charlotte is an artist who collaborates with scientists. She has put on solo shows  
-and performances across Europe and the UK and has been Resident artist at a number 
-of scientific institutions, including the European Bioinformatics Institute, The 
-Netherlands Proteomics Centre and the Hubrecht Institute. Charlotte teaches at the 
-Royal College of Art and Imperial College. She is an exoplanet obsessive, lover of 
-space opera and collector of GMO body parts.
-
-At Dorkbot Charlotte will be talking about making the first piece of music to be 
-recorded onto DNA (and blowing bubbles with it), and growing her own in vitro tumour 
-(and failing to eat it).
-
-<b>==== Simon Katan ====</b>
-Simon Katan presents Conditional Love,  an interactive performance for laptop and all 
-of your smart phones. This ongoing project, funded by the Austrian Science Board (?), 
-is a personal reflection on narcissism and social media - more information <a 
-href="http://bit.ly/1Gb8pUt">here</a>. Simon
-is a digital artist and lecturer in Creative Computing at Goldsmiths.
-
-<b>==== Emilie Giles ====</b>
+Charlotte is an artist who collaborates with scientists. She has put on solo
+shows<br/>
+and performances across Europe and the UK and has been Resident artist at a
+number<br/>
+of scientific institutions, including the European Bioinformatics Institute, The<br/>
+Netherlands Proteomics Centre and the Hubrecht Institute. Charlotte teaches at
+the<br/>
+Royal College of Art and Imperial College. She is an exoplanet obsessive, lover
+of<br/>
+space opera and collector of GMO body parts.<br/>
+<br/>
+At Dorkbot Charlotte will be talking about making the first piece of music to be<br/>
+recorded onto DNA (and blowing bubbles with it), and growing her own in vitro
+tumour<br/>
+(and failing to eat it).<br/>
+<br/>
+<b><b>==== Simon Katan ====</b></b>
+Simon Katan presents Conditional Love,  an interactive performance for laptop
+and all<br/>
+of your smart phones. This ongoing project, funded by the Austrian Science Board
+(?),<br/>
+is a personal reflection on narcissism and social media - more information <a<br/>
+href="<a href="http://bit.ly/1Gb8pUt">http://bit.ly/1Gb8pUt</a>">here</a>. Simon<br/>
+is a digital artist and lecturer in Creative Computing at Goldsmiths.<br/>
+<br/>
+<b><b>==== Emilie Giles ====</b></b>
 <a href="www.emiliegiles.co.uk">www.emiliegiles.co.uk</a>
-Emilie will discuss her PhD work around working with blind and visually impaired 
-people using e-textiles. She has been exploring how participants connect personal 
-memories and associations to the specific textures of textiles and how this can be 
-used to create a soft, interactive object.
-
-<b>==== Dani Clode ====</b>
+Emilie will discuss her PhD work around working with blind and visually impaired<br/>
+people using e-textiles. She has been exploring how participants connect
+personal<br/>
+memories and associations to the specific textures of textiles and how this can
+be<br/>
+used to create a soft, interactive object.<br/>
+<br/>
+<b><b>==== Dani Clode ====</b></b>
 <a href="http://daniclodedesign.com/">http://daniclodedesign.com/</a>
 <a href="https://www.instagram.com/daninkx/">https://www.instagram.com/daninkx/</a>
-The Third Thumb Project is an exploration of prosthetics through human extension. It 
-enables a better understanding of controlling and connecting prosthetic technology to 
-the body through a hands on experience. 
-
-Dani Clode is a product designer and maker from New Zealand, living in London and 
-currently in the final year of a Design Products MA at the Royal College of Art.
-
-<b>==== Open dorks/demos: ====</b>
-None yet...
-(&amp;...perhaps you?)
+The Third Thumb Project is an exploration of prosthetics through human
+extension. It<br/>
+enables a better understanding of controlling and connecting prosthetic
+technology to<br/>
+the body through a hands on experience.<br/>
+<br/>
+Dani Clode is a product designer and maker from New Zealand, living in London
+and<br/>
+currently in the final year of a Design Products MA at the Royal College of Art.<br/>
+<br/>
+<b><b>==== Open dorks/demos: ====</b></b>
+None yet...<br/>
+(&amp;...perhaps you?)<br/>
