--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -14,73 +14,78 @@ tags:
     - Hugh Barnard
     - Ian Morrison
 ---
-
-Its been a while, but Dorkbot is back! Free entry, no registration required,
-bring your own refreshments. Talks start 7.30pm, doors from 6.45pm.
-
-Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, <a href="https://www.facebook.com/events/271701030204843/">attend the Facebook event</a>, and
+<br/>
+Its been a while, but Dorkbot is back! Free entry, no registration required,<br/>
+bring your own refreshments. Talks start 7.30pm, doors from 6.45pm.<br/>
+<br/>
+Don't forget to <a
+href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join
+our mailing list</a>, <a
+href="https://www.facebook.com/events/271701030204843/">attend the Facebook
+event</a>, and<br/>
 <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
-
-With short talks and demos from...
-
-<b>==== Jem Finer ====</b>
-
-"Longplayer and Supercomputer: Keeping things going"
-
-Both a question and a proposition. Both are projects which would welcome wider
-collaboration and the ingenuity that Dorkbot may bring.
-
+<br/>
+With short talks and demos from...<br/>
+<br/>
+<b><b>==== Jem Finer ====</b></b>
+<br/>
+"Longplayer and Supercomputer: Keeping things going"<br/>
+<br/>
+Both a question and a proposition. Both are projects which would welcome wider<br/>
+collaboration and the ingenuity that Dorkbot may bring.<br/>
+<br/>
 <a href="https://longplayer.org">longplayer.org</a> / <a href="https://supercomputer.org.uk">supercomputer.org.uk</a> / <a href="https://twitter.com/jemfiner">@jemfiner</a>
-
-<b>==== Emma Winston ====</b>
-
-"Tell Me I Can Fix This On My Own: songwriting with code as a non-programmer"
-
-How accidentally live-coding an album let one woman fall back in love with
-learning to program, and how (maybe) it can do the same for you.
-
+<br/>
+<b><b>==== Emma Winston ====</b></b>
+<br/>
+"Tell Me I Can Fix This On My Own: songwriting with code as a non-programmer"<br/>
+<br/>
+How accidentally live-coding an album let one woman fall back in love with<br/>
+learning to program, and how (maybe) it can do the same for you.<br/>
+<br/>
 <a href="https://emmawinston.me/">emmawinston.me</a> / <a href="http://deerful.com/">deerful.com</a> / <a href="https://twitter.com/deer_ful">@deer_ful</a>
-
-<b>==== Sara Heitlinger ====</b>
-
-"The internet of seeds"
-
-The Connected Seeds Library is a community seed library that lives at
-Spitalfields City Farm. The library is a resource for local communities who
-wish to grow their own food from locally-adapted, open-pollinated seed.
-
+<br/>
+<b><b>==== Sara Heitlinger ====</b></b>
+<br/>
+"The internet of seeds"<br/>
+<br/>
+The Connected Seeds Library is a community seed library that lives at<br/>
+Spitalfields City Farm. The library is a resource for local communities who<br/>
+wish to grow their own food from locally-adapted, open-pollinated seed.<br/>
+<br/>
 <a href="http://www.connectedseeds.org">connectedseeds.org</a> / <a href="http://saraheitlinger.net">saraheitlinger.net</a> / <a href="https://twitter.com/saralara_heit">@saralara_heit</a>
-
-<b>==== Nicola Plant ====</b>
-
-"Parallax"
-
-Parallax is a movement-based interactive VR artwork. The audience communicate
-with one another by intuitively performing hand expressions and gestures that
-sculpt a shared malleable object existing in the virtual space between them.
-
-Dr Nicola Plant is a movement artist, coder and researcher with a PhD in Media
-Art and Technology at the School of Electronic Engineering and Computer
-Science, Queen Mary University of London.
-
+<br/>
+<b><b>==== Nicola Plant ====</b></b>
+<br/>
+"Parallax"<br/>
+<br/>
+Parallax is a movement-based interactive VR artwork. The audience communicate<br/>
+with one another by intuitively performing hand expressions and gestures that<br/>
+sculpt a shared malleable object existing in the virtual space between them.<br/>
+<br/>
+Dr Nicola Plant is a movement artist, coder and researcher with a PhD in Media<br/>
+Art and Technology at the School of Electronic Engineering and Computer<br/>
+Science, Queen Mary University of London.<br/>
+<br/>
 <a href="http://nicolaplant.co.uk/">nicolaplant.co.uk</a> / <a href="https://twitter.com/nicolaplant">@nicolaplant</a>
-
-<b>==== Annie Tådne ====</b>
-
-"Boberg 1"
-
-Boberg 1. is a hands-on interplay between material and computational
-properties,  where music is composed through visual means. In a performance,
-physical objects are translated into sounds and controlled through manual
-calibration.
-
+<br/>
+<b><b>==== Annie Tådne ====</b></b>
+<br/>
+"Boberg 1"<br/>
+<br/>
+Boberg 1. is a hands-on interplay between material and computational<br/>
+properties,  where music is composed through visual means. In a performance,<br/>
+physical objects are translated into sounds and controlled through manual<br/>
+calibration.<br/>
+<br/>
 <a href="https://tadne.se/">tadne.se</a>
-
-<b>==== Open dorks/demos: ====</b>
-
-* <b>Peter Brownell</b> - "How I designed a tarot deck for VISA"
-* <b>Hugh Barnard</b> - "Code Club"
-* <b>Ian Morrison</b> - "Howlcamp"
-
-You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know if you'd like to give a short five minute
-talk on something.
+<br/>
+<b><b>==== Open dorks/demos: ====</b></b>
+<br/>
+* <b>Peter Brownell</b> - "How I designed a tarot deck for VISA"<br/>
+* <b>Hugh Barnard</b> - "Code Club"<br/>
+* <b>Ian Morrison</b> - "Howlcamp"<br/>
+<br/>
+You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know
+if you'd like to give a short five minute<br/>
+talk on something.<br/>
