--- a/_posts/2019-09-18-97.html
+++ b/_posts/2019-09-18-97.html
@@ -12,75 +12,80 @@ tags:
     - Guy Bar Amotz
     - Jeff Gough
 ---
-
-Free entry, no registration required, bring your own refreshments. Talks start
-7.30pm, doors from 6.45pm.
-
-Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
-
-
-With short talks and demos from...
-
-<b>==== Robin Baumgarten ====</b>
-
-"Prototyping Experimental Hardware Games"
-
-Robin is going to talk about building and improving experimental hardware games
-by the example of Line Wobbler and Wobble Garden.
-
+<br/>
+Free entry, no registration required, bring your own refreshments. Talks start<br/>
+7.30pm, doors from 6.45pm.<br/>
+<br/>
+Don't forget to <a
+href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join
+our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us
+on Twitter</a>.<br/>
+<br/>
+<br/>
+With short talks and demos from...<br/>
+<br/>
+<b><b>==== Robin Baumgarten ====</b></b>
+<br/>
+"Prototyping Experimental Hardware Games"<br/>
+<br/>
+Robin is going to talk about building and improving experimental hardware games<br/>
+by the example of Line Wobbler and Wobble Garden.<br/>
+<br/>
 <a href="https://wobblylabs.com">wobblylabs.com</a> / <a href="https://twitter.com/robin_b">@robin_b</a>
-
-<b>==== Evan Raskob ====</b>
-
-"Spoke: the future as a board game. A science fiction storytelling game for
-teens and adults"
-
-Spoke is a board game for understanding complex futures. It can be played by
-individuals or mixed groups. Players collaboratively conjure up future
-narratives using prompts from story element cards and the board. The cards and
-board form a distributed science fiction world that players can inhabit and
-shape to fit their own imaginations. Story elements are based on diverse
-characters, current research topics and events around the rise of automated
-manufacturing, social media, machine learning and AI.
-
-Spoke is designed for fun, futurists, scenario planners, educators and anyone
-else exploring the uncertain world of the nearly possible.
-
+<br/>
+<b><b>==== Evan Raskob ====</b></b>
+<br/>
+"Spoke: the future as a board game. A science fiction storytelling game for<br/>
+teens and adults"<br/>
+<br/>
+Spoke is a board game for understanding complex futures. It can be played by<br/>
+individuals or mixed groups. Players collaboratively conjure up future<br/>
+narratives using prompts from story element cards and the board. The cards and<br/>
+board form a distributed science fiction world that players can inhabit and<br/>
+shape to fit their own imaginations. Story elements are based on diverse<br/>
+characters, current research topics and events around the rise of automated<br/>
+manufacturing, social media, machine learning and AI.<br/>
+<br/>
+Spoke is designed for fun, futurists, scenario planners, educators and anyone<br/>
+else exploring the uncertain world of the nearly possible.<br/>
+<br/>
 <a href="http://spoke.flkr.com">spoke.flkr.com</a> / <a href="https://twitter.com/evanraskob">@evanraskob</a> / <a href=https://instagram.com/evanraskob_art">@evanraskob_art</a>
-
-<b>==== Bushra Burge ====</b>
-
-"The rollercoaster of creating of a multisensory VR-haptic wearable story using
-a considered eco-ethical design approach"
-
-Bushra Burge is the Owner and Creative Director award winning creative
-technology company BB Studio. Her background of science, technology and
-sustainable design cultivates innovation within her multi-disciplinary team. BB
-Studio's recent projects have included engaging immersive stories using virtual
-reality integrated with proprietary wearable technology.
-
-Bushra is an active advocate of empowerment of under represented groups and is
-a Non-Executive Director of SEIDEA tech-education startup for BAME women.
-
+<br/>
+<b><b>==== Bushra Burge ====</b></b>
+<br/>
+"The rollercoaster of creating of a multisensory VR-haptic wearable story using<br/>
+a considered eco-ethical design approach"<br/>
+<br/>
+Bushra Burge is the Owner and Creative Director award winning creative<br/>
+technology company BB Studio. Her background of science, technology and<br/>
+sustainable design cultivates innovation within her multi-disciplinary team. BB<br/>
+Studio's recent projects have included engaging immersive stories using virtual<br/>
+reality integrated with proprietary wearable technology.<br/>
+<br/>
+Bushra is an active advocate of empowerment of under represented groups and is<br/>
+a Non-Executive Director of SEIDEA tech-education startup for BAME women.<br/>
+<br/>
 <a href="http://www.bushraburge.com">bushraburge.com</a> / <a href="https://twitter.com/bushraburge">@bushraburge</a>
-
-<b>==== Piers O'Hanlon &amp; Guy Bar Amotz  ====</b>
-
-Guy Bar Amotz is an installation artist and Piers O’Hanlon is a
-technologist/researcher. Together they have created a number of interactive
-projects that were exhibited in art spaces such as Tate Britain and CAC Geneva.
-Such art includes "Robo-art” and interactive media installations.
-
-They plan to bring parts of a new robot performance and let it try to explain
-why he is who he is, video documentation of other robot performances, and a
-conversation about the nature of their collaboration.
-
+<br/>
+<b><b>==== Piers O'Hanlon &amp; Guy Bar Amotz  ====</b></b>
+<br/>
+Guy Bar Amotz is an installation artist and Piers O’Hanlon is a<br/>
+technologist/researcher. Together they have created a number of interactive<br/>
+projects that were exhibited in art spaces such as Tate Britain and CAC Geneva.<br/>
+Such art includes "Robo-art” and interactive media installations.<br/>
+<br/>
+They plan to bring parts of a new robot performance and let it try to explain<br/>
+why he is who he is, video documentation of other robot performances, and a<br/>
+conversation about the nature of their collaboration.<br/>
+<br/>
 <a href="http://guybaramotz.com/">guybaramotz.com</a>
-
-
-<b>==== Open dorks/demos: ====</b>
-
-* <a href="http://warrantyvoidifremoved.com/">Jeff Gough</a> - "Fireball launching hat"
-
-You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know if you'd like to give a short five minute
-talk on something.
+<br/>
+<br/>
+<b><b>==== Open dorks/demos: ====</b></b>
+<br/>
+* <a href="http://warrantyvoidifremoved.com/">Jeff Gough</a> - "Fireball
+launching hat"<br/>
+<br/>
+You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know
+if you'd like to give a short five minute<br/>
+talk on something.<br/>
