--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -15,114 +15,123 @@ tags:
     - Nick Rothwell
     - Mick Grierson
 ---
-
+<br/>
 <b>DORKMAS 2019!</b>
-
-It's Christmas, so time for an extra special Dorkbot - we'll have talks,
-music, and a bar.
-
-Free entry, no registration required. Talks start 7.30pm, doors from
-6.45pm. We'll probably run later than a regular Dorkbot.
-
-Please feel free to bring interesting things along to show others - things
-you've built, things to play, or curiosities to discuss.
-
-Don't forget to <a href="https://www.facebook.com/events/2392535060997651/">attend the Facebook event</a>, <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, 
-and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
-
-
-With short talks from...
-
-<b>==== Natalie Kane ====</b>
-
-"3615 MUSEUM"
-
-Digital design! What the hell is it? And why would a museum be interested in
-it? It's pretty important that we try to make sense of how we got here, from
-early french sex chat rooms on adorable plastic terminals, to Barbie dolls that
-spy on you, to misogynistic computer adverts and 3D printed speculums. Natalie
-will take you through the challenges we face in preserving, accessing and
-understanding our digital heritage, and there will only be a tiny bit of
-theory, promise. 
-
+<br/>
+It's Christmas, so time for an extra special Dorkbot - we'll have talks,<br/>
+music, and a bar.<br/>
+<br/>
+Free entry, no registration required. Talks start 7.30pm, doors from<br/>
+6.45pm. We'll probably run later than a regular Dorkbot.<br/>
+<br/>
+Please feel free to bring interesting things along to show others - things<br/>
+you've built, things to play, or curiosities to discuss.<br/>
+<br/>
+Don't forget to <a
+href="https://www.facebook.com/events/2392535060997651/">attend the Facebook
+event</a>, <a
+href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join
+our mailing list</a>,<br/>
+and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.<br/>
+<br/>
+<br/>
+With short talks from...<br/>
+<br/>
+<b><b>==== Natalie Kane ====</b></b>
+<br/>
+"3615 MUSEUM"<br/>
+<br/>
+Digital design! What the hell is it? And why would a museum be interested in<br/>
+it? It's pretty important that we try to make sense of how we got here, from<br/>
+early french sex chat rooms on adorable plastic terminals, to Barbie dolls that<br/>
+spy on you, to misogynistic computer adverts and 3D printed speculums. Natalie<br/>
+will take you through the challenges we face in preserving, accessing and<br/>
+understanding our digital heritage, and there will only be a tiny bit of<br/>
+theory, promise.<br/>
+<br/>
 <a href="https://ndkane.com/">ndkane.com</a> / <a href="https://twitter.com/nd_kane">@nd_kane</a>
-
-<b>==== Jack Armitage ====</b>
-
-"Craft in digital musical instrument design"
-
-Investigations into reframing digital musical instrument design as a tactile
-and embodied craft practice.
-
-In this short talk I will review some of my PhD research in the domain of
-digital musical instrument design, sometimes known as digital lutherie. Despite
-my background in engineering, technology and startups, and my music practice in
-live coding, I have spent recent years attempting to deconstruct the
-techno-centric perspective that dominates contemporary musical instrument
-making. Through interviewing violin luthiers and devising craft workshops for
-so-called "digital luthiers", I have been seeking out paths towards tactile and
-embodied forms of digital craft, which I recently began referring to as hybrid
-lutherie. Right now I am recruiting for my final study, and I will conclude by
-offering a preview of the activity involved and invite attendees to participate
-in the research.
-
+<br/>
+<b><b>==== Jack Armitage ====</b></b>
+<br/>
+"Craft in digital musical instrument design"<br/>
+<br/>
+Investigations into reframing digital musical instrument design as a tactile<br/>
+and embodied craft practice.<br/>
+<br/>
+In this short talk I will review some of my PhD research in the domain of<br/>
+digital musical instrument design, sometimes known as digital lutherie. Despite<br/>
+my background in engineering, technology and startups, and my music practice in<br/>
+live coding, I have spent recent years attempting to deconstruct the<br/>
+techno-centric perspective that dominates contemporary musical instrument<br/>
+making. Through interviewing violin luthiers and devising craft workshops for<br/>
+so-called "digital luthiers", I have been seeking out paths towards tactile and<br/>
+embodied forms of digital craft, which I recently began referring to as hybrid<br/>
+lutherie. Right now I am recruiting for my final study, and I will conclude by<br/>
+offering a preview of the activity involved and invite attendees to participate<br/>
+in the research.<br/>
+<br/>
 <a href="http://www.jackarmitage.com/"</a>jackarmitage.com</a> / <a href="http://instrumentslab.org/research/craft">instrumentslab.org/research/craft</a> / <a href="https://twitter.com/jdkarmitage">@jdkarmitage</a>
-
-<b>==== Jo Franchetti ====</b>
-
-"Have Yourself a Matrix LED Christmas!"
-
-Frivolous festive fun with winter wearables. Join Jo on an illuminated IoT
-adventure through audio recognition, APIs, surprise snakes and some substandard
-sewing. Jo is a web developer and hobbyist IoT wearables maker.
-
+<br/>
+<b><b>==== Jo Franchetti ====</b></b>
+<br/>
+"Have Yourself a Matrix LED Christmas!"<br/>
+<br/>
+Frivolous festive fun with winter wearables. Join Jo on an illuminated IoT<br/>
+adventure through audio recognition, APIs, surprise snakes and some substandard<br/>
+sewing. Jo is a web developer and hobbyist IoT wearables maker.<br/>
+<br/>
 <a href="https://medium.com/@jofranchetti">medium.com/jofranchetti</a> / <a href="https://twitter.com/ThisIsJoFrank">@ThisIsJoFrank</a> 
-
-
-And music from...
-
-<b>==== Sarah Angliss ====</b>
-
-Featuring theremin, robotic carillon, GPO telephones, and more.
-
+<br/>
+<br/>
+And music from...<br/>
+<br/>
+<b><b>==== Sarah Angliss ====</b></b>
+<br/>
+Featuring theremin, robotic carillon, GPO telephones, and more.<br/>
+<br/>
 <a href="https://www.sarahangliss.com/">sarahangliss.com</a> / <a href="https://twitter.com/sarah_angliss">@sarah_angliss</a>
-
-<b>==== 2xAA ====</b>
-
-Musician, generative &amp; visual artist, and developer Sam Wray will introduce
-you to the world of chiptune. Enjoy a live performance of retro-fueled techno.
-An exciting musical adventure, featuring the classic power of Nintendo's Game
-Boy.
-
+<br/>
+<b><b>==== 2xAA ====</b></b>
+<br/>
+Musician, generative &amp; visual artist, and developer Sam Wray will introduce<br/>
+you to the world of chiptune. Enjoy a live performance of retro-fueled techno.<br/>
+An exciting musical adventure, featuring the classic power of Nintendo's Game<br/>
+Boy.<br/>
+<br/>
 <a href="https://2xaa.fm/">2xaa.fm</a> / <a href="https://twitter.com/_2xAA">@_2xAA</a>
-
-<b>==== "Synthclub Jam Session" ====</b>
-
-Matthew Yee-King, Mick Grierson and special guests including an "evolvable
-modular synth"
-
-* <a href="http://www.yeeking.net/index.php?location=sound">yeeking.net</a> / <a href="https://twitter.com/myeeking">@myeeking</a>
-* <a href="http://mickgrierson.co.uk/">mickgrierson.co.uk</a>
-
-<b>==== Drum'n'Drummerer ====</b>
-
-2 drum machines, 1 act. Featuring:
-
-* <a href="https://pixelist.info/bitlip-performances/">pixelist.info</a> / <a href="https://twitter.com/evanraskob">@evanraskob</a>
-* <a href="http://www.cassiel.com/about/">cassiel.com</a> / <a href="https://twitter.com/cassieldotcom">@cassieldotcom</a>
-
-<b>==== Visuals by rumblesan ====</b>
-
-* <a href="https://rumblesan.com/">https://rumblesan.com/</a> / <a href="https://twitter.com/rumblesan">@rumblesan</a>
-
-
-<b>==== Open dorks/demos: ====</b>
-
-You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know if you'd like to give a short five minute
-talk on something.
-
-
-<b>==== Also: ====</b>
-
-* The bar will accept both cash and cards
-
+<br/>
+<b><b>==== "Synthclub Jam Session" ====</b></b>
+<br/>
+Matthew Yee-King, Mick Grierson and special guests including an "evolvable<br/>
+modular synth"<br/>
+<br/>
+* <a href="http://www.yeeking.net/index.php?location=sound">yeeking.net</a> / <a
+href="https://twitter.com/myeeking">@myeeking</a><br/>
+* <a href="http://mickgrierson.co.uk/">mickgrierson.co.uk</a><br/>
+<br/>
+<b><b>==== Drum'n'Drummerer ====</b></b>
+<br/>
+2 drum machines, 1 act. Featuring:<br/>
+<br/>
+* <a href="https://pixelist.info/bitlip-performances/">pixelist.info</a> / <a
+href="https://twitter.com/evanraskob">@evanraskob</a><br/>
+* <a href="http://www.cassiel.com/about/">cassiel.com</a> / <a
+href="https://twitter.com/cassieldotcom">@cassieldotcom</a><br/>
+<br/>
+<b><b>==== Visuals by rumblesan ====</b></b>
+<br/>
+* <a href="https://rumblesan.com/">https://rumblesan.com/</a> / <a
+href="https://twitter.com/rumblesan">@rumblesan</a><br/>
+<br/>
+<br/>
+<b><b>==== Open dorks/demos: ====</b></b>
+<br/>
+You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know
+if you'd like to give a short five minute<br/>
+talk on something.<br/>
+<br/>
+<br/>
+<b><b>==== Also: ====</b></b>
+<br/>
+* The bar will accept both cash and cards<br/>
+<br/>
