--- a/_posts/2020-12-17-99.html
+++ b/_posts/2020-12-17-99.html
@@ -10,64 +10,68 @@ tags:
     - Robert Nixdorf
     - Emma Winston
 ---
-
+<br/>
 <b>DORKMAS 2020: CYBERSPACE EDITION!</b>
-
-Another year, another Dorkmas! It's cold and strange outside, so come and gather
-in front of the virtual fireplace of an online Dorkbot.
-
+<br/>
+Another year, another Dorkmas! It's cold and strange outside, so come and gather<br/>
+in front of the virtual fireplace of an online Dorkbot.<br/>
+<br/>
 <iframe id="video_stream" width="720" height="405" src="https://www.youtube.com/embed/CPDNaCxDWvo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
-
-
-With short talks from...
-
-<b>==== Alex Zivanovic ====</b>
-
-"The Senster – an interactive robotic sculpture from 50 years ago"
-
-Alex will talk about the Senster, what it did, how it did it and the lessons
-we can learn from it.
-
-He’ll also update us on its recent resurrection to working order.
-
+<br/>
+Don't forget to <a
+href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join
+our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us
+on Twitter</a>.<br/>
+<br/>
+<br/>
+With short talks from...<br/>
+<br/>
+<b><b>==== Alex Zivanovic ====</b></b>
+<br/>
+"The Senster – an interactive robotic sculpture from 50 years ago"<br/>
+<br/>
+Alex will talk about the Senster, what it did, how it did it and the lessons<br/>
+we can learn from it.<br/>
+<br/>
+He’ll also update us on its recent resurrection to working order.<br/>
+<br/>
 <a href="https://twitter.com/aziv">@aziv</a> / <a href="http://www.senster.com/ihnatowicz/senster/index.htm">senster.com</a>
-
-
-<b>==== Julie Freeman ====</b>
-
-"ALICE in microbe land or Why we should all be taking the piss to save the planet."
-
-Julie will talk about her latest data art project Active Living Infrastructure:
-Controlled Environment (ALICE) which aims to create a live digital interface
-between microbes and humans.
-
-Working with Bristol Robotics Lab, and Newcastle University's Experimental
-Architecture team, ALICE is concerned with how can we build an interface to
-integrate urine consuming electricity producing microbes into our homes. Pee
-Power FTW.
-
+<br/>
+<br/>
+<b><b>==== Julie Freeman ====</b></b>
+<br/>
+"ALICE in microbe land or Why we should all be taking the piss to save the
+planet."<br/>
+<br/>
+Julie will talk about her latest data art project Active Living Infrastructure:<br/>
+Controlled Environment (ALICE) which aims to create a live digital interface<br/>
+between microbes and humans.<br/>
+<br/>
+Working with Bristol Robotics Lab, and Newcastle University's Experimental<br/>
+Architecture team, ALICE is concerned with how can we build an interface to<br/>
+integrate urine consuming electricity producing microbes into our homes. Pee<br/>
+Power FTW.<br/>
+<br/>
 <a href="https://twitter.com/joz_freeman">@joz_freeman</a> / <a href="https://translatingnature.org/">translatingnature.org</a>
-
-
-<b>==== Air Giants ====</b>
-
-Air Giants are building a new kind of giant soft robot, huge joyful creatures
-made of little more than air, light, and fabric. Great big wiggly robots, for
-people to interact with, intended for festivals and every kind of creative fun.
-
-They'll talk about what soft robots are, how the team got here, how the robots
-work, and what they plan to do with them next.
-
-They're also very interested in finding new collaborations and outlets for the
-Giants, so please bring your ideas to the Slack channel.
-
+<br/>
+<br/>
+<b><b>==== Air Giants ====</b></b>
+<br/>
+Air Giants are building a new kind of giant soft robot, huge joyful creatures<br/>
+made of little more than air, light, and fabric. Great big wiggly robots, for<br/>
+people to interact with, intended for festivals and every kind of creative fun.<br/>
+<br/>
+They'll talk about what soft robots are, how the team got here, how the robots<br/>
+work, and what they plan to do with them next.<br/>
+<br/>
+They're also very interested in finding new collaborations and outlets for the<br/>
+Giants, so please bring your ideas to the Slack channel.<br/>
+<br/>
 <a href="https://twitter.com/airgiantsHQ">@airgiantsHQ</a> / <a href="https://airgiants.co.uk">airgiants.co.uk</a>
-
-
-<b>==== Deerful ====</b>
-
-Livecoding set from Emma Winston, AKA Deerful
-
+<br/>
+<br/>
+<b><b>==== Deerful ====</b></b>
+<br/>
+Livecoding set from Emma Winston, AKA Deerful<br/>
+<br/>
 <a href="https://emmawinston.me">emmawinston.me</a> / <a href="http://deerful.band">deerful.band</a> / <a href="https://twitter.com/deer_ful">@deer_ful</a>
