--- a/_posts/2002-06-09-7.html
+++ b/_posts/2002-06-09-7.html
@@ -6,14 +6,14 @@ end:   2002-06-09 23:00
 where: xcom2002
 tags:
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong>dorkestra</strong>
-
+<br/>
 <br />This meeting was part of the Mute/NTK xcom2002 thing, so it didn&#39;t follow the normal dorkbotlondon format. Strange electrical instruments / software / abused home appliances were brought, powered up and (sort of) played. An hour or so of wonderful noise went down a treat.
 </li>
-
+<br/>
 </ul>
-
+<br/>
