--- a/_posts/2007-01-17-44.html
+++ b/_posts/2007-01-17-44.html
@@ -11,46 +11,46 @@ tags:
  - Paul Webb
  - Sampath Jagannathan
 ---
-
-
-Featuring the prompt and amiable...
+<br/>
+<br/>
+Featuring the prompt and amiable...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://www.dorkbot.org/dorkbotlondon">Alex McLean</a></strong>
-
+<br/>
 <br />30 seconds or more on the new dorkbotlondon site.
 </li>
-
+<br/>
 <li><strong>Yoshi</strong>
-
+<br/>
 <br />Introducing one of the rarest botanical specimen, &quot;Dendro Cacalia Intoxicum&quot; AKA Drunken Leaf, and more. 
 </li>
-
+<br/>
 <li><strong><a href="http://www.computer-arts-society.org/">Alan Sutcliffe</a></strong>
-
+<br/>
 <br />Recent algorithms for music and graphics
 </li>
-
+<br/>
 <li><strong><a href="http://www.dailymotion.com/group/9511/video/xufoo_les-dorkbot-punky-nerds">Arte TV</a></strong>
-
+<br/>
 <br />A screening of Arte TV&#39;s video les Dorkbots, featuring our own dorkbotlondon friends and family at Dorkcamp -- brush up on your en francais! 
 </li>
-
+<br/>
 <li><strong><a href="http://www.fexia.com/">Paul Webb</a></strong>
-
+<br/>
 <br />Two small projects that tranverse the internet as an endless psycho-geographical space.
 </li>
-
+<br/>
 <li><strong><a href="http://www.poojyum.com/p/">Sampath Jagannathan</a></strong>
-
+<br/>
 <br />p - Homebrew rule based particle model
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/37996583811@N01/361413233"><img border="0" alt="Laurence and Ian at dorkbot #44" src="/web/20130128134542im_/http://farm1.static.flickr.com/134/361413233_0aa40c0aaa_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/361413232"><img border="0" alt="Yoshi at dorkbot #44" src="/web/20130128134542im_/http://farm1.static.flickr.com/145/361413232_e84df25d0d_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/361413230"><img border="0" alt="Alan Sutcliffe at dorkbot #44" src="/web/20130128134542im_/http://farm1.static.flickr.com/157/361413230_56da67bd3b_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/361413231"><img border="0" alt="Sampath Jagannathan at dorkbot #44" src="/web/20130128134542im_/http://farm1.static.flickr.com/150/361413231_f1f5d973ca_s.jpg" /></a><br />
-
+<br/>
