--- a/_posts/2008-12-11-dorkmas-2008.html
+++ b/_posts/2008-12-11-dorkmas-2008.html
@@ -13,44 +13,44 @@ tags:
  - James Larsson
  - Tim Hunkin
 ---
-
-Featuring the lurking and sleazy...
+<br/>
+Featuring the lurking and sleazy...<br/>
 <ul>
-
+<br/>
 <li><strong>Technaughtiness</strong>
- - Daniel Hirschmann
+ - Daniel Hirschmann<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.zivanovic.co.uk/">Empathy with the Machine</a></strong>
- - Alex Zivanovic
+ - Alex Zivanovic<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.cinimodstudio.com/ufo-project">Unidentified Flying Art</a></strong>
- - Mike Harrison and Dominic Harris
+ - Mike Harrison and Dominic Harris<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.mickgrierson.co.uk/">Brain sleaze</a></strong>
- - Mick Grierson
+ - Mick Grierson<br/>
 <br />
 </li>
-
+<br/>
 <li><strong>TBA</strong>
- - James Larsson
+ - James Larsson<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.timhunkin.com/">New projects</a></strong>
- - Tim Hunkin
+ - Tim Hunkin<br/>
 <br />
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/12623032@N08/3104139795"><img border="0" alt="" src="http://farm4.static.flickr.com/3174/3104139795_57b3f64531_s.jpg" /></a><br />
