--- a/_posts/2010-05-11-69.html
+++ b/_posts/2010-05-11-69.html
@@ -11,42 +11,42 @@ tags:
  - Daniel Jones
  - James Bulley
 ---
-
-Featuring the light and airy...
+<br/>
+Featuring the light and airy...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://creativecollaboration.posterous.com/playing-the-building-with-misha-smith">Playing the building</a></strong>
- - Misha Smith
+ - Misha Smith<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://thewebisagreement.com/">The Web is Agreement</a></strong>
- - Paul Downey
+ - Paul Downey<br/>
 <br />An exploration of the art and technology behind enterprise
-software satire exemplified by a series of Über-doodles, collectively
-known as &quot;The Web is Agreement&quot;.
-
-Paul is a member of Osmosoft, a team of Open Source developers at BT.
+software satire exemplified by a series of Über-doodles, collectively<br/>
+known as &quot;The Web is Agreement&quot;.<br/>
+<br/>
+Paul is a member of Osmosoft, a team of Open Source developers at BT.<br/>
 </li>
-
+<br/>
 <li><strong><a href="http://www.swampgirl67.net/mindtouch_perf.html">MINDtouch – Mobile Social VJing / Live Cinema Performance Engagement Tool</a></strong>
- - Camille Baker
+ - Camille Baker<br/>
 <br />MINDtouch uses the mobile videophone in tandem with biosensor embedded garments as a new way to communicate non-verbally and sensually in real time, live and remotely, with participants VJing’ collaboratively, creating a visual dialogue, in more meaningful exchanges. MINDtouch involves creating a mobile telematic performance utilising a database of streamed videoclips, created by other mobile phones, then remixed and streamed back out to anyone’s phone and the internet as a live visuals performance or non-linear narrative montage.
 </li>
-
+<br/>
 <li><strong><a href="http://www.variable4.org.uk/">Variable4</a></strong>
-
+<br/>
 <br />Variable 4 is a 24-hour sound installation, taking place on the eery
-shingle plains of Dungeness, Kent. Running from noon 22 May to noon 23
-May, it uses meteorological sensors and a web of algorithmic scores to
-translate the current weather conditions into new musical forms.
+shingle plains of Dungeness, Kent. Running from noon 22 May to noon 23<br/>
+May, it uses meteorological sensors and a web of algorithmic scores to<br/>
+translate the current weather conditions into new musical forms.<br/>
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/45581782@N00/4600537459"><img border="0" alt="Musical" src="http://farm5.static.flickr.com/4059/4600537459_931ebc3267_s.jpg" /></a><a href="http://www.flickr.com/photos/40286063@N00/4600580827"><img border="0" alt="Mischa&#39;s sound architecture" src="http://farm5.static.flickr.com/4020/4600580827_af4ccb8e90_s.jpg" /></a><a href="http://www.flickr.com/photos/40286063@N00/4600559467"><img border="0" alt="Variable4 at dorkbotlondon" src="http://farm2.static.flickr.com/1389/4600559467_bc4b214475_s.jpg" /></a><br />
-
+<br/>
