--- a/_posts/2011-07-15-75.html
+++ b/_posts/2011-07-15-75.html
@@ -11,42 +11,42 @@ tags:
  - Mark Pilkington
  - Joel Gethin Lewis
 ---
-
-
-Featuring the scientific and slightly irrational...
+<br/>
+<br/>
+Featuring the scientific and slightly irrational...<br/>
 <ul>
-
+<br/>
 <li><strong><a href="http://rainycatz.wordpress.com/">e-Material Girl</a></strong>
- - Rain Ashford
+ - Rain Ashford<br/>
 <br />some examples of my adventures exploring wearable technology &amp; electronic art using microcontrollers, sensors &amp; e-textiles
 </li>
-
+<br/>
 <li><strong>Chrominoes</strong>
- - Mike Harrison
+ - Mike Harrison<br/>
 <br />
 </li>
-
+<br/>
 <li><strong><a href="http://www.mcld.co.uk/">Automatically generating dubstep</a></strong>
- - Dan Stowell
+ - Dan Stowell<br/>
 <br />From reverse-engineering the wobble bass, to using psychological
-constructs as meta-parameters for a mix
+constructs as meta-parameters for a mix<br/>
 </li>
-
+<br/>
 <li><strong><a href="http://miragemen.wordpress.com/">Flying Saucers are (almost) Real! – Dreaming the Future from 1716 to the Present</a></strong>
- - Mark Pilkington
+ - Mark Pilkington<br/>
 <br />Mark Pilkington, author of &#39;Mirage Men: A Journey in Disinformation, Paranoia and UFOs&#39;, presents a true history of human attempts to build flying saucers.
 </li>
-
+<br/>
 <li><strong><a href="http://www.coca-cola.com/music/en_US/24hrsession/html/Coke24hrs_PostEvent.html">Persuading global brands to Open Source</a></strong>
- - Joel Gethin Lewis
+ - Joel Gethin Lewis<br/>
 <br />Joel is going to talk about his experiences with Coca Cola, and persuading them to embrace Open Source in their recent 24 hour music project
 </li>
-
+<br/>
 </ul>
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 <h2>Photos</h2>
 <a href="http://www.flickr.com/photos/37996583811@N01/5940873967"><img border="0" alt="Mike takes questions at dorkbot" src="http://farm7.static.flickr.com/6025/5940873967_f0e33b4e0b_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940884421"><img border="0" alt="Heather, Loz &amp; Colin" src="http://farm7.static.flickr.com/6024/5940884421_3299b83305_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940882857"><img border="0" alt="Dave, Simon &amp; James" src="http://farm7.static.flickr.com/6146/5940882857_3beb6b5009_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5941437410"><img border="0" alt="Yay, I have some dorkbot visitors" src="http://farm7.static.flickr.com/6146/5941437410_efca73c92a_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940876783"><img border="0" alt="Andrew at dorkbot" src="http://farm7.static.flickr.com/6146/5940876783_0c11fccb5b_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940886037"><img border="0" alt="It&#39;s Dave Green!" src="http://farm7.static.flickr.com/6004/5940886037_584f8b4ddf_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940881351"><img border="0" alt="Heather" src="http://farm7.static.flickr.com/6134/5940881351_a30a76b19b_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940875611"><img border="0" alt="Joel at dorkbot" src="http://farm7.static.flickr.com/6008/5940875611_f66175eb7e_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5941413744"><img border="0" alt="Andrew asks a question at dorkbot" src="http://farm7.static.flickr.com/6146/5941413744_48b327eaed_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5941410282"><img border="0" alt="Mark Pilkington on flying saucers" src="http://farm7.static.flickr.com/6124/5941410282_01b70da200_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940856757"><img border="0" alt="dorkbot in the V&amp;A lecture theatre" src="http://farm7.static.flickr.com/6007/5940856757_122a1632d7_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5941391832"><img border="0" alt="Setting up at dorkbot" src="http://farm7.static.flickr.com/6017/5941391832_352f2afe10_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940849031"><img border="0" alt="Being introduced by Pete" src="http://farm7.static.flickr.com/6028/5940849031_fae40a5bd6_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5941390142"><img border="0" alt="Setting up at dorkbot" src="http://farm7.static.flickr.com/6140/5941390142_c1a32e2122_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5941398118"><img border="0" alt="Mike&#39;s projector at dorkbot" src="http://farm7.static.flickr.com/6146/5941398118_1e4cdacc8f_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940837955"><img border="0" alt="Setting up at dorkbot" src="http://farm7.static.flickr.com/6026/5940837955_1e8da69f17_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5941393552"><img border="0" alt="One of my slides at dorkbot" src="http://farm7.static.flickr.com/6132/5941393552_289717616e_s.jpg" /></a><a href="http://www.flickr.com/photos/37996583811@N01/5940844175"><img border="0" alt="My video at dorkbot" src="http://farm7.static.flickr.com/6145/5940844175_64e8b2ac13_s.jpg" /></a><br />
-
+<br/>
