--- a/_posts/2016-02-15-91.html
+++ b/_posts/2016-02-15-91.html
@@ -11,58 +11,61 @@ tags:
     - David Holloway
     - Evan Raskob
 ---
-
-Free entry, no registration required + limited refreshments, bring your own!
-Talks start 7.30pm, doors open from 6.45pm...
-
-Don't forget - you can also follow us on Twitter:
+<br/>
+Free entry, no registration required + limited refreshments, bring your own!<br/>
+Talks start 7.30pm, doors open from 6.45pm...<br/>
+<br/>
+Don't forget - you can also follow us on Twitter:<br/>
 <a href='https://twitter.com/DorkbotLondon'>https://twitter.com/DorkbotLondon</a> 
-See who's coming via the Facebook event:
+See who's coming via the Facebook event:<br/>
 <a href='https://www.facebook.com/events/220646841609348/'>https://www.facebook.com/events/220646841609348/</a>
-And/or add yourself to the low-volume email announcement list here:
+And/or add yourself to the low-volume email announcement list here:<br/>
 <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c</a>
-
-
-With speakers including - but not restricted to...
+<br/>
+<br/>
+With speakers including - but not restricted to...<br/>
 <!--NB THIS ISN'T THE MOST VISUALLY APPEALING LAYOUT FOR URLS BUT IT DOES MASSIVELY SIMPLIFY PASTING THE SAME TEXT INTO EMAILS/ FACEBOOK  -->
-<b>==== Kate Sicchio &amp; Camille Baker ====</b>
+<b><b>==== Kate Sicchio &amp; Camille Baker ====</b></b>
 <a href="https://twitter.com/sicchio">https://twitter.com/sicchio</a>
 <a href="https://twitter.com/swampgirl67">https://twitter.com/swampgirl67</a>
 <a href="http://www.hackingthebody.co.uk/">http://www.hackingthebody.co.uk/</a>
-
+<br/>
 <i>"Creating Flutter/Stutter and Feel Me, two new performance pieces utilising haptical feedback
-and biosensors in interactive dance"</i>
+and biosensors in interactive dance"</i><br/>
 <a href="https://www.watermans.org.uk/events/shutter-flutter-and-feel-me/">Hacking the Body</a> is the ongoing collaboration of artists Camille Baker and Kate Sicchio, 
-exploring wearable technology, biosensing and performance.
-
-
-<b>==== George Buckenham ====</b>
+exploring wearable technology, biosensing and performance.<br/>
+<br/>
+<br/>
+<b><b>==== George Buckenham ====</b></b>
 <a href="https://twitter.com/v21">https://twitter.com/v21</a>
 <a href="http://v21.io/games.html">http://v21.io/games.html</a>
-
+<br/>
 <i>"Making games that are a weird hybrid of digital and physical - 
-Punch the Custard, Tenya Wanya Teens, Jumpotron, DOOM Piano, and now Fabulous Beasts"</i>
-
-
-<b>==== Francesca Perona &amp; David Holloway ====</b>
+Punch the Custard, Tenya Wanya Teens, Jumpotron, DOOM Piano, and now Fabulous
+Beasts"</i><br/>
+<br/>
+<br/>
+<b><b>==== Francesca Perona &amp; David Holloway ====</b></b>
 <a href="https://twitter.com/FrancescaPerona">https://twitter.com/FrancescaPerona</a>
 <a href="https://twitter.com/david575757">https://twitter.com/david575757</a>
 <a href="http://www.francescaperona.com/portfolio/codecreatecorelli/">http://www.francescaperona.com/portfolio/codecreatecorelli/</a>
-
+<br/>
 <i>"How can we engage school children in coding and making?"</i>
-David and Francesca talk about working closely with local schools and getting hands-on with 
-conductive paint and papercraft electronics.
-
-
-<b>==== Evan Raskob ====</b>
+David and Francesca talk about working closely with local schools and getting
+hands-on with<br/>
+conductive paint and papercraft electronics.<br/>
+<br/>
+<br/>
+<b><b>==== Evan Raskob ====</b></b>
 <a href="https://twitter.com/evanraskob">https://twitter.com/evanraskob</a>
 <a href="http://pixelist.info">http://pixelist.info</a>
-
+<br/>
 <i>"Misadventures with 3D printing, conductive plastics as controllers, sound as sculpture"</i>
-Picking up on <a href="http://dorkbotlondon.org/86/">2014's talk about "sound spirals"</a>...
-
-
-<b>==== Open dorks/demos: ====</b>
-
-(...perhaps you?)
-
+Picking up on <a href="http://dorkbotlondon.org/86/">2014's talk about "sound
+spirals"</a>...<br/>
+<br/>
+<br/>
+<b><b>==== Open dorks/demos: ====</b></b>
+<br/>
+(...perhaps you?)<br/>
+<br/>
