--- a/_posts/2017-12-01-94.html
+++ b/_posts/2017-12-01-94.html
@@ -10,55 +10,56 @@ tags:
     - Saskia Freeke
     - Kaylene Kau
 ---
-
-Free entry, no registration required + limited refreshments, bring your own!
-Talks start 7.30pm, doors open from 6.45pm...
-
-Don't forget - you can also follow us on Twitter:
+<br/>
+Free entry, no registration required + limited refreshments, bring your own!<br/>
+Talks start 7.30pm, doors open from 6.45pm...<br/>
+<br/>
+Don't forget - you can also follow us on Twitter:<br/>
 <a href='https://twitter.com/DorkbotLondon'>https://twitter.com/DorkbotLondon</a> 
-See who's coming via the Meetup event:
+See who's coming via the Meetup event:<br/>
 <a href='https://www.meetup.com/Artists-and-Scientists-Get-Together/events/244635500/'>https://www.meetup.com/Artists-and-Scientists-Get-Together/events/244635500/</a>
-And/or add yourself to the low-volume email announcement list here:
+And/or add yourself to the low-volume email announcement list here:<br/>
 <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c</a>
-
-With short talks (each <20 min) and demos from...
+<br/>
+With short talks (each <20 min) and demos from...<br/>
 <!--NB THIS ISN'T THE MOST VISUALLY APPEALING LAYOUT FOR URLS BUT IT DOES MASSIVELY SIMPLIFY PASTING THE SAME TEXT INTO EMAILS/ FACEBOOK  -->
-<b>==== Tim Hunkin ====</b>
+<b><b>==== Tim Hunkin ====</b></b>
 <a href="http://www.timhunkin.com/">http://www.timhunkin.com/</a>
-"Celebrities, Zombies and Bedbugs" - Tim is an English engineer,
-cartoonist, writer, and artist. He created the Channel Four TV series
-and Science Museum gallery The Secret Life of Machines, explaining the
-workings and history of various household devices.
-
-<b>==== Saskia Freeke ====</b>
+"Celebrities, Zombies and Bedbugs" - Tim is an English engineer,<br/>
+cartoonist, writer, and artist. He created the Channel Four TV series<br/>
+and Science Museum gallery The Secret Life of Machines, explaining the<br/>
+workings and history of various household devices.<br/>
+<br/>
+<b><b>==== Saskia Freeke ====</b></b>
 <a href="http://www.sasj.nl/">http://www.sasj.nl/</a>
-Saskia is a lecturer in Physical Computing at Goldsmiths, an artist,
-creative coder and visual/interaction designer. She creates interactive
-playful installations that explore how we interact with technology.
-
-<b>==== James Larsson ====</b>
+Saskia is a lecturer in Physical Computing at Goldsmiths, an artist,<br/>
+creative coder and visual/interaction designer. She creates interactive<br/>
+playful installations that explore how we interact with technology.<br/>
+<br/>
+<b><b>==== James Larsson ====</b></b>
 <a href="http://jameslarsson.com/">http://jameslarsson.com/</a>
-The inventor, techno-humorist and Dorkbot London regular returns with
-more on the past and future of his &pound;200 <a href="https://www.flashinglightprize.com/">Flashing Light Prize</a>
-- plus "a moderately silly/destructive hack of old office equipment."
-
-<b>==== Kaylene Kau ====</b>
+The inventor, techno-humorist and Dorkbot London regular returns with<br/>
+more on the past and future of his &pound;200 <a
+href="https://www.flashinglightprize.com/">Flashing Light Prize</a><br/>
+- plus "a moderately silly/destructive hack of old office equipment."<br/>
+<br/>
+<b><b>==== Kaylene Kau ====</b></b>
 <a href="https://www.kaylenekau.com/">https://www.kaylenekau.com/</a>
-Animal Diplomacy Bureau's mission is to cultivate better human-animal
-relations through changing the way we think. The first project by the
-Bureau transforms people into London Birds in a series of mixed
-reality games - to understand how urban environments are also home to
-a wide variety of wildlife.
-
-<b>==== Open dorks/demos: ====</b>
-Bob Sturm
+Animal Diplomacy Bureau's mission is to cultivate better human-animal<br/>
+relations through changing the way we think. The first project by the<br/>
+Bureau transforms people into London Birds in a series of mixed<br/>
+reality games - to understand how urban environments are also home to<br/>
+a wide variety of wildlife.<br/>
+<br/>
+<b><b>==== Open dorks/demos: ====</b></b>
+Bob Sturm<br/>
 <a href="https://highnoongmt.wordpress.com/">https://highnoongmt.wordpress.com/</a>
-New Xmas carols composed with the help of a deep neural network.
-
-Holistic Howling
+New Xmas carols composed with the help of a deep neural network.<br/>
+<br/>
+Holistic Howling<br/>
 <a href="http://holistichowling.com">http://holistichowling.com</a>
-Ian Morrison reintroduces Holistic Howling, the low tech alternative to
-high tech trouble, and how it's helping geeks around the world handle
-anxiety and stress.
-
-(&amp;...perhaps you?)
+Ian Morrison reintroduces Holistic Howling, the low tech alternative to<br/>
+high tech trouble, and how it's helping geeks around the world handle<br/>
+anxiety and stress.<br/>
+<br/>
+(&amp;...perhaps you?)<br/>
