--- a/_posts/2024-04-05-99-5.html
+++ b/_posts/2024-04-05-99-5.html
@@ -8,79 +8,97 @@ tags:
     - Sarah Angliss
     - Hooman
 ---
-
+<br/>
 <h1>DORKBOT 2024: THE TENTATIVE RE-ENTRY EDITION</h1>
-
+<br/>
 <article>
     <p>
-        Well, it’s been <em>A TIME.</em> And now we are back. Welcome to Dorkbot London, come along, listen to people Doing Strange Things With Electricity. We’ve missed you.
+        Well, it’s been <em>A TIME.</em> And now we are back. Welcome to Dorkbot
+London, come along, listen to people Doing Strange Things With Electricity.
+We’ve missed you.<br/>
     </p>
     <p>
-        Free entry, no registration required. Talks start at 7.30pm, doors from 7.00pm.
+        Free entry, no registration required. Talks start at 7.30pm, doors from
+7.00pm.<br/>
     </p>
     <p>
-        Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, <strike>and <a href='https://twitter.com/DorkbotLondon'>follow us on X (Twitter)</a></strike>.
+        Don't forget to <a
+href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join
+our mailing list</a>, <strike>and <a
+href='https://twitter.com/DorkbotLondon'>follow us on X (Twitter)</a></strike>.<br/>
     </p>    
 </article>
-
+<br/>
 <section>
-
+<br/>
 <article>
-    <h3>==== Sarah Angliss ====</h3>
-
+    <h3><b>==== Sarah Angliss ====</b></h3>
+<br/>
     <p>Sarah Angliss explores the sonorities of voices and instruments, revealing and augmenting them with her distinctive and finely wrought electronic techniques. Her debut opera Giant uses eighteenth century instruments, live electronics and the composer's bespoke musical automata as it vividly recalls a disquieting story that resonates through the ages.</p>    
         <a href="https://www.instagram.com/sarah_angliss/">https://www.instagram.com/sarah_angliss/</a>
         <a href="http://www.sarahangliss.com/giant/">http://www.sarahangliss.com/giant/</a>    
     </article>
 </article>
-
+<br/>
 <article>
-    <h3>==== Hooman Samani ====</h3>
-
+    <h3><b>==== Hooman Samani ====</b></h3>
+<br/>
     <p>
-        Dr. Hooman Samani is a creative roboticist specialising in AI-Driven Social Service Robotics based in London. He has published several books on emerging fields of robotics: Creative Robotics, Robotics for Pandemics, Cognitive Robotics, and Lovotics: Loving Robots.
+        Dr. Hooman Samani is a creative roboticist specialising in AI-Driven
+Social Service Robotics based in London. He has published several books on
+emerging fields of robotics: Creative Robotics, Robotics for Pandemics,
+Cognitive Robotics, and Lovotics: Loving Robots.<br/>
     </p>
-
+<br/>
     <p>
         <a href="https://hoomansamani.com/">https://hoomansamani.com/</a>
     </p>
 </article>
-
+<br/>
 <article>
     <h3>PLUS <em>OPEN DORKS</em> (short talks or demo’s) from...</h3>
-
+<br/>
     <p><b>TBA!</b></p>
-
+<br/>
 </article>
-
+<br/>
 </section>
-
+<br/>
 <section>
-    <h3>==== Location: <a href="https://www.thesekforde.com/"> The Sekforde</a> ====</h3>
-
+    <h3><b>==== Location: <a href="https://www.thesekforde.com/"> The Sekforde</a> ====</b></h3>
+<br/>
     <p><em>
-        NB: Unfortunately Upstairs at The Sekforde is not wheelchair accessible as there are stairs up to the room.
+        NB: Unfortunately Upstairs at The Sekforde is not wheelchair accessible
+as there are stairs up to the room.<br/>
     </em></p>
-
+<br/>
     <h4>
-        == By Tube: ==
+        == By Tube: ==<br/>
     </h4>
-
+<br/>
     <p>
-        For anyone on the Elizabeth Line we recommend travelling to Farringdon and using its Barbican exit (not the Farringdon exit). It will spit you out right next to Charterhouse Square (either on Lindsey Street or Hayne Street) , both of which lead onto the Square which is lit almost entirely with gas lamps. The exact opposite of electricity!</p>
-
+        For anyone on the Elizabeth Line we recommend travelling to Farringdon
+and using its Barbican exit (not the Farringdon exit). It will spit you out
+right next to Charterhouse Square (either on Lindsey Street or Hayne Street) ,
+both of which lead onto the Square which is lit almost entirely with gas lamps.
+The exact opposite of electricity!</p><br/>
+<br/>
     <p>    
-        If you are coming to Farringdon via rail or tube you can also walk all the way through (within the station) to the Elizabeth Line exit but you may be charged more if touching in on tube/rail and touching out on Elizabeth.
+        If you are coming to Farringdon via rail or tube you can also walk all
+the way through (within the station) to the Elizabeth Line exit but you may be
+charged more if touching in on tube/rail and touching out on Elizabeth.<br/>
     </p>
-
+<br/>
     <h4>
-        == By Bus: ==
+        == By Bus: ==<br/>
     </h4>
     <p>The 153 bus runs along nearby St John Street. The nearest stops are -
-        Aylesbury Street, #54246 or Percival Street (Stop UJ), #55543 (heading towards Finsbury Park) St. John Street Clerkenwell Rd, #53751 (heading towards Liverpool Street)
+        Aylesbury Street, #54246 or Percival Street (Stop UJ), #55543 (heading
+towards Finsbury Park) St. John Street Clerkenwell Rd, #53751 (heading towards
+Liverpool Street)<br/>
     </p>
     <p>The 55 and 253 buses also serve Clerkenwell Road.</p>
-
+<br/>
     <h4>Or just use CityMapper or whatever...</h4>
-
+<br/>
 </section>
