--- a/_posts/2024-04-05-99-5.html
+++ b/_posts/2024-04-05-99-5.html
@@ -8,97 +8,96 @@ tags:
     - Sarah Angliss
     - Hooman
 ---
-<br/>
+
 <h1>DORKBOT 2024: THE TENTATIVE RE-ENTRY EDITION</h1>
-<br/>
+
 <article>
     <p>
         Well, it’s been <em>A TIME.</em> And now we are back. Welcome to Dorkbot
 London, come along, listen to people Doing Strange Things With Electricity.
-We’ve missed you.<br/>
+We’ve missed you.
     </p>
     <p>
         Free entry, no registration required. Talks start at 7.30pm, doors from
-7.00pm.<br/>
+7.00pm.
     </p>
     <p>
         Don't forget to <a
 href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join
 our mailing list</a>, <strike>and <a
-href='https://twitter.com/DorkbotLondon'>follow us on X (Twitter)</a></strike>.<br/>
+href='https://twitter.com/DorkbotLondon'>follow us on X (Twitter)</a></strike>.
     </p>    
 </article>
-<br/>
+
 <section>
-<br/>
+
 <article>
     <h3><b>==== Sarah Angliss ====</b></h3>
-<br/>
+
     <p>Sarah Angliss explores the sonorities of voices and instruments, revealing and augmenting them with her distinctive and finely wrought electronic techniques. Her debut opera Giant uses eighteenth century instruments, live electronics and the composer's bespoke musical automata as it vividly recalls a disquieting story that resonates through the ages.</p>    
         <a href="https://www.instagram.com/sarah_angliss/">https://www.instagram.com/sarah_angliss/</a>
         <a href="http://www.sarahangliss.com/giant/">http://www.sarahangliss.com/giant/</a>    
     </article>
 </article>
-<br/>
+
 <article>
     <h3><b>==== Hooman Samani ====</b></h3>
-<br/>
+
+    <h4>Talk: Lovotics = Love + Robotics</h4>
+
     <p>
-        Dr. Hooman Samani is a creative roboticist specialising in AI-Driven
-Social Service Robotics based in London. He has published several books on
-emerging fields of robotics: Creative Robotics, Robotics for Pandemics,
-Cognitive Robotics, and Lovotics: Loving Robots.<br/>
+        Hooman Samani is a creative roboticist specialising in AI-driven social service robotics. He has been investigating the relationship between humans and robots with projects like Lovotics (Love + Robotics) and Kissenger (Kiss Messenger). He is currently the course leader of Creative Robotics BSc at the UAL Creative Computing Institute.
     </p>
-<br/>
+
     <p>
-        <a href="https://hoomansamani.com/">https://hoomansamani.com/</a>
+        <a href="http://lovotics.com/">http://lovotics.com/</a>
     </p>
 </article>
-<br/>
+
 <article>
     <h3>PLUS <em>OPEN DORKS</em> (short talks or demo’s) from...</h3>
-<br/>
+
     <p><b>TBA!</b></p>
-<br/>
+
 </article>
-<br/>
+
 </section>
-<br/>
+
 <section>
     <h3><b>==== Location: <a href="https://www.thesekforde.com/"> The Sekforde</a> ====</b></h3>
-<br/>
+
     <p><em>
         NB: Unfortunately Upstairs at The Sekforde is not wheelchair accessible
-as there are stairs up to the room.<br/>
+as there are stairs up to the room.
     </em></p>
-<br/>
+
     <h4>
-        == By Tube: ==<br/>
+        == By Tube: ==
     </h4>
-<br/>
+
     <p>
         For anyone on the Elizabeth Line we recommend travelling to Farringdon
 and using its Barbican exit (not the Farringdon exit). It will spit you out
 right next to Charterhouse Square (either on Lindsey Street or Hayne Street) ,
 both of which lead onto the Square which is lit almost entirely with gas lamps.
-The exact opposite of electricity!</p><br/>
-<br/>
+The exact opposite of electricity!</p>
+
     <p>    
         If you are coming to Farringdon via rail or tube you can also walk all
 the way through (within the station) to the Elizabeth Line exit but you may be
-charged more if touching in on tube/rail and touching out on Elizabeth.<br/>
+charged more if touching in on tube/rail and touching out on Elizabeth.
     </p>
-<br/>
+
     <h4>
-        == By Bus: ==<br/>
+        == By Bus: ==
     </h4>
     <p>The 153 bus runs along nearby St John Street. The nearest stops are -
         Aylesbury Street, #54246 or Percival Street (Stop UJ), #55543 (heading
 towards Finsbury Park) St. John Street Clerkenwell Rd, #53751 (heading towards
-Liverpool Street)<br/>
+Liverpool Street)
     </p>
     <p>The 55 and 253 buses also serve Clerkenwell Road.</p>
-<br/>
+
     <h4>Or just use CityMapper or whatever...</h4>
-<br/>
+
 </section>
