--- a/_posts/2006-03-18-35.html
+++ b/_posts/2006-03-18-35.html
@@ -1,8 +1,8 @@
 ---
 layout: post
 number: 35 - dorkfest
-start: 2006
-end:   2006
+start: 2006-03-18 19:00
+end:   2006-03-18 23:00
 where: limehouse_town_hall
 tags:
  - Mike Harrison
